--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -50,6 +50,7 @@
   <string name="ApplicationPreferencesActivity_Off">مغلق</string>
   <string name="ApplicationPreferencesActivity_sms_mms_summary">رسائل MMS %1$s SMS%2$s</string>
   <string name="ApplicationPreferencesActivity_privacy_summary">إقفال الشاشة %1$s، إنهاء التسجيل %2$s</string>
+  <string name="ApplicationPreferencesActivity_privacy_summary_screen_lock">قفل الشاشة %1$s</string>
   <string name="ApplicationPreferencesActivity_appearance_summary">المظهر %1$s، اللغة %2$s</string>
   <!--AppProtectionPreferenceFragment-->
   <plurals name="AppProtectionPreferenceFragment_minutes">
@@ -72,6 +73,7 @@
   <string name="AttachmentKeyboard_file">ملف</string>
   <string name="AttachmentKeyboard_contact">جهة الاتصال</string>
   <string name="AttachmentKeyboard_location">موقع جغرافي</string>
+  <string name="AttachmentKeyboard_give_access">امنح الصلاحيات</string>
   <!--AttachmentManager-->
   <string name="AttachmentManager_cant_open_media_selection">لم يتم العثور على تطبيق لاختيار ملف.</string>
   <string name="AttachmentManager_signal_requires_the_external_storage_permission_in_order_to_attach_photos_videos_or_audio">يحتاج Signal إلى إذن الوصول إلى التخزين من أجل إرفاق الصور والفيديوهات والملفّات الصوتيّة، ولكن الإذن لم يُمنح  بشكل دائم. الّرجاء زيارة قائمة إعدادات التطبيق، واختيار \"الأذونات\"، ومن ثمّ تفعيل \"سعة التخزين\".</string>
@@ -213,6 +215,10 @@
   <string name="ConversationActivity_no_results">لا نتائج</string>
   <string name="ConversationActivity_sticker_pack_installed">تم تثبيت حزمة الملصقات</string>
   <string name="ConversationActivity_new_say_it_with_stickers">جديد! قلها بالملصقات</string>
+  <string name="ConversationActivity_block">حظر</string>
+  <string name="ConversationActivity_cancel">إلغاء</string>
+  <string name="ConversationActivity_delete_conversation">حذف المحادثه؟</string>
+  <string name="ConversationActivity_delete">حذف  </string>
   <!--ConversationAdapter-->
   <plurals name="ConversationAdapter_n_unread_messages">
     <item quantity="zero">%d رسالة غير مقروءة</item>
@@ -432,7 +438,7 @@
   <string name="GroupShareProfileView_do_you_want_to_make_your_profile_name_and_photo_visible_to_all_current_and_future_members_of_this_group">هل تُريد إظهار اسمك وصورتك الشخصية لكل الأعضاء الحاليين والمستقبليين في هذه المجموعة؟</string>
   <string name="GroupShareProfileView_make_visible">اجعلها ظاهرة</string>
   <!--GroupMembersDialog-->
-  <string name="GroupMembersDialog_me">أنا</string>
+  <string name="GroupMembersDialog_you">أنت</string>
   <!--CropImageActivity-->
   <string name="CropImageActivity_group_avatar">الصورة الرمزية للمجموعة</string>
   <string name="CropImageActivity_profile_avatar">الصورة الرمزية</string>
@@ -539,7 +545,10 @@
   <string name="MediaOverviewActivity_sent_by_s_to_s">مرسل من %1$s إلى %2$s</string>
   <string name="MediaOverviewActivity_sent_by_you_to_s">مرسل منك إلى %1$s</string>
   <!--Megaphones-->
+  <string name="Megaphones_introducing_reactions">نقدم لكم التفاعلات</string>
   <string name="Megaphones_remind_me_later">ذكرني لاحقا</string>
+  <string name="Megaphones_verify_your_signal_pin">إثبات الرقم التعريفي الشخصي ل Signal</string>
+  <string name="Megaphones_verify_pin">إثبات الرقم التعريفي الشخصي</string>
   <!--NotificationBarManager-->
   <string name="NotificationBarManager_signal_call_in_progress">مكالمة Signal جارية</string>
   <string name="NotificationBarManager__establishing_signal_call">بدء مكالمة Signal</string>
@@ -599,6 +608,22 @@
   <string name="MessageRecord_you_marked_your_safety_number_with_s_verified_from_another_device">لقد قمت بالإشعار بأنّك تحقّقت من رقم السلامة مع %s عن طريق جهاز آخر</string>
   <string name="MessageRecord_you_marked_your_safety_number_with_s_unverified">لقد قمت بالإشعار بأنّ رقم السلامة مع %s لم يتم التحقّق منه</string>
   <string name="MessageRecord_you_marked_your_safety_number_with_s_unverified_from_another_device">لقد قمت بالإشعار بأنّ رقم السلامة مع %s لم يتم التحقّق منه عن طريق جهاز آخر</string>
+  <!--MessageRequestBottomView-->
+  <string name="MessageRequestBottomView_accept">موافقة</string>
+  <string name="MessageRequestBottomView_delete">حذف  </string>
+  <string name="MessageRequestBottomView_block">حظر</string>
+  <string name="MessageRequestBottomView_unblock">رفع الحظر</string>
+  <string name="MessageRequestProfileView_member_of_one_group">عضو في %1$s</string>
+  <string name="MessageRequestProfileView_member_of_two_groups">عضو في %1$s و%2$s</string>
+  <string name="MessageRequestProfileView_member_of_many_groups">عضو في %1$s و%2$s و%3$s</string>
+  <plurals name="MessageRequestProfileView_member_of_others">
+    <item quantity="zero">%d أخرى</item>
+    <item quantity="one">%d أخرى</item>
+    <item quantity="two">%d أخريان</item>
+    <item quantity="few">%d أخرى</item>
+    <item quantity="many">%d أخرى</item>
+    <item quantity="other">%d أخرى</item>
+  </plurals>
   <!--PassphraseChangeActivity-->
   <string name="PassphraseChangeActivity_passphrases_dont_match_exclamation">العبارات السرية غير متطابقة!</string>
   <string name="PassphraseChangeActivity_incorrect_old_passphrase_exclamation">العبارة السرية القديمة غير صحيحة!</string>
@@ -648,7 +673,10 @@
   <string name="RatingManager_later">فيما بعد</string>
   <string name="RatingManager_whoops_the_play_store_app_does_not_appear_to_be_installed">عفوا، يبدو أنّ تطبيق Play Store غير مثبّت على جهازك. </string>
   <!--ReactionsBottomSheetDialogFragment-->
+  <string name="ReactionsBottomSheetDialogFragment_all">الكل %1$d</string>
   <!--ReactionsConversationView-->
+  <!--ReactionsRecipientAdapter-->
+  <string name="ReactionsRecipientAdapter_you">أنت</string>
   <!--RecipientPreferencesActivity-->
   <string name="RecipientPreferenceActivity_block_this_contact_question">حظر جهة الاتصال؟</string>
   <string name="RecipientPreferenceActivity_you_will_no_longer_receive_messages_and_calls_from_this_contact">لن تتلقى الرسائل أو المكالمات من جهة الاتصال هذه بعد الآن.</string>
@@ -745,6 +773,11 @@
   <string name="SharedContactView_invite_to_signal">الدعوة إلى Signal</string>
   <string name="SharedContactView_message">رسالة Signal</string>
   <!--SignalPinReminders-->
+  <string name="SignalPinReminders_well_remind_you_again_later">سنعيد تذكيرك لاحقاً.</string>
+  <string name="SignalPinReminders_well_remind_you_again_tomorrow">سنعيد تذكيرك غداً.</string>
+  <string name="SignalPinReminders_well_remind_you_again_in_a_few_days">سنعيد تذكيرك في بضعة أيام.</string>
+  <string name="SignalPinReminders_well_remind_you_again_in_a_week">سنعيد تذكيرك بعد أسبوع.</string>
+  <string name="SignalPinReminders_well_remind_you_again_in_a_couple_weeks">سنعيد تذكيرك بعد أسبوعين.</string>
   <!--Slide-->
   <string name="Slide_image">صورة</string>
   <string name="Slide_sticker">ملصق</string>
@@ -777,6 +810,13 @@
   <string name="StickerPackPreviewActivity_remove">إزالة</string>
   <string name="StickerPackPreviewActivity_stickers">ملصقات</string>
   <string name="StickerPackPreviewActivity_failed_to_load_sticker_pack">فشل في تحميل مجموعة الملصقات</string>
+  <!--SubmitDebugLogActivity-->
+  <string name="SubmitDebugLogActivity_edit">تحرير الاسم</string>
+  <string name="SubmitDebugLogActivity_done">تم</string>
+  <string name="SubmitDebugLogActivity_submit">تقديم</string>
+  <string name="SubmitDebugLogActivity_success">تمّ بنجاح!</string>
+  <string name="SubmitDebugLogActivity_copied_to_clipboard">تمّ النسخ إلى الحافظة</string>
+  <string name="SubmitDebugLogActivity_share">شارك</string>
   <!--ThreadRecord-->
   <string name="ThreadRecord_group_updated">تم تحديث المجموعة</string>
   <string name="ThreadRecord_left_the_group">غادر المجموعة</string>
@@ -1141,11 +1181,6 @@
   <string name="log_submit_activity__this_log_will_be_posted_online">سيتم نشر هذا السّجل علناً حتّى يتمكن المساهمون من مشاهدته. يُمكنك فحصه أو تعديله قبل تقديمه.</string>
   <string name="log_submit_activity__loading_logs">جار تحميل السّجلات…</string>
   <string name="log_submit_activity__uploading_logs">جار رفع السّجلات…</string>
-  <string name="log_submit_activity__success">تمّ بنجاح!</string>
-  <string name="log_submit_activity__copy_this_url_and_add_it_to_your_issue">انسخ هذا الرّابط  وأضفه إلى تقرير المشكلة الخاص بك أو إلى الإيميل الموجّه للدعم الفني
-
-<b>%1$s</b>\n</string>
-  <string name="log_submit_activity__copied_to_clipboard">تمّ النّسخ إلى الحافظة</string>
   <string name="log_submit_activity__choose_email_app">اختر تطبيق البريد الإلكتروني</string>
   <string name="log_submit_activity__please_review_this_log_from_my_app">الرّجاء مراجعة هذا السجلّ من تطبيقي: %1$s</string>
   <string name="log_submit_activity__network_failure">فشل في الشبكة. الرجاء المحاولة مرة أخرى.</string>
@@ -1255,6 +1290,7 @@
   <string name="AndroidManifest__invite_friends">دعوة الأصدقاء</string>
   <string name="AndroidManifest_archived_conversations">أرشيف المحادثة</string>
   <string name="AndroidManifest_remove_photo">حذف الصورة</string>
+  <!--Message Requests Megaphone-->
   <!--arrays.xml-->
   <string name="arrays__import_export">استيراد</string>
   <string name="arrays__use_default">استخدم الافتراضي</string>
@@ -1360,6 +1396,7 @@
   <string name="preferences__dark_theme">داكن</string>
   <string name="preferences__appearance">المظهر</string>
   <string name="preferences__theme">المظهر</string>
+  <string name="preferences__system_default">افتراضيات النظام</string>
   <string name="preferences__default">افتراضي</string>
   <string name="preferences__language">اللغة</string>
   <string name="preferences__signal_messages_and_calls">رسائل ومكالمات Signal</string>
@@ -1561,6 +1598,8 @@
   <string name="ConfirmKbsPinFragment__pin_creation_failed">فشل إنشاء الرقم التعريفي الشخصي</string>
   <string name="ConfirmKbsPinFragment__your_pin_was_not_saved">لم يتم حفظ الرقم التعريفي الشخصي الخاص بك. سنطلب منك إنشاء رقم تعريفي شخصي لاحقا.</string>
   <string name="ConfirmKbsPinFragment__pin_created">تم إنشاء الرقم التعريفي الشخصي.</string>
+  <string name="ConfirmKbsPinFragment__re_enter_pin">أعد إدخال الرقم التعريفي الشخصي</string>
+  <string name="ConfirmKbsPinFragment__creating_pin">جاري إنشاء الرقم التعريفي الشخصي</string>
   <!--KbsSplashFragment-->
   <string name="KbsSplashFragment__introducing_pins">نقدم لكم الأرقام التعريفية الشخصية أو PINs</string>
   <string name="KbsSplashFragment__learn_more">أعرف أكثر</string>
@@ -1589,10 +1628,17 @@
   <string name="RegistrationLockFragment__forgot_pin">هل نسيت الرقم التعريفي الشخصي؟</string>
   <string name="RegistrationLockFragment__incorrect_pin">الرقم التعريفي الشخصي غير صحيح</string>
   <string name="RegistrationLockFragment__forgot_your_pin">هل نسيت الرقم التعريفي الشخصي؟</string>
+  <string name="RegistrationLockFragment__not_many_tries_left">لم يتبق الكثير من المحاولات!</string>
   <!--KBS Megaphone-->
+  <string name="KbsMegaphone__create_a_pin">إنشاء رقم تعريفي شخصي</string>
+  <string name="KbsMegaphone__create_pin">إنشاء رقم تعريفي شخصي</string>
   <string name="KbsMegaphone__introducing_pins">نقدم لكم الأرقام التعريفية الشخصية أو PINs</string>
   <string name="KbsMegaphone__update_pin">تحديث الرقم التعريفي الشخصي</string>
   <!--Profile Names Megaphone-->
+  <string name="ProfileNamesMegaphone__add_a_profile_name">إضافة اسم للملف الشخصي</string>
+  <string name="ProfileNamesMegaphone__add_profile_name">إضافة اسم للملف الشخصي</string>
+  <string name="ProfileNamesMegaphone__confirm_your_profile_name">أكد اسم ملفك الشخصي</string>
+  <string name="ProfileNamesMegaphone__confirm_name">أكد الاسم</string>
   <!--transport_selection_list_item-->
   <string name="transport_selection_list_item__transport_icon">أيقونة النقل.</string>
   <string name="ConversationListFragment_loading">قيد التحميل…</string>
@@ -1635,6 +1681,8 @@
   <string name="BackupDialog_delete_backups_statement">حذف النسخ الإحتياطية</string>
   <string name="BackupDialog_copied_to_clipboard">تمّ النسخ إلى الحافظة</string>
   <string name="BackupDialog_verify">تحقق</string>
+  <string name="BackupDialog_you_successfully_entered_your_backup_passphrase">لقد أدخلت العبارة السرية للنسخة الاحتياطية بنجاح</string>
+  <string name="BackupDialog_passphrase_was_not_correct">العبارة السرية غير صحيحة</string>
   <string name="ChatsPreferenceFragment_signal_requires_external_storage_permission_in_order_to_create_backups">يحتاج Signal إلى إذن سعة التخزين خارجيّة لإنشاء نسخ احتياطية، ولكن تم إيقاف الإذن على نحو دائم. الرجاء زيارة إعدادات التطبيق ثم اختيار \"الأذونات\"، ثم تفعيل \"سعة التخزين\".</string>
   <string name="ChatsPreferenceFragment_last_backup_s">آخِر نسخة إحتياطية : %s</string>
   <string name="ChatsPreferenceFragment_in_progress">جارٍ</string>
@@ -1699,21 +1747,5 @@
   <string name="RegistrationLockDialog_reminder">تذكير:</string>
   <string name="recipient_preferences__about">حول</string>
   <string name="Recipient_unknown">مجهول</string>
-  <string name="MessageRequestBottomView_accept">موافقة</string>
-  <string name="MessageRequestBottomView_delete">حذف  </string>
-  <string name="MessageRequestBottomView_block">حظر</string>
-  <string name="MessageRequestBottomView_do_you_want_to_let">هل تريد استقبال رسائل من %1$s؟</string>
-  <string name="MessageRequestProfileView_member_of_one_group">عضو في %1$s</string>
-  <string name="MessageRequestProfileView_member_of_two_groups">عضو في %1$s و%2$s</string>
-  <string name="MessageRequestProfileView_member_of_many_groups">عضو في %1$s و%2$s و%3$s</string>
-  <string name="MessageRequestProfileView_members">%1$d أعضاء</string>
-  <plurals name="MessageRequestProfileView_member_of_others">
-    <item quantity="zero">%d أخرى</item>
-    <item quantity="one">%d أخرى</item>
-    <item quantity="two">%d أخريان</item>
-    <item quantity="few">%d أخرى</item>
-    <item quantity="many">%d أخرى</item>
-    <item quantity="other">%d أخرى</item>
-  </plurals>
   <!--EOF-->
 </resources>
