--- a/app/src/main/res/values-bg/strings.xml
+++ b/app/src/main/res/values-bg/strings.xml
@@ -10,6 +10,7 @@
   <string name="AbstractNotificationBuilder_new_message">Ново съобщение</string>
   <!--AlbumThumbnailView-->
   <!--ApplicationMigrationActivity-->
+  <string name="ApplicationMigrationActivity__signal_is_updating">Signal се обновява…</string>
   <!--ApplicationPreferencesActivity-->
   <string name="ApplicationPreferencesActivity_currently_s">В момента: %s</string>
   <string name="ApplicationPreferenceActivity_you_havent_set_a_passphrase_yet">Все още не сте заложили парола!</string>
@@ -41,6 +42,7 @@
   <string name="ApplicationPreferencesActivity_Off">Деактивирано</string>
   <string name="ApplicationPreferencesActivity_sms_mms_summary">SMS %1$s, MMS %2$s</string>
   <string name="ApplicationPreferencesActivity_privacy_summary">Заключване на екрана %1$s, Заключване на регистрацията%2$s</string>
+  <string name="ApplicationPreferencesActivity_privacy_summary_screen_lock">Заключване на екрана %1$s</string>
   <string name="ApplicationPreferencesActivity_appearance_summary">Тема %1$s, Език %2$s</string>
   <!--AppProtectionPreferenceFragment-->
   <plurals name="AppProtectionPreferenceFragment_minutes">
@@ -59,6 +61,8 @@
   <string name="AttachmentKeyboard_file">Файл</string>
   <string name="AttachmentKeyboard_contact">Контакт</string>
   <string name="AttachmentKeyboard_location">Местоположение</string>
+  <string name="AttachmentKeyboard_Signal_needs_permission_to_show_your_photos_and_videos">Signal се нуждае от разрешение, за да показва снимките и видеотата ти.</string>
+  <string name="AttachmentKeyboard_give_access">Разрешаване на достъпа</string>
   <!--AttachmentManager-->
   <string name="AttachmentManager_cant_open_media_selection">Неуспешно откриване на папка за избор на файл.</string>
   <string name="AttachmentManager_signal_requires_the_external_storage_permission_in_order_to_attach_photos_videos_or_audio">Signal се нуждае от достъп до вградения диск, за да може да прикачва снимки, видеота или аудио, но той му е отказан. Моля, отидете в настройки в менюто и изберете \"Разрешения\" и \"Дискове\".</string>
@@ -66,6 +70,8 @@
   <string name="AttachmentManager_signal_requires_location_information_in_order_to_attach_a_location">Signal се нуждае от достъп до местоположението Ви, за да може да го прикачва, но той му е отказан. Моля, отидете на настройки в менюто и изберете \"Разрешения\" и \"Местоположение\".</string>
   <string name="AttachmentManager_signal_requires_the_camera_permission_in_order_to_take_photos_but_it_has_been_permanently_denied">Signal се нуждае от достъп до камерта Ви, за да може да прави снимки, но той му е отказан. Моля, отидете на настройки в менюто и изберете \"Разрешения\" и \"Камера\".</string>
   <!--AttachmentUploadJob-->
+  <string name="AttachmentUploadJob_uploading_media">Качване на медия…</string>
+  <string name="AttachmentUploadJob_compressing_video_start">Компресиране на видео…</string>
   <!--AudioSlidePlayer-->
   <string name="AudioSlidePlayer_error_playing_audio">Грешка при възпроизвеждане на аудио!</string>
   <!--BlockedContactsActivity-->
@@ -76,13 +82,27 @@
   <string name="BucketedThreadMedia_This_week">Тази седмица</string>
   <string name="BucketedThreadMedia_This_month">Този месец</string>
   <string name="BucketedThreadMedia_Large">Голям</string>
+  <string name="BucketedThreadMedia_Medium">Формат</string>
   <string name="BucketedThreadMedia_Small">Малък</string>
   <!--CallScreen-->
   <string name="CallScreen_Incoming_call">Входящо обаждане</string>
   <!--CameraActivity-->
   <string name="CameraActivity_image_save_failure">Неуспешно запазване на изображението.</string>
   <!--CameraXFragment-->
+  <string name="CameraXFragment_tap_for_photo_hold_for_video">Натисни за снимка, задръж за видео</string>
+  <string name="CameraXFragment_capture_description">Запечатване</string>
+  <string name="CameraXFragment_change_camera_description">Смяна на камерата</string>
+  <string name="CameraXFragment_open_gallery_description">Отвори галерията</string>
   <!--CameraContacts-->
+  <string name="CameraContacts_recent_contacts">Последни контакти</string>
+  <string name="CameraContacts_signal_contacts">Signal контакти</string>
+  <string name="CameraContacts_signal_groups">Signal групи</string>
+  <string name="CameraContacts_you_can_share_with_a_maximum_of_n_conversations">Може да споделяте с максимум %d чата.</string>
+  <string name="CameraContacts_select_signal_recipients">Избери Signal получатели</string>
+  <string name="CameraContacts_no_signal_contacts">Няма Signal контакти</string>
+  <string name="CameraContacts_you_can_only_use_the_camera_button">Може да използваш камера бутонът за изпращане на снимки до Signal контактите.</string>
+  <string name="CameraContacts_cant_find_who_youre_looking_for">Не откирваш това, което търсиш?</string>
+  <string name="CameraContacts_invite_a_contact_to_join_signal">Покани контакт да се присъедини в Signal</string>
   <string name="CameraContacts__menu_search">Търсене</string>
   <!--ClearProfileActivity-->
   <string name="ClearProfileActivity_remove">Премахни</string>
@@ -90,6 +110,8 @@
   <!--CommunicationActions-->
   <string name="CommunicationActions_no_browser_found">Не е открит уеб браузър.</string>
   <string name="CommunicationActions_a_cellular_call_is_already_in_progress">Обаждането вече е в прогрес.</string>
+  <string name="CommunicationActions_start_video_call">Започване на видео обаждане?</string>
+  <string name="CommunicationActions_start_voice_call">Започване на гласово обаждане?</string>
   <string name="CommunicationActions_cancel">Отказ</string>
   <string name="CommunicationActions_call">Обаждане</string>
   <!--ConfirmIdentityDialog-->
@@ -100,6 +122,8 @@
   <string name="ContactsCursorLoader_recent_chats">Последни чатове</string>
   <string name="ContactsCursorLoader_contacts">Контакти</string>
   <string name="ContactsCursorLoader_groups">Групи</string>
+  <string name="ContactsCursorLoader_phone_number_search">Търсене по телефонен номер</string>
+  <string name="ContactsCursorLoader_username_search">Търсене по потребтиелско име</string>
   <!--ContactsDatabase-->
   <string name="ContactsDatabase_message_s">Съобщение %s</string>
   <string name="ContactsDatabase_signal_call_s">Signal обаждане %s</string>
@@ -169,6 +193,9 @@
   <string name="ConversationActivity_to_capture_photos_and_video_allow_signal_access_to_the_camera">За прави снимки и видеота, Signal се нуждае от достъп до камерта Ви.</string>
   <string name="ConversationActivity_signal_needs_the_camera_permission_to_take_photos_or_video">Signal се нуждае от достъп до камерта Ви, за да може да прави снимки или видеота, но той му е отказан. Моля, отидете в настройки в менюто и изберете \"Разрешения\" и \"Камера\".</string>
   <string name="ConversationActivity_signal_needs_camera_permissions_to_take_photos_or_video">Signal се нуждае от достъп до камерата, за да прави снимки и видеота</string>
+  <string name="ConversationActivity_enable_the_microphone_permission_to_capture_videos_with_sound">Разреши използването на микрофона, за да правене на видео със звук.</string>
+  <string name="ConversationActivity_signal_needs_the_recording_permissions_to_capture_video">Signal се нуждае от достъп за правене на видеота, но той е отказан. Моля, отидете в настройки и изберете \"Достъп\" и активирайте \"Микрофон\" и \"Камера\".</string>
+  <string name="ConversationActivity_signal_needs_recording_permissions_to_capture_video">Signal се нуждае от достъп до микрофона за записване на видеота.</string>
   <string name="ConversationActivity_quoted_contact_message">%1$s %2$s</string>
   <string name="ConversationActivity_signal_cannot_sent_sms_mms_messages_because_it_is_not_your_default_sms_app">Signal не може да изпраща SMS/MMS съобщения защото не е първо предназначена апликация за SMS. Желаетели да се промени това във вашите Android настройки ?</string>
   <string name="ConversationActivity_yes">Да</string>
@@ -177,6 +204,22 @@
   <string name="ConversationActivity_no_results">Няма резултати</string>
   <string name="ConversationActivity_sticker_pack_installed">Пакетът със стикери е инсталиран</string>
   <string name="ConversationActivity_new_say_it_with_stickers">Ново! Кажи го със стикери</string>
+  <string name="ConversationActivity_block_s">Блокирай %1$s?</string>
+  <string name="ConversationActivity_block_and_leave_s">Блокирай и напусни %1$s?</string>
+  <string name="ConversationActivity_unblock_s">Отблокирай %1$s?</string>
+  <string name="ConversationActivity_you_will_be_able_to_message_and_call_each_other">Ще можете да си пишете и да се обаждате един на друг.</string>
+  <string name="ConversationActivity_group_members_will_be_able_to_add_you_to_this_group_again">Членове на групата ще могат да те добавят обратно в групата.</string>
+  <string name="ConversationActivity_blocked_people_will_not_be_able_to_call_you_or_send_you_messages">Блокирани хора няма да могат да ти се обаждат или изпращат съобщения.</string>
+  <string name="ConversationActivity_you_will_leave_this_group_and_no_longer_receive_messages_or_updates">Ще напуснеш групата и повече няма да получаваш съобщения или обновления от нея.</string>
+  <string name="ConversationActivity_block">Блокиране</string>
+  <string name="ConversationActivity_block_and_delete">Блокирай и изтрий</string>
+  <string name="ConversationActivity_cancel">Отказ</string>
+  <string name="ConversationActivity_delete_conversation">Изтрий разговора?</string>
+  <string name="ConversationActivity_delete_and_leave_group">Изтриване и напускане на групата?</string>
+  <string name="ConversationActivity_this_conversation_will_be_deleted_from_all_of_your_devices">Този разговор ще бъде изтрит от всичките ти устройства.</string>
+  <string name="ConversationActivity_you_will_leave_this_group_and_it_will_be_deleted_from_all_of_your_devices">Ще напуснеш групата и тя ще бъде изтрита от всичките ти устройства.</string>
+  <string name="ConversationActivity_delete">Изтрий</string>
+  <string name="ConversationActivity_delete_and_leave">Изтрий и напусни</string>
   <!--ConversationAdapter-->
   <plurals name="ConversationAdapter_n_unread_messages">
     <item quantity="one">%d непрочетено съобщение</item>
@@ -341,7 +384,7 @@
   <string name="GroupShareProfileView_do_you_want_to_make_your_profile_name_and_photo_visible_to_all_current_and_future_members_of_this_group">Желаете ли да направите профилното си име и снимка видими за всички текущи и бъдещи членове на тази група?</string>
   <string name="GroupShareProfileView_make_visible">Направи видими</string>
   <!--GroupMembersDialog-->
-  <string name="GroupMembersDialog_me">Аз</string>
+  <string name="GroupMembersDialog_you">Ти</string>
   <!--CropImageActivity-->
   <string name="CropImageActivity_group_avatar">Аватар за групата</string>
   <string name="CropImageActivity_profile_avatar">Снимка</string>
@@ -442,6 +485,11 @@
   <string name="MessageRecord_you_marked_your_safety_number_with_s_verified_from_another_device">Отбелязахте числото си за сугорност с %s като потвърдени от друго устройство</string>
   <string name="MessageRecord_you_marked_your_safety_number_with_s_unverified">Отбелязахте числото си за сигурност с %s като непотвърдени</string>
   <string name="MessageRecord_you_marked_your_safety_number_with_s_unverified_from_another_device">Отбелязахте числот си за сугорност с %s като непотвърдени от друго устройство</string>
+  <!--MessageRequestBottomView-->
+  <string name="MessageRequestBottomView_accept">Приемам</string>
+  <string name="MessageRequestBottomView_delete">Изтрий</string>
+  <string name="MessageRequestBottomView_block">Блокиране</string>
+  <string name="MessageRequestBottomView_unblock">Отблокиране</string>
   <!--PassphraseChangeActivity-->
   <string name="PassphraseChangeActivity_passphrases_dont_match_exclamation">Паролите не съвпадат!</string>
   <string name="PassphraseChangeActivity_incorrect_old_passphrase_exclamation">Грешна стара парола!</string>
@@ -489,6 +537,8 @@
   <string name="RatingManager_whoops_the_play_store_app_does_not_appear_to_be_installed">Опа, Play Store приложението не е инсталирано на устройството Ви.</string>
   <!--ReactionsBottomSheetDialogFragment-->
   <!--ReactionsConversationView-->
+  <!--ReactionsRecipientAdapter-->
+  <string name="ReactionsRecipientAdapter_you">Ти</string>
   <!--RecipientPreferencesActivity-->
   <string name="RecipientPreferenceActivity_block_this_contact_question">Блокиране на този контакт?</string>
   <string name="RecipientPreferenceActivity_you_will_no_longer_receive_messages_and_calls_from_this_contact">Повече няма да получавате съобщения и обаждания от този контакт.</string>
@@ -604,6 +654,13 @@
   <string name="StickerPackPreviewActivity_remove">Премахни</string>
   <string name="StickerPackPreviewActivity_stickers">Стикери</string>
   <string name="StickerPackPreviewActivity_failed_to_load_sticker_pack">Пакетът със стикерите не можа да бъде зареден</string>
+  <!--SubmitDebugLogActivity-->
+  <string name="SubmitDebugLogActivity_edit">Редакция</string>
+  <string name="SubmitDebugLogActivity_done">Готово</string>
+  <string name="SubmitDebugLogActivity_submit">Изпрати</string>
+  <string name="SubmitDebugLogActivity_success">Успех!</string>
+  <string name="SubmitDebugLogActivity_copied_to_clipboard">Копирано</string>
+  <string name="SubmitDebugLogActivity_share">Споделяне</string>
   <!--ThreadRecord-->
   <string name="ThreadRecord_group_updated">Групата е обновена</string>
   <string name="ThreadRecord_left_the_group">Напусна групата</string>
@@ -898,9 +955,6 @@
   <string name="log_submit_activity__this_log_will_be_posted_online">Този лог ще бъде публичен и разработчиците ще могат да го рагледат, може да го прегледате и промените преди да го изпратите.</string>
   <string name="log_submit_activity__loading_logs">Зареждане на логовете…</string>
   <string name="log_submit_activity__uploading_logs">Изпращане на логовте…</string>
-  <string name="log_submit_activity__success">Успех!</string>
-  <string name="log_submit_activity__copy_this_url_and_add_it_to_your_issue">Копирайте този URL и го прикачете към доклата или имейлът към отдела за помощ:\n\n<b>%1$s</b>\n</string>
-  <string name="log_submit_activity__copied_to_clipboard">Копирано</string>
   <string name="log_submit_activity__choose_email_app">Изберете имейл приложение</string>
   <string name="log_submit_activity__please_review_this_log_from_my_app">Моля прегледайте логът на моето приложение: %1$s</string>
   <string name="log_submit_activity__network_failure">Грешка в мрежата. Моля, опитайте отново.</string>
@@ -1000,6 +1054,7 @@
   <string name="AndroidManifest__invite_friends">Поканване на приятели</string>
   <string name="AndroidManifest_archived_conversations">Архивирани разговори</string>
   <string name="AndroidManifest_remove_photo">Премахване на снимката</string>
+  <!--Message Requests Megaphone-->
   <!--arrays.xml-->
   <string name="arrays__import_export">Внасяне</string>
   <string name="arrays__use_default">Използване на подразбиращ се</string>
@@ -1364,8 +1419,5 @@
   <string name="RegistrationLockDialog_reminder">Напомняне:</string>
   <string name="recipient_preferences__about">Относно</string>
   <string name="Recipient_unknown">Непознат</string>
-  <string name="MessageRequestBottomView_accept">Приемам</string>
-  <string name="MessageRequestBottomView_delete">Изтрий</string>
-  <string name="MessageRequestBottomView_block">Блокиране</string>
   <!--EOF-->
 </resources>
