--- a/app/src/main/res/values-bn/strings.xml
+++ b/app/src/main/res/values-bn/strings.xml
@@ -201,6 +201,9 @@
   <string name="ConversationActivity_no_results">ফলাফল শুন্য</string>
   <string name="ConversationActivity_sticker_pack_installed">স্টিকার প্যাক ইনস্টল করা হয়েছে</string>
   <string name="ConversationActivity_new_say_it_with_stickers">নতুন! স্টিকার দিয়ে বলুন</string>
+  <string name="ConversationActivity_block">অবরূদ্ধ</string>
+  <string name="ConversationActivity_cancel">বাতিল</string>
+  <string name="ConversationActivity_delete">মুছে দিন</string>
   <!--ConversationAdapter-->
   <plurals name="ConversationAdapter_n_unread_messages">
     <item quantity="one"> %d টি অপঠিত বার্তা</item>
@@ -376,7 +379,7 @@
   <string name="GroupShareProfileView_do_you_want_to_make_your_profile_name_and_photo_visible_to_all_current_and_future_members_of_this_group">আপনি কি এই গ্রুপের বর্তমান এবং ভবিষ্যতের সকল সদস্যের কাছে নিজের প্রোফাইল নাম এবং ফটো দৃশ্যমান করতে চান?</string>
   <string name="GroupShareProfileView_make_visible">দৃশ্যমান করুন</string>
   <!--GroupMembersDialog-->
-  <string name="GroupMembersDialog_me">আমি</string>
+  <string name="GroupMembersDialog_you">আপনি</string>
   <!--CropImageActivity-->
   <string name="CropImageActivity_group_avatar">গ্রুপের ছবি</string>
   <string name="CropImageActivity_profile_avatar">প্রোফাইলের ছবি</string>
@@ -515,6 +518,18 @@
   <string name="MessageRecord_you_marked_your_safety_number_with_s_verified_from_another_device">%s এর সাথে  আপনি অন্য একটি ডিভাইস থেকে যাচাই করে আপনার নিরাপত্তা নাম্বার চিহ্নিত করেছেন</string>
   <string name="MessageRecord_you_marked_your_safety_number_with_s_unverified">আপনি %sএর নিরাপত্তা নাম্বার অযাচিত নির্বাচন করেছেন</string>
   <string name="MessageRecord_you_marked_your_safety_number_with_s_unverified_from_another_device">আপনি অন্য একটি ডিভাইস থেকে  %s এর নিরাপত্তা নাম্বার অযাচিত নির্বাচন করেছেন</string>
+  <!--MessageRequestBottomView-->
+  <string name="MessageRequestBottomView_accept">মানছি</string>
+  <string name="MessageRequestBottomView_delete">মুছে দিন</string>
+  <string name="MessageRequestBottomView_block">অবরূদ্ধ</string>
+  <string name="MessageRequestBottomView_unblock">মূক্ত করুন</string>
+  <string name="MessageRequestProfileView_member_of_one_group">%1$sএর সদস্য</string>
+  <string name="MessageRequestProfileView_member_of_two_groups">%1$s এবং %2$s এর সদস্য</string>
+  <string name="MessageRequestProfileView_member_of_many_groups">%1$s, %2$s, এবং %3$s এর সদস্য</string>
+  <plurals name="MessageRequestProfileView_member_of_others">
+    <item quantity="one">%dঅন্যান্য</item>
+    <item quantity="other">%d অন্যান্য</item>
+  </plurals>
   <!--PassphraseChangeActivity-->
   <string name="PassphraseChangeActivity_passphrases_dont_match_exclamation">পাসফ্রেজ মিলছে না!</string>
   <string name="PassphraseChangeActivity_incorrect_old_passphrase_exclamation">পুরাতন পাসফ্রেজ সঠিক নয়!</string>
@@ -565,6 +580,8 @@
   <string name="RatingManager_whoops_the_play_store_app_does_not_appear_to_be_installed">ওহো, প্লে স্টোর অ্যাপ আপনার ডিভাইস এ ইনস্টল করা আছে বলে মনে হচ্ছে না।</string>
   <!--ReactionsBottomSheetDialogFragment-->
   <!--ReactionsConversationView-->
+  <!--ReactionsRecipientAdapter-->
+  <string name="ReactionsRecipientAdapter_you">আপনি</string>
   <!--RecipientPreferencesActivity-->
   <string name="RecipientPreferenceActivity_block_this_contact_question">এই পরিচিতিটি ব্লক করবেন?</string>
   <string name="RecipientPreferenceActivity_you_will_no_longer_receive_messages_and_calls_from_this_contact">আপনি এই পরিচিতি থেকে বার্তা এবং কল সমূহ গ্রহণ করতে পারবেন না।</string>
@@ -688,6 +705,13 @@
   <string name="StickerPackPreviewActivity_remove">সরান</string>
   <string name="StickerPackPreviewActivity_stickers">স্টিকার সমূহ</string>
   <string name="StickerPackPreviewActivity_failed_to_load_sticker_pack">স্টিকার প্যাক লোড হয়নি</string>
+  <!--SubmitDebugLogActivity-->
+  <string name="SubmitDebugLogActivity_edit">সম্পাদনা</string>
+  <string name="SubmitDebugLogActivity_done">শেষ</string>
+  <string name="SubmitDebugLogActivity_submit">সাবমিট</string>
+  <string name="SubmitDebugLogActivity_success">সফল!</string>
+  <string name="SubmitDebugLogActivity_copied_to_clipboard">ক্লিপবোর্ডে অনুলিপি করা হয়েছে</string>
+  <string name="SubmitDebugLogActivity_share">শেয়ার করুন</string>
   <!--ThreadRecord-->
   <string name="ThreadRecord_group_updated">গ্রুপ অাপডেট হয়েছে</string>
   <string name="ThreadRecord_left_the_group">গ্রুপ ত্যাগ করেছে</string>
@@ -709,6 +733,7 @@
   <string name="ThreadRecord_you_marked_verified">আপনি যাচাইকৃত চিহ্নিত করেছেন</string>
   <string name="ThreadRecord_you_marked_unverified">আপনি অযাচাইকৃত চিহ্নিত করেছেন</string>
   <string name="ThreadRecord_message_could_not_be_processed">বার্তাটি প্রক্রিয়া করা যায়নি</string>
+  <string name="ThreadRecord_message_request">বার্তার অনুরোধ</string>
   <!--UpdateApkReadyListener-->
   <string name="UpdateApkReadyListener_Signal_update">Signal আপডেট</string>
   <string name="UpdateApkReadyListener_a_new_version_of_signal_is_available_tap_to_update">Signal এর একটি নতুন ভার্সন পাওয়া যাচ্ছে, অাপডেট করতে ট্যাপ করুন</string>
@@ -1024,9 +1049,6 @@
   <string name="log_submit_activity__this_log_will_be_posted_online">এই লগটি অবদানকারীদের দেখার জন্য অনলাইনে প্রকাশ্যে পোস্ট করা হবে, আপনি সাবমিট করার আগে এটি পরীক্ষা এবং সম্পাদনা করতে পারেন।</string>
   <string name="log_submit_activity__loading_logs">লগগুলি লোড হচ্ছে …</string>
   <string name="log_submit_activity__uploading_logs">লগগুলি আপলোড হচ্ছে …</string>
-  <string name="log_submit_activity__success">সফল!</string>
-  <string name="log_submit_activity__copy_this_url_and_add_it_to_your_issue">এই ইউআরএল কপি করুন এবং এটি আপনার সমস্যা প্রতিবেদন বা সাপোর্ট ইমে‌ইলে যোগ করুন:\n\n<b>%1$s</b>\n</string>
-  <string name="log_submit_activity__copied_to_clipboard">ক্লিপবোর্ডে অনুলিপি করা হয়েছে</string>
   <string name="log_submit_activity__choose_email_app">ইমেইল অ্যাপ বাছুন</string>
   <string name="log_submit_activity__please_review_this_log_from_my_app">আমার অ্যাপ থেকে এই লগ পর্যালোচনা করুন: %1$s</string>
   <string name="log_submit_activity__network_failure">নেটওয়ার্ক ব্যর্থতা। অনুগ্রহপূর্বক আবার চেষ্টা করুন।</string>
@@ -1130,6 +1152,7 @@
   <string name="AndroidManifest__invite_friends">বন্ধুদের আমন্ত্রণ</string>
   <string name="AndroidManifest_archived_conversations">আর্কাইভ করা কথোপকথন সমুহ </string>
   <string name="AndroidManifest_remove_photo">ফটো সরান</string>
+  <!--Message Requests Megaphone-->
   <!--arrays.xml-->
   <string name="arrays__import_export">আমদানী</string>
   <string name="arrays__use_default">ডিফল্ট ব্যবহার করুন</string>
@@ -1562,17 +1585,5 @@
   <string name="RegistrationLockDialog_reminder">অনুস্মারক:</string>
   <string name="recipient_preferences__about">সম্বন্ধে</string>
   <string name="Recipient_unknown">অজানা</string>
-  <string name="MessageRequestBottomView_accept">মানছি</string>
-  <string name="MessageRequestBottomView_delete">মুছে দিন</string>
-  <string name="MessageRequestBottomView_block">অবরূদ্ধ</string>
-  <string name="MessageRequestBottomView_do_you_want_to_let">আপনি কি %1$s এর নিকট থেকে বার্তা পেতে চান?</string>
-  <string name="MessageRequestProfileView_member_of_one_group">%1$sএর সদস্য</string>
-  <string name="MessageRequestProfileView_member_of_two_groups">%1$s এবং %2$s এর সদস্য</string>
-  <string name="MessageRequestProfileView_member_of_many_groups">%1$s, %2$s, এবং %3$s এর সদস্য</string>
-  <string name="MessageRequestProfileView_members">%1$d সদস্য</string>
-  <plurals name="MessageRequestProfileView_member_of_others">
-    <item quantity="one">%dঅন্যান্য</item>
-    <item quantity="other">%d অন্যান্য</item>
-  </plurals>
   <!--EOF-->
 </resources>
