--- a/app/src/main/res/values-bs/strings.xml
+++ b/app/src/main/res/values-bs/strings.xml
@@ -204,6 +204,9 @@
   <string name="ConversationActivity_no_results">Nema rezultata</string>
   <string name="ConversationActivity_sticker_pack_installed">Kolekcija naljepnica instalirana</string>
   <string name="ConversationActivity_new_say_it_with_stickers">Novo! Iskaži to naljepnicom</string>
+  <string name="ConversationActivity_block">Blokiraj</string>
+  <string name="ConversationActivity_cancel">Otkaži</string>
+  <string name="ConversationActivity_delete">Izbriši</string>
   <!--ConversationAdapter-->
   <plurals name="ConversationAdapter_n_unread_messages">
     <item quantity="one">%d nepročitana poruka</item>
@@ -388,7 +391,7 @@
   <string name="GroupShareProfileView_do_you_want_to_make_your_profile_name_and_photo_visible_to_all_current_and_future_members_of_this_group">Želite li ime i fotografiju Vašega profila učiniti dostupnim svim trenutnim i budućim članovima ove grupe?</string>
   <string name="GroupShareProfileView_make_visible">Učini vidljivim</string>
   <!--GroupMembersDialog-->
-  <string name="GroupMembersDialog_me">Ja</string>
+  <string name="GroupMembersDialog_you">Vi</string>
   <!--CropImageActivity-->
   <string name="CropImageActivity_group_avatar">Slika grupe</string>
   <string name="CropImageActivity_profile_avatar">Slika profila</string>
@@ -532,6 +535,19 @@
   <string name="MessageRecord_you_marked_your_safety_number_with_s_verified_from_another_device">Označili ste Vaš sigurnosni broj sa %s kao potvrđen sa drugog uređaja</string>
   <string name="MessageRecord_you_marked_your_safety_number_with_s_unverified">Označili ste Vaš sigurnosni broj sa %s kao nepotvrđen</string>
   <string name="MessageRecord_you_marked_your_safety_number_with_s_unverified_from_another_device">Označili ste Vaš sigurnosni broj sa %s kao nepotvrđen sa drugog uređaja</string>
+  <!--MessageRequestBottomView-->
+  <string name="MessageRequestBottomView_accept">Prihvati</string>
+  <string name="MessageRequestBottomView_delete">Izbriši</string>
+  <string name="MessageRequestBottomView_block">Blokiraj</string>
+  <string name="MessageRequestBottomView_unblock">Deblokiraj</string>
+  <string name="MessageRequestProfileView_member_of_one_group">Član grupe %1$s</string>
+  <string name="MessageRequestProfileView_member_of_two_groups">Član grupa %1$s i %2$s</string>
+  <string name="MessageRequestProfileView_member_of_many_groups">Član grupa %1$s, %2$s i %3$s</string>
+  <plurals name="MessageRequestProfileView_member_of_others">
+    <item quantity="one">%d ostali</item>
+    <item quantity="few">%d ostala</item>
+    <item quantity="other">%d ostalih</item>
+  </plurals>
   <!--PassphraseChangeActivity-->
   <string name="PassphraseChangeActivity_passphrases_dont_match_exclamation">Lozinke se ne podudaraju!</string>
   <string name="PassphraseChangeActivity_incorrect_old_passphrase_exclamation">Pogrešna stara lozinka!</string>
@@ -583,6 +599,8 @@
   <string name="RatingManager_whoops_the_play_store_app_does_not_appear_to_be_installed">Uh, izgleda da Play Store nije instaliran na Vašem uređaju.</string>
   <!--ReactionsBottomSheetDialogFragment-->
   <!--ReactionsConversationView-->
+  <!--ReactionsRecipientAdapter-->
+  <string name="ReactionsRecipientAdapter_you">Vi</string>
   <!--RecipientPreferencesActivity-->
   <string name="RecipientPreferenceActivity_block_this_contact_question">Blokirati ovu osobu?</string>
   <string name="RecipientPreferenceActivity_you_will_no_longer_receive_messages_and_calls_from_this_contact">Nećete više primati poruke i pozive od ove osobe.</string>
@@ -711,6 +729,13 @@
   <string name="StickerPackPreviewActivity_remove">Ukloni</string>
   <string name="StickerPackPreviewActivity_stickers">Naljepnice</string>
   <string name="StickerPackPreviewActivity_failed_to_load_sticker_pack">Učitavanje kolekcije naljepnica nije uspjelo</string>
+  <!--SubmitDebugLogActivity-->
+  <string name="SubmitDebugLogActivity_edit">Uredi</string>
+  <string name="SubmitDebugLogActivity_done">Uredu</string>
+  <string name="SubmitDebugLogActivity_submit">Šalji</string>
+  <string name="SubmitDebugLogActivity_success">Uspješno završeno!</string>
+  <string name="SubmitDebugLogActivity_copied_to_clipboard">Kopirano u međuspremnik</string>
+  <string name="SubmitDebugLogActivity_share">Dijeli</string>
   <!--ThreadRecord-->
   <string name="ThreadRecord_group_updated">Grupa ažurirana</string>
   <string name="ThreadRecord_left_the_group">Napustio/la grupu</string>
@@ -1040,9 +1065,6 @@
   <string name="log_submit_activity__this_log_will_be_posted_online">Ovaj izvještaj bit će objavljen javno kako bi ga drugi mogli pregledati, stoga ga prije slanja sami pregledajte i uredite.</string>
   <string name="log_submit_activity__loading_logs">Učitavam zapisnike…</string>
   <string name="log_submit_activity__uploading_logs">Prenosim zapisnike…</string>
-  <string name="log_submit_activity__success">Uspješno završeno!</string>
-  <string name="log_submit_activity__copy_this_url_and_add_it_to_your_issue">Kopirajte ovu adresu i priložite je uz Vaš izvještaj o problemu ili email za podršku:\n\n<b>%1$s</b>\n</string>
-  <string name="log_submit_activity__copied_to_clipboard">Kopirano u međuspremnik</string>
   <string name="log_submit_activity__choose_email_app">Odaberite aplikaciju za email</string>
   <string name="log_submit_activity__please_review_this_log_from_my_app">Molim pregledajte ovaj zapis iz moje aplikacije: %1$s</string>
   <string name="log_submit_activity__network_failure">Greška u mreži. Pokušajte ponovo.</string>
@@ -1145,6 +1167,7 @@
   <string name="AndroidManifest__invite_friends">Pozovite prijatelje</string>
   <string name="AndroidManifest_archived_conversations">Arhivirane konverzacije</string>
   <string name="AndroidManifest_remove_photo">Ukloni fotografiju</string>
+  <!--Message Requests Megaphone-->
   <!--arrays.xml-->
   <string name="arrays__import_export">Unesi</string>
   <string name="arrays__use_default">Koristi standardno</string>
@@ -1548,18 +1571,5 @@
   <string name="RegistrationLockDialog_reminder">Podsjetnik:</string>
   <string name="recipient_preferences__about">O kontaktu</string>
   <string name="Recipient_unknown">Nepoznato</string>
-  <string name="MessageRequestBottomView_accept">Prihvati</string>
-  <string name="MessageRequestBottomView_delete">Izbriši</string>
-  <string name="MessageRequestBottomView_block">Blokiraj</string>
-  <string name="MessageRequestBottomView_do_you_want_to_let">Želite li primati poruke od %1$s?</string>
-  <string name="MessageRequestProfileView_member_of_one_group">Član grupe %1$s</string>
-  <string name="MessageRequestProfileView_member_of_two_groups">Član grupa %1$s i %2$s</string>
-  <string name="MessageRequestProfileView_member_of_many_groups">Član grupa %1$s, %2$s i %3$s</string>
-  <string name="MessageRequestProfileView_members">%1$d članova</string>
-  <plurals name="MessageRequestProfileView_member_of_others">
-    <item quantity="one">%d ostali</item>
-    <item quantity="few">%d ostala</item>
-    <item quantity="other">%d ostalih</item>
-  </plurals>
   <!--EOF-->
 </resources>
