--- a/app/src/main/res/values-ca/strings.xml
+++ b/app/src/main/res/values-ca/strings.xml
@@ -204,6 +204,16 @@
   <string name="ConversationActivity_no_results">No hi ha cap resultat.</string>
   <string name="ConversationActivity_sticker_pack_installed">Paquet d\'adhesius instal·lat</string>
   <string name="ConversationActivity_new_say_it_with_stickers">Nou! Digueu-ho amb adhesius.</string>
+  <string name="ConversationActivity_you_will_be_able_to_message_and_call_each_other">Us podreu trucar i enviar missatges.</string>
+  <string name="ConversationActivity_group_members_will_be_able_to_add_you_to_this_group_again">Els membres del grup us podran afegir a aquest grup un altre cop.</string>
+  <string name="ConversationActivity_you_will_leave_this_group_and_no_longer_receive_messages_or_updates">Abandonareu el grup i ja no en rebreu missatges ni actualitzacions.</string>
+  <string name="ConversationActivity_block">Bloca</string>
+  <string name="ConversationActivity_cancel">Cancel·la</string>
+  <string name="ConversationActivity_delete_conversation">Voleu eliminar la conversa?</string>
+  <string name="ConversationActivity_delete_and_leave_group">Voleu suprimir i abandonar el grup?</string>
+  <string name="ConversationActivity_this_conversation_will_be_deleted_from_all_of_your_devices">Aquesta conversa se suprimirà de tots els dispositius.</string>
+  <string name="ConversationActivity_you_will_leave_this_group_and_it_will_be_deleted_from_all_of_your_devices">Abandonareu aquest grup i se suprimirà de tots els dispositius.</string>
+  <string name="ConversationActivity_delete">Suprimeix</string>
   <!--ConversationAdapter-->
   <plurals name="ConversationAdapter_n_unread_messages">
     <item quantity="one">%d missatge sense llegir</item>
@@ -249,6 +259,7 @@
   <string name="ConversationFragment_you_can_swipe_to_the_left_reply">Podeu lliscar cap a l’esquerra en qualsevol missatge per respondre ràpidament.</string>
   <string name="ConversationFragment_outgoing_view_once_media_files_are_automatically_removed">Els fitxers multimèdia d\'una sola visualització se suprimeixen automàticament un cop enviats.</string>
   <string name="ConversationFragment_you_already_viewed_this_message">Ja heu vist aquest missatge.</string>
+  <string name="ConversationFragment__you_can_add_notes_for_yourself_in_this_conversation">Podeu afegir notes per a vosaltres mateixos en aquesta conversa. Si hi ha algun dispositiu enllaçat, s\'hi sincronitzaran les notes noves.</string>
   <!--ConversationListActivity-->
   <string name="ConversationListActivity_there_is_no_browser_installed_on_your_device">No hi ha cap navegador instal·lat al dispositiu.</string>
   <!--ConversationListFragment-->
@@ -272,6 +283,7 @@
     <item quantity="one">S\'ha mogut la conversa a la safata d\'entrada</item>
     <item quantity="other">S\'han mogut %d converses a la safata d\'entrada</item>
   </plurals>
+  <string name="ConversationListFragment__your_profile_name_has_been_saved">S\'ha desat el nom de perfil.</string>
   <!--ConversationListItem-->
   <string name="ConversationListItem_key_exchange_message">Missatge d\'intercanvi de clau</string>
   <!--ConversationListItemAction-->
@@ -380,7 +392,7 @@
   <string name="GroupShareProfileView_do_you_want_to_make_your_profile_name_and_photo_visible_to_all_current_and_future_members_of_this_group">Voleu que el nom i la foto del perfil siguin visibles a tots els membres actuals i futurs d\'aquest grup?</string>
   <string name="GroupShareProfileView_make_visible">Fes-ho visible</string>
   <!--GroupMembersDialog-->
-  <string name="GroupMembersDialog_me">Jo</string>
+  <string name="GroupMembersDialog_you">Vós</string>
   <!--CropImageActivity-->
   <string name="CropImageActivity_group_avatar">Avatar del grup</string>
   <string name="CropImageActivity_profile_avatar">Avatar</string>
@@ -524,6 +536,18 @@
   <string name="MessageRecord_you_marked_your_safety_number_with_s_verified_from_another_device">Heu verificat el número de seguretat amb %s des d\'un altre dispositiu</string>
   <string name="MessageRecord_you_marked_your_safety_number_with_s_unverified">Heu tret la verificació del número de seguretat amb %s</string>
   <string name="MessageRecord_you_marked_your_safety_number_with_s_unverified_from_another_device">Heu tret la verificació del número de seguretat amb %s des d\'un altre dispositiu</string>
+  <!--MessageRequestBottomView-->
+  <string name="MessageRequestBottomView_accept">Ho accepto</string>
+  <string name="MessageRequestBottomView_delete">Suprimeix</string>
+  <string name="MessageRequestBottomView_block">Bloca</string>
+  <string name="MessageRequestBottomView_unblock">Desbloca</string>
+  <string name="MessageRequestProfileView_member_of_one_group">Membre de %1$s</string>
+  <string name="MessageRequestProfileView_member_of_two_groups">Membre de %1$s i %2$s</string>
+  <string name="MessageRequestProfileView_member_of_many_groups">Membre de %1$s, %2$s i %3$s</string>
+  <plurals name="MessageRequestProfileView_member_of_others">
+    <item quantity="one">%d més</item>
+    <item quantity="other">%d més</item>
+  </plurals>
   <!--PassphraseChangeActivity-->
   <string name="PassphraseChangeActivity_passphrases_dont_match_exclamation">Les contrasenyes no coincideixen!</string>
   <string name="PassphraseChangeActivity_incorrect_old_passphrase_exclamation">Contrasenya antiga incorrecta.</string>
@@ -576,6 +600,8 @@
   <string name="ReactionsBottomSheetDialogFragment_all">Tot %1$d</string>
   <!--ReactionsConversationView-->
   <string name="ReactionsConversationView_plus">+%1$d</string>
+  <!--ReactionsRecipientAdapter-->
+  <string name="ReactionsRecipientAdapter_you">Vós</string>
   <!--RecipientPreferencesActivity-->
   <string name="RecipientPreferenceActivity_block_this_contact_question">Voleu blocar aquest contacte?</string>
   <string name="RecipientPreferenceActivity_you_will_no_longer_receive_messages_and_calls_from_this_contact">No rebreu missatges ni trucades d\'aquest contacte.</string>
@@ -704,6 +730,14 @@ S\'ha rebut un missatge d\'intercanvi de claus per a una versió del protocol no
   <string name="StickerPackPreviewActivity_remove">Suprimeix</string>
   <string name="StickerPackPreviewActivity_stickers">Adhesius</string>
   <string name="StickerPackPreviewActivity_failed_to_load_sticker_pack">Ha fallat carregar el paquet d\'adhesius.</string>
+  <!--SubmitDebugLogActivity-->
+  <string name="SubmitDebugLogActivity_edit">Edita</string>
+  <string name="SubmitDebugLogActivity_done">Fet</string>
+  <string name="SubmitDebugLogActivity_submit">Envia</string>
+  <string name="SubmitDebugLogActivity_success">Acabat!</string>
+  <string name="SubmitDebugLogActivity_copied_to_clipboard">Copiat al porta-retalls</string>
+  <string name="SubmitDebugLogActivity_ok">D\'acord</string>
+  <string name="SubmitDebugLogActivity_share">Comparteix</string>
   <!--ThreadRecord-->
   <string name="ThreadRecord_group_updated">S\'ha actualitzat el grup</string>
   <string name="ThreadRecord_left_the_group">Ha abandonat el grup</string>
@@ -725,6 +759,7 @@ S\'ha rebut un missatge d\'intercanvi de claus per a una versió del protocol no
   <string name="ThreadRecord_you_marked_verified">Heu verificat</string>
   <string name="ThreadRecord_you_marked_unverified">Heu tret la verificació</string>
   <string name="ThreadRecord_message_could_not_be_processed">No s\'ha pogut processar el missatge.</string>
+  <string name="ThreadRecord_message_request">Petició de missatge</string>
   <!--UpdateApkReadyListener-->
   <string name="UpdateApkReadyListener_Signal_update">Actualització del Signal</string>
   <string name="UpdateApkReadyListener_a_new_version_of_signal_is_available_tap_to_update">Hi ha disponible una versió nova del Signal. Toqueu per actualitzar-lo</string>
@@ -1040,9 +1075,6 @@ S\'ha rebut un missatge d\'intercanvi de claus per a una versió del protocol no
   <string name="log_submit_activity__this_log_will_be_posted_online">Aquest registre es penjarà públicament perquè el vegin els col·laboradors. Podeu examinar-lo i editar-lo abans d\'enviar-lo.</string>
   <string name="log_submit_activity__loading_logs">Es carreguen els registres…</string>
   <string name="log_submit_activity__uploading_logs">Es pengen els registres…</string>
-  <string name="log_submit_activity__success">Correcte!</string>
-  <string name="log_submit_activity__copy_this_url_and_add_it_to_your_issue">Copieu aquest URL i afegiu-lo a l\'informe d\'error o al correu electrònic de suport:\n\n<b>%1$s</b>\n</string>
-  <string name="log_submit_activity__copied_to_clipboard">Copiat al porta-retalls</string>
   <string name="log_submit_activity__choose_email_app">Trieu una aplicació de correu.</string>
   <string name="log_submit_activity__please_review_this_log_from_my_app">Si us plau, reviseu aquest registre de l\'aplicació: %1$s</string>
   <string name="log_submit_activity__network_failure">Ha fallat la xarxa. Torneu-ho a provar.</string>
@@ -1146,6 +1178,7 @@ S\'ha rebut un missatge d\'intercanvi de claus per a una versió del protocol no
   <string name="AndroidManifest__invite_friends">Convideu-hi amistats</string>
   <string name="AndroidManifest_archived_conversations">Converses arxivades</string>
   <string name="AndroidManifest_remove_photo">Suprimeix la foto</string>
+  <!--Message Requests Megaphone-->
   <!--arrays.xml-->
   <string name="arrays__import_export">Importa</string>
   <string name="arrays__use_default">Per defecte</string>
@@ -1245,9 +1278,9 @@ S\'ha rebut un missatge d\'intercanvi de claus per a una versió del protocol no
   <string name="preferences__linked_devices">Dispositius enllaçats</string>
   <string name="preferences__light_theme">Clar</string>
   <string name="preferences__dark_theme">Fosc</string>
-  <string name="preferences__system_theme">Per defecte del sistema</string>
   <string name="preferences__appearance">Aparença</string>
   <string name="preferences__theme">Tema</string>
+  <string name="preferences__system_default">Per defecte del sistema</string>
   <string name="preferences__default">Per defecte</string>
   <string name="preferences__language">Llengua</string>
   <string name="preferences__signal_messages_and_calls">Missatges i trucades del Signal</string>
@@ -1639,17 +1672,5 @@ S\'ha rebut un missatge d\'intercanvi de claus per a una versió del protocol no
   <string name="RegistrationLockDialog_reminder">Recordatori:</string>
   <string name="recipient_preferences__about">Quant a</string>
   <string name="Recipient_unknown">Desconegut</string>
-  <string name="MessageRequestBottomView_accept">Ho accepto</string>
-  <string name="MessageRequestBottomView_delete">Suprimeix</string>
-  <string name="MessageRequestBottomView_block">Bloca</string>
-  <string name="MessageRequestBottomView_do_you_want_to_let">Voleu rebre missatges de %1$s?</string>
-  <string name="MessageRequestProfileView_member_of_one_group">Membre de %1$s</string>
-  <string name="MessageRequestProfileView_member_of_two_groups">Membre de %1$s i %2$s</string>
-  <string name="MessageRequestProfileView_member_of_many_groups">Membre de %1$s, %2$s i %3$s</string>
-  <string name="MessageRequestProfileView_members">%1$d membres</string>
-  <plurals name="MessageRequestProfileView_member_of_others">
-    <item quantity="one">%d més</item>
-    <item quantity="other">%d més</item>
-  </plurals>
   <!--EOF-->
 </resources>
