--- a/app/src/main/res/values-da/strings.xml
+++ b/app/src/main/res/values-da/strings.xml
@@ -205,6 +205,22 @@
   <string name="ConversationActivity_no_results">Ingen resultater</string>
   <string name="ConversationActivity_sticker_pack_installed">Pakke med klistermærker installeret</string>
   <string name="ConversationActivity_new_say_it_with_stickers">Nyt! Udtryk dig med klistermærker</string>
+  <string name="ConversationActivity_block_s">Blokér %1$s?</string>
+  <string name="ConversationActivity_block_and_leave_s">Blokér og forlad%1$s?</string>
+  <string name="ConversationActivity_unblock_s">Fjern blokering af %1$s?</string>
+  <string name="ConversationActivity_you_will_be_able_to_message_and_call_each_other">I vil være i stand til at sende beskeder og ringe til hinanden</string>
+  <string name="ConversationActivity_group_members_will_be_able_to_add_you_to_this_group_again">Medlemmer af gruppen kan tilføje dig til gruppen igen</string>
+  <string name="ConversationActivity_blocked_people_will_not_be_able_to_call_you_or_send_you_messages">Blokerede personer vil ikke være i stand til at sende dig beskeder, eller at ringe til dig</string>
+  <string name="ConversationActivity_you_will_leave_this_group_and_no_longer_receive_messages_or_updates">Du forlader gruppen og vil ikke længere modtage beskeder eller opdateringer</string>
+  <string name="ConversationActivity_block">Blokér</string>
+  <string name="ConversationActivity_block_and_delete">Blokér og slet</string>
+  <string name="ConversationActivity_cancel">Annuller</string>
+  <string name="ConversationActivity_delete_conversation">Slet samtale?</string>
+  <string name="ConversationActivity_delete_and_leave_group">Slet og forlad gruppe?</string>
+  <string name="ConversationActivity_this_conversation_will_be_deleted_from_all_of_your_devices">Samtalen vil blive slettet fra alle dine enheder</string>
+  <string name="ConversationActivity_you_will_leave_this_group_and_it_will_be_deleted_from_all_of_your_devices">Du forlader gruppen og den vil blive slettet fra alle dine enheder</string>
+  <string name="ConversationActivity_delete">Slet</string>
+  <string name="ConversationActivity_delete_and_leave">Slet og forlad</string>
   <!--ConversationAdapter-->
   <plurals name="ConversationAdapter_n_unread_messages">
     <item quantity="one">%d ulæst besked</item>
@@ -250,6 +266,7 @@
   <string name="ConversationFragment_you_can_swipe_to_the_left_reply">Du kan swipe til venstre på enhver besked, for at svare hurtigt</string>
   <string name="ConversationFragment_outgoing_view_once_media_files_are_automatically_removed">Udgående mediebeskeder der kun vises én gang, bliver automatisk fjernet efter de er sendt</string>
   <string name="ConversationFragment_you_already_viewed_this_message">Beskeden er allerede læst</string>
+  <string name="ConversationFragment__you_can_add_notes_for_yourself_in_this_conversation">Du kan tilføje egne notater i samtalen. Hvis din konto har forbundne enheder, vil notaterne blive synkroniseret</string>
   <!--ConversationListActivity-->
   <string name="ConversationListActivity_there_is_no_browser_installed_on_your_device">Ingen browser installeret på enheden</string>
   <!--ConversationListFragment-->
@@ -273,6 +290,8 @@
     <item quantity="one">Samtale flyttet til inbox</item>
     <item quantity="other">Flyttet %d samtaler til indbakke</item>
   </plurals>
+  <string name="ConversationListFragment__your_profile_name_has_been_created">Dit profilnavn er oprettet</string>
+  <string name="ConversationListFragment__your_profile_name_has_been_saved">Dit profilnavn er blevet gemt</string>
   <!--ConversationListItem-->
   <string name="ConversationListItem_key_exchange_message">Besked med udvekslingsnøgle</string>
   <!--ConversationListItemAction-->
@@ -321,6 +340,7 @@
   <string name="DozeReminder_this_device_does_not_support_play_services_tap_to_disable_system_battery">Enheden understøtter ikke Play Services. Tap for at slå batterioptimering fra, som forhindrer Signal i at modtage beskeder i baggrunden</string>
   <!--ShareActivity-->
   <string name="ShareActivity_share_with">Del med</string>
+  <string name="ShareActivity_multiple_attachments_are_only_supported">Det er kun muligt at vedhæfte flere billeder og videoer</string>
   <!--ExperienceUpgradeActivity-->
   <string name="ExperienceUpgradeActivity_welcome_to_signal_dgaf">Velkommen til Signal</string>
   <string name="ExperienceUpgradeActivity_textsecure_is_now_called_signal">TextSecure og RedPhone er nu én privat messenger, til enhver lejlighed: Signal</string>
@@ -380,7 +400,7 @@
   <string name="GroupShareProfileView_do_you_want_to_make_your_profile_name_and_photo_visible_to_all_current_and_future_members_of_this_group">Vil du gøre dit profilnavn og profilbillede synligt, for alle nuværende og fremtidige medlemmer af gruppen?</string>
   <string name="GroupShareProfileView_make_visible">Gør synlig</string>
   <!--GroupMembersDialog-->
-  <string name="GroupMembersDialog_me">Mig</string>
+  <string name="GroupMembersDialog_you">Dig</string>
   <!--CropImageActivity-->
   <string name="CropImageActivity_group_avatar">Gruppe ikon</string>
   <string name="CropImageActivity_profile_avatar">Profilbillede</string>
@@ -524,6 +544,22 @@
   <string name="MessageRecord_you_marked_your_safety_number_with_s_verified_from_another_device">Du har markeret dit sikkerhedsnummer med %s som verificeret fra en anden enhed</string>
   <string name="MessageRecord_you_marked_your_safety_number_with_s_unverified">Du har markeret dit sikkerhedsnummer med %s som ubekræftet</string>
   <string name="MessageRecord_you_marked_your_safety_number_with_s_unverified_from_another_device">Du har markeret dit sikkerhedsnummer med %s som ubekræftet fra en anden enhed</string>
+  <!--MessageRequestBottomView-->
+  <string name="MessageRequestBottomView_accept">Godkend</string>
+  <string name="MessageRequestBottomView_delete">Slet</string>
+  <string name="MessageRequestBottomView_block">Blokér</string>
+  <string name="MessageRequestBottomView_unblock">Ophæv blokade</string>
+  <string name="MessageRequestBottomView_do_you_want_to_let_s_message_you_they_wont_know_youve_seen_their_messages_until_you_accept">Vil du tillade at %1$s skriver til dig? De vil ikke vide du har læst deres beskeder, før du accepterer</string>
+  <string name="MessageRequestBottomView_do_you_want_to_join_the_group_s_they_wont_know_youve_seen_their_messages_until_you_accept">Vil du deltage i gruppen%1$s? De vil ikke vide du har læst deres beskeder, før du accepterer</string>
+  <string name="MessageRequestBottomView_unblock_s_to_message_and_call_each_other">Fjern blokering af %1$s for at kunne skrive og ringe til hinanden</string>
+  <string name="MessageRequestBottomView_unblock_to_allow_group_members_to_add_you_to_this_group_again">Fjern blokering for at tillade medlemmer af gruppen at tilføje dig til gruppen igen</string>
+  <string name="MessageRequestProfileView_member_of_one_group">Medlem af %1$s</string>
+  <string name="MessageRequestProfileView_member_of_two_groups">Medlem af%1$s og %2$s</string>
+  <string name="MessageRequestProfileView_member_of_many_groups">Medlem af %1$s, %2$s og %3$s</string>
+  <plurals name="MessageRequestProfileView_member_of_others">
+    <item quantity="one">%d andre</item>
+    <item quantity="other">%d andre</item>
+  </plurals>
   <!--PassphraseChangeActivity-->
   <string name="PassphraseChangeActivity_passphrases_dont_match_exclamation">Kodeord matcher ikke!</string>
   <string name="PassphraseChangeActivity_incorrect_old_passphrase_exclamation">Gammelt ugyldigt kodeord!</string>
@@ -577,6 +613,8 @@
   <string name="ReactionsBottomSheetDialogFragment_all">Alle %1$d</string>
   <!--ReactionsConversationView-->
   <string name="ReactionsConversationView_plus">+%1$d</string>
+  <!--ReactionsRecipientAdapter-->
+  <string name="ReactionsRecipientAdapter_you">Dig</string>
   <!--RecipientPreferencesActivity-->
   <string name="RecipientPreferenceActivity_block_this_contact_question">Blokér kontakten?</string>
   <string name="RecipientPreferenceActivity_you_will_no_longer_receive_messages_and_calls_from_this_contact">Du vil ikke længere modtage beskeder eller opkald fra kontakten</string>
@@ -709,6 +747,17 @@ Modtog en nøgle besked, for en ugyldig protokol-version.
   <string name="StickerPackPreviewActivity_remove">Fjern</string>
   <string name="StickerPackPreviewActivity_stickers">Klistermærker</string>
   <string name="StickerPackPreviewActivity_failed_to_load_sticker_pack">Fejl ved hentning af klistermærker</string>
+  <!--SubmitDebugLogActivity-->
+  <string name="SubmitDebugLogActivity_edit">Rediger</string>
+  <string name="SubmitDebugLogActivity_done">Udført</string>
+  <string name="SubmitDebugLogActivity_tap_a_line_to_delete_it">Tap på en linje for at slette den</string>
+  <string name="SubmitDebugLogActivity_submit">Send</string>
+  <string name="SubmitDebugLogActivity_failed_to_submit_logs">Fejl ved indsendelse af logs</string>
+  <string name="SubmitDebugLogActivity_success">Fuldført!</string>
+  <string name="SubmitDebugLogActivity_copy_this_url_and_add_it_to_your_issue">Kopier denne URL og tilføj den til din fejlrapport, eller til support email:\n\n<b>%1$s</b></string>
+  <string name="SubmitDebugLogActivity_copied_to_clipboard">Kopieret til udklipsholder</string>
+  <string name="SubmitDebugLogActivity_ok">Ok</string>
+  <string name="SubmitDebugLogActivity_share">Del</string>
   <!--ThreadRecord-->
   <string name="ThreadRecord_group_updated">Gruppe opdateret</string>
   <string name="ThreadRecord_left_the_group">Har forladt gruppen</string>
@@ -730,6 +779,8 @@ Modtog en nøgle besked, for en ugyldig protokol-version.
   <string name="ThreadRecord_you_marked_verified">Markerét som verificeret</string>
   <string name="ThreadRecord_you_marked_unverified">Markerét som ubekræftet</string>
   <string name="ThreadRecord_message_could_not_be_processed">Besked kunne ikke håndteres</string>
+  <string name="ThreadRecord_message_request">Besked forespørgsel</string>
+  <string name="ThreadRecord_s_added_you_to_the_group">%1$s tilføjede dig til gruppen</string>
   <!--UpdateApkReadyListener-->
   <string name="UpdateApkReadyListener_Signal_update">Signal opdatering</string>
   <string name="UpdateApkReadyListener_a_new_version_of_signal_is_available_tap_to_update">En ny version af Signal er tilgængelig, tap for at opdatere</string>
@@ -1045,9 +1096,6 @@ Modtog en nøgle besked, for en ugyldig protokol-version.
   <string name="log_submit_activity__this_log_will_be_posted_online">Loggen vil blive vist offentligt online for andre der bidrager. Du kan validere og redigere den inden du deler den</string>
   <string name="log_submit_activity__loading_logs">Henter logs…</string>
   <string name="log_submit_activity__uploading_logs">Sender logs…</string>
-  <string name="log_submit_activity__success">Fuldført!</string>
-  <string name="log_submit_activity__copy_this_url_and_add_it_to_your_issue">Kopier denne URL og tilføj den til din fejlrapport, eller email:\n\n<b>%1$s</b>\n</string>
-  <string name="log_submit_activity__copied_to_clipboard">Kopieret til udklipsholder</string>
   <string name="log_submit_activity__choose_email_app">Vælg email applikation</string>
   <string name="log_submit_activity__please_review_this_log_from_my_app">Gennemlæs venligst loggen her fra min app: %1$s</string>
   <string name="log_submit_activity__network_failure">Netværksfejl. Prøv venligst igen</string>
@@ -1151,6 +1199,13 @@ Modtog en nøgle besked, for en ugyldig protokol-version.
   <string name="AndroidManifest__invite_friends">Invitér venner</string>
   <string name="AndroidManifest_archived_conversations">Arkiverede samtaler</string>
   <string name="AndroidManifest_remove_photo">Fjern billede</string>
+  <!--Message Requests Megaphone-->
+  <string name="MessageRequestsMegaphone__message_requests">Besked forespørgsler</string>
+  <string name="MessageRequestsMegaphone__users_can_now_choose_to_accept">Brugere kan nu vælge om de vil acceptere en ny samtale. Profilnavne lader dig vide hvem der skriver</string>
+  <string name="MessageRequestsMegaphone__add_profile_name">Tilføj profilnavn</string>
+  <string name="MessageRequestsMegaphone__new_message_requests">Nyt: Besked forespørgelser</string>
+  <string name="MessageRequestsMegaphone__add_name">Tilføj navn</string>
+  <string name="MessageRequestsMegaphone__you_can_now_choose_whether_to_accept">Du kan nu vælge om du vil acceptere en ny samtale. Du vil blive vist mulighed for at \"Accepter\". \"Slet\" eller \"Blokér\"</string>
   <!--arrays.xml-->
   <string name="arrays__import_export">Importér</string>
   <string name="arrays__use_default">Brug standard</string>
@@ -1250,9 +1305,9 @@ Modtog en nøgle besked, for en ugyldig protokol-version.
   <string name="preferences__linked_devices">Forbundne enheder</string>
   <string name="preferences__light_theme">Lyst</string>
   <string name="preferences__dark_theme">Mørkt</string>
-  <string name="preferences__system_theme">System standard</string>
   <string name="preferences__appearance">Udseende</string>
   <string name="preferences__theme">Tema</string>
+  <string name="preferences__system_default">System standard</string>
   <string name="preferences__default">Standard</string>
   <string name="preferences__language">Sprog</string>
   <string name="preferences__signal_messages_and_calls">Signalbeskeder og -opkald</string>
@@ -1613,17 +1668,5 @@ Der er %d dage tilbage</string>
   <string name="RegistrationLockDialog_reminder">Påmindelse:</string>
   <string name="recipient_preferences__about">Om</string>
   <string name="Recipient_unknown">Ukendt</string>
-  <string name="MessageRequestBottomView_accept">Godkend</string>
-  <string name="MessageRequestBottomView_delete">Slet</string>
-  <string name="MessageRequestBottomView_block">Blokér</string>
-  <string name="MessageRequestBottomView_do_you_want_to_let">Vil du modtage beskeder fra %1$s?</string>
-  <string name="MessageRequestProfileView_member_of_one_group">Medlem af %1$s</string>
-  <string name="MessageRequestProfileView_member_of_two_groups">Medlem af%1$s og %2$s</string>
-  <string name="MessageRequestProfileView_member_of_many_groups">Medlem af %1$s, %2$s og %3$s</string>
-  <string name="MessageRequestProfileView_members">%1$d medlemmer</string>
-  <plurals name="MessageRequestProfileView_member_of_others">
-    <item quantity="one">%d andre</item>
-    <item quantity="other">%d andre</item>
-  </plurals>
   <!--EOF-->
 </resources>
