--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -204,6 +204,22 @@
   <string name="ConversationActivity_no_results">Sin resultados</string>
   <string name="ConversationActivity_sticker_pack_installed">Paquete de cromos instalado</string>
   <string name="ConversationActivity_new_say_it_with_stickers">¡Novedad!: Dilo con cromos (stickers)</string>
+  <string name="ConversationActivity_block_s">¿Bloquear a %1$s?</string>
+  <string name="ConversationActivity_block_and_leave_s">¿Bloquear y abandonar «%1$s»?</string>
+  <string name="ConversationActivity_unblock_s">¿Desbloquear %1$s?</string>
+  <string name="ConversationActivity_you_will_be_able_to_message_and_call_each_other">Podréis chatear y llamaros mutuamente.</string>
+  <string name="ConversationActivity_group_members_will_be_able_to_add_you_to_this_group_again">Los participantes podrán añadirte de nuevo a este grupo.</string>
+  <string name="ConversationActivity_blocked_people_will_not_be_able_to_call_you_or_send_you_messages">Los usuarios bloqueados no podrán llamarte o enviarte mensajes.</string>
+  <string name="ConversationActivity_you_will_leave_this_group_and_no_longer_receive_messages_or_updates">Abandonarás este grupo y ya no recibirás más mensajes o actualizaciones.</string>
+  <string name="ConversationActivity_block">Bloquear</string>
+  <string name="ConversationActivity_block_and_delete">Bloquear y eliminar</string>
+  <string name="ConversationActivity_cancel">Cancelar</string>
+  <string name="ConversationActivity_delete_conversation">¿Eliminar la conversación?</string>
+  <string name="ConversationActivity_delete_and_leave_group">¿Eliminar y abandonar grupo?</string>
+  <string name="ConversationActivity_this_conversation_will_be_deleted_from_all_of_your_devices">Este chat se eliminará de todos tus dispositivos.</string>
+  <string name="ConversationActivity_you_will_leave_this_group_and_it_will_be_deleted_from_all_of_your_devices">Abandonarás este grupo, que se eliminará de todos tus dispositivos.</string>
+  <string name="ConversationActivity_delete">Eliminar</string>
+  <string name="ConversationActivity_delete_and_leave">Eliminar y abandonar</string>
   <!--ConversationAdapter-->
   <plurals name="ConversationAdapter_n_unread_messages">
     <item quantity="one">%d mensaje no leído</item>
@@ -249,6 +265,7 @@
   <string name="ConversationFragment_you_can_swipe_to_the_left_reply">Puedes deslizar hacia la izquierda sobre cualquier mensaje para responder rápidamente</string>
   <string name="ConversationFragment_outgoing_view_once_media_files_are_automatically_removed">Los medios que envías para ver solo una vez se eliminan automáticamente tras enviar.</string>
   <string name="ConversationFragment_you_already_viewed_this_message">Ya has visto este mensaje</string>
+  <string name="ConversationFragment__you_can_add_notes_for_yourself_in_this_conversation">En este chat puedes añadir notas, mensajes personales, contraseñas …. Si tu cuenta tiene dispositivos enlazados, las notas se sincronizarán.</string>
   <!--ConversationListActivity-->
   <string name="ConversationListActivity_there_is_no_browser_installed_on_your_device">No hay ningún navegador instalado</string>
   <!--ConversationListFragment-->
@@ -272,6 +289,8 @@
     <item quantity="one">Chat devuelto al buzón de entrada</item>
     <item quantity="other">%d chats devueltos al buzón de entrada</item>
   </plurals>
+  <string name="ConversationListFragment__your_profile_name_has_been_created">Tu nombre de perfil se ha creado.</string>
+  <string name="ConversationListFragment__your_profile_name_has_been_saved">El nombre se ha guardado en tu perfil.</string>
   <!--ConversationListItem-->
   <string name="ConversationListItem_key_exchange_message">Mensaje de intercambio de claves</string>
   <!--ConversationListItemAction-->
@@ -380,7 +399,7 @@
   <string name="GroupShareProfileView_do_you_want_to_make_your_profile_name_and_photo_visible_to_all_current_and_future_members_of_this_group">¿Deseas hacer visible tu nombre y foto de perfil a todos los participantes presentes y futuros de este grupo?</string>
   <string name="GroupShareProfileView_make_visible">Hacer visible</string>
   <!--GroupMembersDialog-->
-  <string name="GroupMembersDialog_me">Yo</string>
+  <string name="GroupMembersDialog_you">Tú</string>
   <!--CropImageActivity-->
   <string name="CropImageActivity_group_avatar">Avatar del grupo</string>
   <string name="CropImageActivity_profile_avatar">Foto</string>
@@ -524,6 +543,26 @@
   <string name="MessageRecord_you_marked_your_safety_number_with_s_verified_from_another_device">Has marcado tus cifras de seguridad con %s como verificadas desde otro dispositivo</string>
   <string name="MessageRecord_you_marked_your_safety_number_with_s_unverified">Has retirado la marca de verificación de tus cifras de seguridad con %s.</string>
   <string name="MessageRecord_you_marked_your_safety_number_with_s_unverified_from_another_device">Has retirado la marca de verificación de tus cifras de seguridad con %s desde otro dispositivo</string>
+  <!--MessageRequestBottomView-->
+  <string name="MessageRequestBottomView_accept">Aceptar</string>
+  <string name="MessageRequestBottomView_delete">Eliminar</string>
+  <string name="MessageRequestBottomView_block">Bloquear</string>
+  <string name="MessageRequestBottomView_unblock">Desbloquear</string>
+  <string name="MessageRequestBottomView_do_you_want_to_let_s_message_you_they_wont_know_youve_seen_their_messages_until_you_accept">¿Deseas recibir mensajes de %1$s? No sabrá que has visto sus mensajes hasta que aceptes.</string>
+  <string name="MessageRequestBottomView_do_you_want_to_join_the_group_s_they_wont_know_youve_seen_their_messages_until_you_accept">¿Deseas unirte al grupo «%1$s»? Los participantes no sabrán que has visto sus mensajes hasta que aceptes.</string>
+  <string name="MessageRequestBottomView_unblock_s_to_message_and_call_each_other">Debloquea a %1$s para poder comunicaros.</string>
+  <string name="MessageRequestBottomView_unblock_to_allow_group_members_to_add_you_to_this_group_again">Desbloquea para permitir a participantes del grupo incluirte en el grupo de nuevo.</string>
+  <string name="MessageRequestProfileView_member_of_one_group">Participa en %1$s</string>
+  <string name="MessageRequestProfileView_member_of_two_groups">Participa en %1$s y %2$s</string>
+  <string name="MessageRequestProfileView_member_of_many_groups">Participa en %1$s, %2$s y %3$s</string>
+  <plurals name="MessageRequestProfileView_members">
+    <item quantity="one">%1$d participante</item>
+    <item quantity="other">%1$d participantes</item>
+  </plurals>
+  <plurals name="MessageRequestProfileView_member_of_others">
+    <item quantity="one">%d otro</item>
+    <item quantity="other">%d otros</item>
+  </plurals>
   <!--PassphraseChangeActivity-->
   <string name="PassphraseChangeActivity_passphrases_dont_match_exclamation">¡Las claves no coinciden!</string>
   <string name="PassphraseChangeActivity_incorrect_old_passphrase_exclamation">¡Clave de acceso antigua incorrecta!</string>
@@ -577,6 +616,8 @@
   <string name="ReactionsBottomSheetDialogFragment_all">Todo %1$d</string>
   <!--ReactionsConversationView-->
   <string name="ReactionsConversationView_plus">+%1$d</string>
+  <!--ReactionsRecipientAdapter-->
+  <string name="ReactionsRecipientAdapter_you">Tú</string>
   <!--RecipientPreferencesActivity-->
   <string name="RecipientPreferenceActivity_block_this_contact_question">¿Bloquear este contacto?</string>
   <string name="RecipientPreferenceActivity_you_will_no_longer_receive_messages_and_calls_from_this_contact">Ya no recibirás mensajes y llamadas de este contacto.</string>
@@ -620,7 +661,7 @@ número de teléfono
 (%s) no es válido.
 </string>
   <string name="RegistrationActivity_missing_google_play_services">Servicios de Google Play no instalados</string>
-  <string name="RegistrationActivity_this_device_is_missing_google_play_services">Este dispositivo no dispone de los Servicios de Google Play. Aún así puedes usar Signal pero esta configuración puede resultar en un bajo rendimiento o fiabilidad.\n\nSi no eres un usuario avanzado, no estás ejecutando una ROM personalizada de Android, o crees que estás viendo esto indebidamente, contacta con support@signal.org para la solución del problema.</string>
+  <string name="RegistrationActivity_this_device_is_missing_google_play_services">Este dispositivo no dispone de los Servicios de Google Play. Aún así puedes usar Signal pero esta configuración puede resultar en un bajo rendimiento o fiabilidad.\n\nSi no eres un usuario avanzado, no estás ejecutando una ROM personalizada de Android, o crees que estás viendo esto indebidamente, contacta con support@signal.org para solucionar el problema.</string>
   <string name="RegistrationActivity_i_understand">Entiendo</string>
   <string name="RegistrationActivity_play_services_error">Fallo en «Play Services»</string>
   <string name="RegistrationActivity_google_play_services_is_updating_or_unavailable">Google Play Services se está actualizando o está temporalmente suspendido. Por favor, inténtalo de nuevo.</string>
@@ -710,6 +751,17 @@ Se recibió un mensaje de intercambio de claves para una versión no válida del
   <string name="StickerPackPreviewActivity_remove">Eliminar</string>
   <string name="StickerPackPreviewActivity_stickers">Cromos (stickers)</string>
   <string name="StickerPackPreviewActivity_failed_to_load_sticker_pack">Fallo al cargar el paquete de cromos</string>
+  <!--SubmitDebugLogActivity-->
+  <string name="SubmitDebugLogActivity_edit">Editar</string>
+  <string name="SubmitDebugLogActivity_done">Hecho</string>
+  <string name="SubmitDebugLogActivity_tap_a_line_to_delete_it">Toca sobre una línea para eliminarla</string>
+  <string name="SubmitDebugLogActivity_submit">Solicitar</string>
+  <string name="SubmitDebugLogActivity_failed_to_submit_logs">Fallo al enviar el registro de depuración</string>
+  <string name="SubmitDebugLogActivity_success">¡Completado!</string>
+  <string name="SubmitDebugLogActivity_copy_this_url_and_add_it_to_your_issue">Copia esta URL y añádela a tu correo para el soporte o informe de incidencia:\n\n<b>%1$s</b></string>
+  <string name="SubmitDebugLogActivity_copied_to_clipboard">Copiado al portapapeles</string>
+  <string name="SubmitDebugLogActivity_ok">Ok</string>
+  <string name="SubmitDebugLogActivity_share">Compartir</string>
   <!--ThreadRecord-->
   <string name="ThreadRecord_group_updated">Grupo actualizado</string>
   <string name="ThreadRecord_left_the_group">Abandonó el grupo</string>
@@ -731,6 +783,8 @@ Se recibió un mensaje de intercambio de claves para una versión no válida del
   <string name="ThreadRecord_you_marked_verified">Marcado como verificado</string>
   <string name="ThreadRecord_you_marked_unverified">Marca de verificación retirada</string>
   <string name="ThreadRecord_message_could_not_be_processed">Ha sido mposible procesar el mensaje</string>
+  <string name="ThreadRecord_message_request">Solicitud de chat</string>
+  <string name="ThreadRecord_s_added_you_to_the_group">%1$s te ha añadido al grupo</string>
   <!--UpdateApkReadyListener-->
   <string name="UpdateApkReadyListener_Signal_update">Actualizar Signal</string>
   <string name="UpdateApkReadyListener_a_new_version_of_signal_is_available_tap_to_update">Una nueva versión de Signal está disponible. Toca para actualizar.</string>
@@ -1044,11 +1098,8 @@ Se recibió un mensaje de intercambio de claves para una versión no válida del
   <string name="log_submit_activity__button_got_it">Recibido</string>
   <string name="log_submit_activity__button_compose_email">Redactar correo</string>
   <string name="log_submit_activity__this_log_will_be_posted_online">Como este informe se hará público para que los colaboradores lo lean, puede que lo quieras examinar y editar antes de mandarlo.</string>
-  <string name="log_submit_activity__loading_logs">Cargando registros …</string>
+  <string name="log_submit_activity__loading_logs">Cargando registro …</string>
   <string name="log_submit_activity__uploading_logs">Transfiriendo registro (logs) …</string>
-  <string name="log_submit_activity__success">¡Completado!</string>
-  <string name="log_submit_activity__copy_this_url_and_add_it_to_your_issue">Copia esta URL y añádela a tu incidencia o correo de soporte:\n\n<b>%1$s</b>\n</string>
-  <string name="log_submit_activity__copied_to_clipboard">Copiado al portapapeles</string>
   <string name="log_submit_activity__choose_email_app">Selecciona aplicación de correo</string>
   <string name="log_submit_activity__please_review_this_log_from_my_app">Por favor, revisad este registro de depuración de mi aplicación: %1$s</string>
   <string name="log_submit_activity__network_failure">Fallo de la red. Por favor, inténtalo de nuevo.</string>
@@ -1152,6 +1203,13 @@ Se recibió un mensaje de intercambio de claves para una versión no válida del
   <string name="AndroidManifest__invite_friends">Invitar amigos</string>
   <string name="AndroidManifest_archived_conversations">Chats archivados</string>
   <string name="AndroidManifest_remove_photo">Eliminar foto</string>
+  <!--Message Requests Megaphone-->
+  <string name="MessageRequestsMegaphone__message_requests">Solicitudes de chat</string>
+  <string name="MessageRequestsMegaphone__users_can_now_choose_to_accept">Ahora los usuarios pueden aceptar o no solicitudes de chat. El nombre de tu perfil permite saber quién eres a quien escribes.</string>
+  <string name="MessageRequestsMegaphone__add_profile_name">Añadir nombre al perfil</string>
+  <string name="MessageRequestsMegaphone__new_message_requests">Nuevo: Solicitudes de chat</string>
+  <string name="MessageRequestsMegaphone__add_name">Añadir nombre</string>
+  <string name="MessageRequestsMegaphone__you_can_now_choose_whether_to_accept">Ahora puedes decidir si aceptas una solicitud de chat. Podrás elegir entre «Aceptar», «Eliminar» o «Bloquear».</string>
   <!--arrays.xml-->
   <string name="arrays__import_export">Importar</string>
   <string name="arrays__use_default">Usar predeterminado</string>
@@ -1251,9 +1309,9 @@ Se recibió un mensaje de intercambio de claves para una versión no válida del
   <string name="preferences__linked_devices">Dispositivos enlazados</string>
   <string name="preferences__light_theme">Claro</string>
   <string name="preferences__dark_theme">Oscuro</string>
-  <string name="preferences__system_theme">Predeterminado del sistema</string>
   <string name="preferences__appearance">Apariencia</string>
   <string name="preferences__theme">Tema</string>
+  <string name="preferences__system_default">Predeterminado del sistema</string>
   <string name="preferences__default">Por defecto</string>
   <string name="preferences__language">Idioma</string>
   <string name="preferences__signal_messages_and_calls">Mensajes y llamadas de Signal</string>
@@ -1646,17 +1704,5 @@ Se recibió un mensaje de intercambio de claves para una versión no válida del
   <string name="RegistrationLockDialog_reminder">Recordatorio:</string>
   <string name="recipient_preferences__about">Acerca de</string>
   <string name="Recipient_unknown">Desconocido</string>
-  <string name="MessageRequestBottomView_accept">Aceptar</string>
-  <string name="MessageRequestBottomView_delete">Eliminar</string>
-  <string name="MessageRequestBottomView_block">Bloquear</string>
-  <string name="MessageRequestBottomView_do_you_want_to_let">¿Deseas recibir mensajes de %1$s?</string>
-  <string name="MessageRequestProfileView_member_of_one_group">Participa en %1$s</string>
-  <string name="MessageRequestProfileView_member_of_two_groups">Participa en %1$s y %2$s</string>
-  <string name="MessageRequestProfileView_member_of_many_groups">Participa en %1$s, %2$s y %3$s</string>
-  <string name="MessageRequestProfileView_members">%1$d participantes</string>
-  <plurals name="MessageRequestProfileView_member_of_others">
-    <item quantity="one">%d otro</item>
-    <item quantity="other">%d otros</item>
-  </plurals>
   <!--EOF-->
 </resources>
