--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -204,6 +204,22 @@
   <string name="ConversationActivity_no_results">Il n’y a aucun résultat</string>
   <string name="ConversationActivity_sticker_pack_installed">Le paquet d’autocollants a été installé</string>
   <string name="ConversationActivity_new_say_it_with_stickers">Nouveauté ! Dites-le avec des autocollants</string>
+  <string name="ConversationActivity_block_s">Bloquer %1$s ?</string>
+  <string name="ConversationActivity_block_and_leave_s">Bloquer et quitter %1$s?</string>
+  <string name="ConversationActivity_unblock_s">Débloquer %1$s?</string>
+  <string name="ConversationActivity_you_will_be_able_to_message_and_call_each_other">Vous pourrez vous envoyer des messages et vous appeler mutuellement.</string>
+  <string name="ConversationActivity_group_members_will_be_able_to_add_you_to_this_group_again">Les membres du groupe pourront de nouveau vous ajouter à ce groupe.</string>
+  <string name="ConversationActivity_blocked_people_will_not_be_able_to_call_you_or_send_you_messages">Les personnes bloquées ne pourront pas vous appeler ni vous envoyer de messages.</string>
+  <string name="ConversationActivity_you_will_leave_this_group_and_no_longer_receive_messages_or_updates">Vous quitterez ce groupe et ne recevrez plus de messages ni de mises à jour.</string>
+  <string name="ConversationActivity_block">Bloquer</string>
+  <string name="ConversationActivity_block_and_delete">Bloquer et supprimer</string>
+  <string name="ConversationActivity_cancel">Annuler</string>
+  <string name="ConversationActivity_delete_conversation">Supprimer la conversation ?</string>
+  <string name="ConversationActivity_delete_and_leave_group">Supprimer et quitter le groupe ?</string>
+  <string name="ConversationActivity_this_conversation_will_be_deleted_from_all_of_your_devices">Cette conversation sera supprimée de tous vos appareils.</string>
+  <string name="ConversationActivity_you_will_leave_this_group_and_it_will_be_deleted_from_all_of_your_devices">Vous quitterez ce groupe et il sera supprimé de tous vos appareils.</string>
+  <string name="ConversationActivity_delete">Supprimer</string>
+  <string name="ConversationActivity_delete_and_leave">Supprimer et quitter</string>
   <!--ConversationAdapter-->
   <plurals name="ConversationAdapter_n_unread_messages">
     <item quantity="one">%d message non lu</item>
@@ -249,6 +265,7 @@
   <string name="ConversationFragment_you_can_swipe_to_the_left_reply">Vous pouvez faire glisser un message vers la gauche pour y répondre rapidement</string>
   <string name="ConversationFragment_outgoing_view_once_media_files_are_automatically_removed">Les fichiers multimédias éphémères sortants sont supprimés automatiquement après l’envoi</string>
   <string name="ConversationFragment_you_already_viewed_this_message">Vous avez déjà visualisé ce message</string>
+  <string name="ConversationFragment__you_can_add_notes_for_yourself_in_this_conversation">Vous pouvez ajouter des notes pour vous-même dans cette conversation. Si votre compte a des appareil reliés, les nouvelles notes seront synchronisées.</string>
   <!--ConversationListActivity-->
   <string name="ConversationListActivity_there_is_no_browser_installed_on_your_device">Aucun navigateur n’est installé sur votre appareil.</string>
   <!--ConversationListFragment-->
@@ -272,6 +289,8 @@
     <item quantity="one">La conversation a été déplacée vers la boîte de réception</item>
     <item quantity="other">%d conversations ont été déplacées vers la boîte de réception</item>
   </plurals>
+  <string name="ConversationListFragment__your_profile_name_has_been_created">Votre nom de profil a été créé.</string>
+  <string name="ConversationListFragment__your_profile_name_has_been_saved">Votre nom de profil a été enregistré.</string>
   <!--ConversationListItem-->
   <string name="ConversationListItem_key_exchange_message">Message d’échange de clés</string>
   <!--ConversationListItemAction-->
@@ -380,7 +399,7 @@
   <string name="GroupShareProfileView_do_you_want_to_make_your_profile_name_and_photo_visible_to_all_current_and_future_members_of_this_group">Voulez-vous que vos nom et photo de profil soient visibles pour tous les membres actuels et futurs de ce groupe ?</string>
   <string name="GroupShareProfileView_make_visible">Rendre visible</string>
   <!--GroupMembersDialog-->
-  <string name="GroupMembersDialog_me">Moi</string>
+  <string name="GroupMembersDialog_you">Vous</string>
   <!--CropImageActivity-->
   <string name="CropImageActivity_group_avatar">Avatar du groupe</string>
   <string name="CropImageActivity_profile_avatar">Avatar</string>
@@ -524,6 +543,23 @@
   <string name="MessageRecord_you_marked_your_safety_number_with_s_verified_from_another_device">Vous avez marqué votre numéro de sécurité avec %s comme vérifié à partir d’un autre appareil</string>
   <string name="MessageRecord_you_marked_your_safety_number_with_s_unverified">Vous avez marqué votre numéro de sécurité avec %s comme non vérifié</string>
   <string name="MessageRecord_you_marked_your_safety_number_with_s_unverified_from_another_device">Vous avez marqué votre numéro de sécurité avec %s comme non vérifié à partir d’un autre appareil</string>
+  <!--MessageRequestBottomView-->
+  <string name="MessageRequestBottomView_accept">Accepter</string>
+  <string name="MessageRequestBottomView_delete">Supprimer</string>
+  <string name="MessageRequestBottomView_block">Bloquer</string>
+  <string name="MessageRequestBottomView_unblock">Débloquer</string>
+  <string name="MessageRequestBottomView_unblock_to_allow_group_members_to_add_you_to_this_group_again">Débloquez pour permettre aux membres du groupe de vous ajouter à nouveau à ce groupe.</string>
+  <string name="MessageRequestProfileView_member_of_one_group">Membre de %1$s</string>
+  <string name="MessageRequestProfileView_member_of_two_groups">Membre de %1$s et de %2$s</string>
+  <string name="MessageRequestProfileView_member_of_many_groups">Membre de %1$s, de%2$s et de %3$s</string>
+  <plurals name="MessageRequestProfileView_members">
+    <item quantity="one">%1$d membre</item>
+    <item quantity="other">%1$d membres</item>
+  </plurals>
+  <plurals name="MessageRequestProfileView_member_of_others">
+    <item quantity="one">%d autre</item>
+    <item quantity="other">%d autres</item>
+  </plurals>
   <!--PassphraseChangeActivity-->
   <string name="PassphraseChangeActivity_passphrases_dont_match_exclamation">Les phrases de passe ne correspondent pas.</string>
   <string name="PassphraseChangeActivity_incorrect_old_passphrase_exclamation">L’ancienne phrase de passe est erronée.</string>
@@ -577,6 +613,8 @@
   <string name="ReactionsBottomSheetDialogFragment_all">Tous les %1$d</string>
   <!--ReactionsConversationView-->
   <string name="ReactionsConversationView_plus">+%1$d</string>
+  <!--ReactionsRecipientAdapter-->
+  <string name="ReactionsRecipientAdapter_you">Vous</string>
   <!--RecipientPreferencesActivity-->
   <string name="RecipientPreferenceActivity_block_this_contact_question">Bloquer ce contact ?</string>
   <string name="RecipientPreferenceActivity_you_will_no_longer_receive_messages_and_calls_from_this_contact">Vous ne recevrez plus ni message ni appel de ce contact.</string>
@@ -701,6 +739,17 @@
   <string name="StickerPackPreviewActivity_remove">Supprimer</string>
   <string name="StickerPackPreviewActivity_stickers">Autocollants</string>
   <string name="StickerPackPreviewActivity_failed_to_load_sticker_pack">Échec de chargement du paquet d’autocollants</string>
+  <!--SubmitDebugLogActivity-->
+  <string name="SubmitDebugLogActivity_edit">Modifier</string>
+  <string name="SubmitDebugLogActivity_done">Terminé</string>
+  <string name="SubmitDebugLogActivity_tap_a_line_to_delete_it">Touchez une ligne pour la supprimer</string>
+  <string name="SubmitDebugLogActivity_submit">Envoyer</string>
+  <string name="SubmitDebugLogActivity_failed_to_submit_logs">L’envoi des journaux a échoué</string>
+  <string name="SubmitDebugLogActivity_success">L’exportation est réussie.</string>
+  <string name="SubmitDebugLogActivity_copy_this_url_and_add_it_to_your_issue">Copiez cette URL et ajoutez-la à votre rapport d\'erreur ou dans votre email au support:\n\n<b>%1$s</b></string>
+  <string name="SubmitDebugLogActivity_copied_to_clipboard">Copié dans le presse-papiers</string>
+  <string name="SubmitDebugLogActivity_ok">Ok</string>
+  <string name="SubmitDebugLogActivity_share">Partager</string>
   <!--ThreadRecord-->
   <string name="ThreadRecord_group_updated">Le groupe a été mis à jour</string>
   <string name="ThreadRecord_left_the_group">A quitté le groupe</string>
@@ -722,6 +771,8 @@
   <string name="ThreadRecord_you_marked_verified">Vous avez marqué comme vérifié</string>
   <string name="ThreadRecord_you_marked_unverified">Vous avez marqué comme non vérifié</string>
   <string name="ThreadRecord_message_could_not_be_processed">Le message n’a pas pu être traité</string>
+  <string name="ThreadRecord_message_request">Demande de contact</string>
+  <string name="ThreadRecord_s_added_you_to_the_group">%1$s vous a ajouté(e) au groupe</string>
   <!--UpdateApkReadyListener-->
   <string name="UpdateApkReadyListener_Signal_update">Mise à jour de Signal</string>
   <string name="UpdateApkReadyListener_a_new_version_of_signal_is_available_tap_to_update">Une nouvelle version de Signal est proposée, touchez pour lancer la mise à jour</string>
@@ -1037,9 +1088,6 @@
   <string name="log_submit_activity__this_log_will_be_posted_online">Ce journal sera publié en ligne publiquement et les contributeurs pourront le consulter. Vous pouvez l’examiner et le modifier avant de l’envoyer.</string>
   <string name="log_submit_activity__loading_logs">Chargement des journaux…</string>
   <string name="log_submit_activity__uploading_logs">Téléversement des journaux…</string>
-  <string name="log_submit_activity__success">C’est réussi !</string>
-  <string name="log_submit_activity__copy_this_url_and_add_it_to_your_issue">Copiez cette URL et ajoutez-la à votre relevé de problème ou à votre courriel de demande d’assistance :\n\n<b>%1$s</b>\n</string>
-  <string name="log_submit_activity__copied_to_clipboard">Copié dans le presse-papiers</string>
   <string name="log_submit_activity__choose_email_app">Choisir un appli de courriel</string>
   <string name="log_submit_activity__please_review_this_log_from_my_app">Veuillez examiner ce journal provenant de mon appli : %1$s</string>
   <string name="log_submit_activity__network_failure">Échec réseau. Veuillez ressayer.</string>
@@ -1143,6 +1191,11 @@
   <string name="AndroidManifest__invite_friends">Inviter des amis</string>
   <string name="AndroidManifest_archived_conversations">Conversations archivées</string>
   <string name="AndroidManifest_remove_photo">Supprimer la photo</string>
+  <!--Message Requests Megaphone-->
+  <string name="MessageRequestsMegaphone__users_can_now_choose_to_accept">Les utilisateurs peuvent désormais choisir d\'accepter une nouvelle conversation. Les noms de profil permettent aux personnes de savoir qui leur envoie des messages.</string>
+  <string name="MessageRequestsMegaphone__add_profile_name">Ajouter un nom de profil</string>
+  <string name="MessageRequestsMegaphone__add_name">Ajouter un nom</string>
+  <string name="MessageRequestsMegaphone__you_can_now_choose_whether_to_accept">Vous pouvez maintenant choisir d\'accepter ou non une nouvelle conversation. Vous verrez les options \"Accepter,\" \"Supprimer,\" or \"Bloquer.\"</string>
   <!--arrays.xml-->
   <string name="arrays__import_export">Importer</string>
   <string name="arrays__use_default">Valeur par défaut</string>
@@ -1242,9 +1295,9 @@
   <string name="preferences__linked_devices">Appareils reliés</string>
   <string name="preferences__light_theme">Clair</string>
   <string name="preferences__dark_theme">Sombre</string>
-  <string name="preferences__system_theme">Valeur par défaut du système</string>
   <string name="preferences__appearance">Apparence</string>
   <string name="preferences__theme">Thème</string>
+  <string name="preferences__system_default">Valeur par défaut du système</string>
   <string name="preferences__default">Valeur par défaut</string>
   <string name="preferences__language">Langue</string>
   <string name="preferences__signal_messages_and_calls">Appels et messages Signal</string>
@@ -1636,17 +1689,5 @@
   <string name="RegistrationLockDialog_reminder">Rappel :</string>
   <string name="recipient_preferences__about">À propos</string>
   <string name="Recipient_unknown">Inconnu</string>
-  <string name="MessageRequestBottomView_accept">Accepter</string>
-  <string name="MessageRequestBottomView_delete">Supprimer</string>
-  <string name="MessageRequestBottomView_block">Bloquer</string>
-  <string name="MessageRequestBottomView_do_you_want_to_let">Voulez-vous recevoir des messages de %1$s ?</string>
-  <string name="MessageRequestProfileView_member_of_one_group">Membre de %1$s</string>
-  <string name="MessageRequestProfileView_member_of_two_groups">Membre de %1$s et de %2$s</string>
-  <string name="MessageRequestProfileView_member_of_many_groups">Membre de %1$s, de%2$s et de %3$s</string>
-  <string name="MessageRequestProfileView_members">%1$d membres </string>
-  <plurals name="MessageRequestProfileView_member_of_others">
-    <item quantity="one">%d autre</item>
-    <item quantity="other">%d autres</item>
-  </plurals>
   <!--EOF-->
 </resources>
