--- a/app/src/main/res/values-gl/strings.xml
+++ b/app/src/main/res/values-gl/strings.xml
@@ -198,6 +198,10 @@
   <string name="ConversationActivity_no_results">Sen resultados</string>
   <string name="ConversationActivity_sticker_pack_installed">Paquete de adhesivos instalado</string>
   <string name="ConversationActivity_new_say_it_with_stickers">Novo! Dille ola aos adhesivos ou stickers</string>
+  <string name="ConversationActivity_block">Bloquear</string>
+  <string name="ConversationActivity_cancel">Cancelar</string>
+  <string name="ConversationActivity_delete_conversation">Borrar conversa?</string>
+  <string name="ConversationActivity_delete">Eliminar</string>
   <!--ConversationAdapter-->
   <plurals name="ConversationAdapter_n_unread_messages">
     <item quantity="one">%d mensaxe sen ler</item>
@@ -367,7 +371,7 @@
   <string name="GroupShareProfileView_do_you_want_to_make_your_profile_name_and_photo_visible_to_all_current_and_future_members_of_this_group">Queres facer visible o teu nome e fotografía do perfil visible aos actuais e futuros membros deste grupo?</string>
   <string name="GroupShareProfileView_make_visible">Facer visible</string>
   <!--GroupMembersDialog-->
-  <string name="GroupMembersDialog_me">Eu</string>
+  <string name="GroupMembersDialog_you">Ti</string>
   <!--CropImageActivity-->
   <string name="CropImageActivity_group_avatar">Avatar do grupo</string>
   <string name="CropImageActivity_profile_avatar">Avatar</string>
@@ -475,6 +479,18 @@
   <string name="MessageRecord_you_marked_your_safety_number_with_s_verified_from_another_device">Marcaches o teu número de seguranza con %s como verificado desde outro dispositivo</string>
   <string name="MessageRecord_you_marked_your_safety_number_with_s_unverified">Marcaches como sen verificar o teu número de seguranza con %s </string>
   <string name="MessageRecord_you_marked_your_safety_number_with_s_unverified_from_another_device">Marcaches como sen verificar o teu número de seguranza con %s desde outro dispositivo</string>
+  <!--MessageRequestBottomView-->
+  <string name="MessageRequestBottomView_accept">Aceptar</string>
+  <string name="MessageRequestBottomView_delete">Eliminar</string>
+  <string name="MessageRequestBottomView_block">Bloquear</string>
+  <string name="MessageRequestBottomView_unblock">Desbloquear</string>
+  <string name="MessageRequestProfileView_member_of_one_group">Membro de %1$s</string>
+  <string name="MessageRequestProfileView_member_of_two_groups">Membro de %1$s e %2$s</string>
+  <string name="MessageRequestProfileView_member_of_many_groups">Membro de %1$s, %2$s e %3$s</string>
+  <plurals name="MessageRequestProfileView_member_of_others">
+    <item quantity="one">%d máis</item>
+    <item quantity="other">%d máis</item>
+  </plurals>
   <!--PassphraseChangeActivity-->
   <string name="PassphraseChangeActivity_passphrases_dont_match_exclamation">As frases de acceso non coinciden!</string>
   <string name="PassphraseChangeActivity_incorrect_old_passphrase_exclamation">Frase de acceso antiga incorrecta!</string>
@@ -526,6 +542,8 @@
   <string name="RatingManager_whoops_the_play_store_app_does_not_appear_to_be_installed">Vaites! Semella que a Play Store non está instalada no teu dispositivo.</string>
   <!--ReactionsBottomSheetDialogFragment-->
   <!--ReactionsConversationView-->
+  <!--ReactionsRecipientAdapter-->
+  <string name="ReactionsRecipientAdapter_you">Ti</string>
   <!--RecipientPreferencesActivity-->
   <string name="RecipientPreferenceActivity_block_this_contact_question">Bloquear este contacto?</string>
   <string name="RecipientPreferenceActivity_you_will_no_longer_receive_messages_and_calls_from_this_contact">Non recibirás máis mensaxes nin chamadas deste contacto.</string>
@@ -652,6 +670,13 @@
   <string name="StickerPackPreviewActivity_remove">Eliminar</string>
   <string name="StickerPackPreviewActivity_stickers">Adhesivos</string>
   <string name="StickerPackPreviewActivity_failed_to_load_sticker_pack">Erro ao cargar o paquete de adhesivos</string>
+  <!--SubmitDebugLogActivity-->
+  <string name="SubmitDebugLogActivity_edit">Editar</string>
+  <string name="SubmitDebugLogActivity_done">Feito</string>
+  <string name="SubmitDebugLogActivity_submit">Enviar</string>
+  <string name="SubmitDebugLogActivity_success">Correcto!</string>
+  <string name="SubmitDebugLogActivity_copied_to_clipboard">Copiado ao portapapeis</string>
+  <string name="SubmitDebugLogActivity_share">Compartir</string>
   <!--ThreadRecord-->
   <string name="ThreadRecord_group_updated">Grupo actualizado</string>
   <string name="ThreadRecord_left_the_group">Abandonou o grupo</string>
@@ -963,9 +988,6 @@
   <string name="log_submit_activity__this_log_will_be_posted_online">Este rexistro publicarase en liña para que os colaboradores poidan velo; podes examinalo e editalo antes de o enviar.</string>
   <string name="log_submit_activity__loading_logs">Cargando rexistros…</string>
   <string name="log_submit_activity__uploading_logs">Cargando rexistros…</string>
-  <string name="log_submit_activity__success">Correcto!</string>
-  <string name="log_submit_activity__copy_this_url_and_add_it_to_your_issue">Copia este URL e engádeo ao informe de erros ou ao correo ao soporte técnico:\n\n<b>%1$s</b>\n</string>
-  <string name="log_submit_activity__copied_to_clipboard">Copiado ao portapapeis</string>
   <string name="log_submit_activity__choose_email_app">Elixe a aplicación de correo</string>
   <string name="log_submit_activity__please_review_this_log_from_my_app">Revisa este rexistro desde a miña aplicación: %1$s</string>
   <string name="log_submit_activity__network_failure">Erro de rede. Téntao de novo.</string>
@@ -1067,6 +1089,7 @@
   <string name="AndroidManifest__invite_friends">Convidar amizades</string>
   <string name="AndroidManifest_archived_conversations">Conversas arquivadas</string>
   <string name="AndroidManifest_remove_photo">Eliminar fotografía</string>
+  <!--Message Requests Megaphone-->
   <!--arrays.xml-->
   <string name="arrays__import_export">Importar</string>
   <string name="arrays__use_default">Utilizar o predeterminado</string>
@@ -1457,16 +1480,5 @@
   <string name="RegistrationLockDialog_reminder">Recordatorio:</string>
   <string name="recipient_preferences__about">Acerca de</string>
   <string name="Recipient_unknown">Descoñecido</string>
-  <string name="MessageRequestBottomView_accept">Aceptar</string>
-  <string name="MessageRequestBottomView_delete">Eliminar</string>
-  <string name="MessageRequestBottomView_block">Bloquear</string>
-  <string name="MessageRequestProfileView_member_of_one_group">Membro de %1$s</string>
-  <string name="MessageRequestProfileView_member_of_two_groups">Membro de %1$s e %2$s</string>
-  <string name="MessageRequestProfileView_member_of_many_groups">Membro de %1$s, %2$s e %3$s</string>
-  <string name="MessageRequestProfileView_members">%1$d membros</string>
-  <plurals name="MessageRequestProfileView_member_of_others">
-    <item quantity="one">%d máis</item>
-    <item quantity="other">%d máis</item>
-  </plurals>
   <!--EOF-->
 </resources>
