--- a/app/src/main/res/values-hi/strings.xml
+++ b/app/src/main/res/values-hi/strings.xml
@@ -201,6 +201,9 @@
   <string name="ConversationActivity_no_results">कोई परिणाम नहीं</string>
   <string name="ConversationActivity_sticker_pack_installed">स्टीकर पैक इंस्टॉल</string>
   <string name="ConversationActivity_new_say_it_with_stickers">नया! स्टीकर के साथ कहें</string>
+  <string name="ConversationActivity_block">ब्लॉक</string>
+  <string name="ConversationActivity_cancel">रद्द करें</string>
+  <string name="ConversationActivity_delete">हटाए </string>
   <!--ConversationAdapter-->
   <plurals name="ConversationAdapter_n_unread_messages">
     <item quantity="one">%d अपठित मेसेज</item>
@@ -376,7 +379,7 @@
   <string name="GroupShareProfileView_do_you_want_to_make_your_profile_name_and_photo_visible_to_all_current_and_future_members_of_this_group">क्या आप इस प्रोफाइल के सभी मौजूदा और भविष्य के सदस्यों को अपना प्रोफाइल नाम और फोटो दिखाना चाहते हैं?</string>
   <string name="GroupShareProfileView_make_visible">दृश्यमान बनाओ</string>
   <!--GroupMembersDialog-->
-  <string name="GroupMembersDialog_me">मैं</string>
+  <string name="GroupMembersDialog_you">आप</string>
   <!--CropImageActivity-->
   <string name="CropImageActivity_group_avatar">समूह अवतार</string>
   <string name="CropImageActivity_profile_avatar">अवतार</string>
@@ -515,6 +518,18 @@
   <string name="MessageRecord_you_marked_your_safety_number_with_s_verified_from_another_device">आपने %s के साथ अपना सुरक्षा नंबर किसी और डिवाइस से सत्यापित चिह्नित किया है </string>
   <string name="MessageRecord_you_marked_your_safety_number_with_s_unverified">आपने %s के साथ अपना सुरक्षा नंबर असत्यापित मार्क करा हुआ है</string>
   <string name="MessageRecord_you_marked_your_safety_number_with_s_unverified_from_another_device">आपने %s के साथ अपना सुरक्षा नंबर किसी और डिवाइस से असत्यापित मार्क करा हुआ है</string>
+  <!--MessageRequestBottomView-->
+  <string name="MessageRequestBottomView_accept">स्वीकृत </string>
+  <string name="MessageRequestBottomView_delete">हटाए </string>
+  <string name="MessageRequestBottomView_block">ब्लॉक</string>
+  <string name="MessageRequestBottomView_unblock">अनब्लॉक करें</string>
+  <string name="MessageRequestProfileView_member_of_one_group">%1$s का सदस्य</string>
+  <string name="MessageRequestProfileView_member_of_two_groups">%1$s और %2$s का सदस्य</string>
+  <string name="MessageRequestProfileView_member_of_many_groups">%1$s, %2$s और %3$s का सदस्य</string>
+  <plurals name="MessageRequestProfileView_member_of_others">
+    <item quantity="one">%d अन्य</item>
+    <item quantity="other">%d अन्य</item>
+  </plurals>
   <!--PassphraseChangeActivity-->
   <string name="PassphraseChangeActivity_passphrases_dont_match_exclamation">पासफ्रेज़ मेल नहीं खाते हैं</string>
   <string name="PassphraseChangeActivity_incorrect_old_passphrase_exclamation">गलत पुराना पासफ्रेज</string>
@@ -565,6 +580,8 @@
   <string name="RatingManager_whoops_the_play_store_app_does_not_appear_to_be_installed">ओह, Play Store ऐप आपके डिवाइस पर इंस्टॉल नहीं प्रतीत होता है।</string>
   <!--ReactionsBottomSheetDialogFragment-->
   <!--ReactionsConversationView-->
+  <!--ReactionsRecipientAdapter-->
+  <string name="ReactionsRecipientAdapter_you">आप</string>
   <!--RecipientPreferencesActivity-->
   <string name="RecipientPreferenceActivity_block_this_contact_question">इस संपर्क को ब्लॉक करें?</string>
   <string name="RecipientPreferenceActivity_you_will_no_longer_receive_messages_and_calls_from_this_contact">अब आप इस संपर्क से मेसेज और कॉल प्राप्त नहीं करेंगे।</string>
@@ -686,6 +703,13 @@
   <string name="StickerPackPreviewActivity_remove">हटा दें </string>
   <string name="StickerPackPreviewActivity_stickers">स्टिकर</string>
   <string name="StickerPackPreviewActivity_failed_to_load_sticker_pack">स्टीकर पैक लोड करने में असमर्थ</string>
+  <!--SubmitDebugLogActivity-->
+  <string name="SubmitDebugLogActivity_edit">बदलें</string>
+  <string name="SubmitDebugLogActivity_done">पूर्ण</string>
+  <string name="SubmitDebugLogActivity_submit">सबमिट</string>
+  <string name="SubmitDebugLogActivity_success">सफलता</string>
+  <string name="SubmitDebugLogActivity_copied_to_clipboard">क्लिपबोर्ड पर कॉपी किया गया है</string>
+  <string name="SubmitDebugLogActivity_share">साझा करें</string>
   <!--ThreadRecord-->
   <string name="ThreadRecord_group_updated">समूह अद्यतन</string>
   <string name="ThreadRecord_left_the_group">समूह छोड़ दिया</string>
@@ -707,6 +731,7 @@
   <string name="ThreadRecord_you_marked_verified">आपने सत्यापित मार्क किया है</string>
   <string name="ThreadRecord_you_marked_unverified">आपने असत्यापित मार्क किया है</string>
   <string name="ThreadRecord_message_could_not_be_processed">मेसेज संसाधित नहीं किया जा सका</string>
+  <string name="ThreadRecord_message_request">बाच-चीत का निवेदन</string>
   <!--UpdateApkReadyListener-->
   <string name="UpdateApkReadyListener_Signal_update">Signal अपडेट</string>
   <string name="UpdateApkReadyListener_a_new_version_of_signal_is_available_tap_to_update">Signal का एक नया वर्ज़न उपलब्ध है, अपडेट करने के लिए टैप करें</string>
@@ -1022,9 +1047,6 @@
   <string name="log_submit_activity__this_log_will_be_posted_online">यह लॉग योगदानकर्ताओं के देखने के लिए सार्वजनिक रूप से ऑनलाइन पोस्ट किया जाएगा, आप सबमिट करने से पहले इसकी जांच और संपादन कर सकते हैं।</string>
   <string name="log_submit_activity__loading_logs">लॉग लोड हो रहा है …</string>
   <string name="log_submit_activity__uploading_logs">लॉग अपलोड किए जा रहे हैं</string>
-  <string name="log_submit_activity__success">सफलता</string>
-  <string name="log_submit_activity__copy_this_url_and_add_it_to_your_issue">इस URL की प्रतिलिपि बनाएँ और इसे अपनी समस्या रिपोर्ट या समर्थन ईमेल में जोड़ें: \n\n<b>%1$s</b>\n</string>
-  <string name="log_submit_activity__copied_to_clipboard">क्लिपबोर्ड पर कॉपी किया गया है</string>
   <string name="log_submit_activity__choose_email_app">ईमेल ऐप चुनें</string>
   <string name="log_submit_activity__please_review_this_log_from_my_app">कृपया मेरे ऐप %1$s से इस लॉग की समीक्षा करें</string>
   <string name="log_submit_activity__network_failure">नेटवर्क विफलता। कृपया पुन: प्रयास करें।</string>
@@ -1128,6 +1150,7 @@
   <string name="AndroidManifest__invite_friends">मित्रों को आमंत्रित करें</string>
   <string name="AndroidManifest_archived_conversations">संग्रहीत बातचीत</string>
   <string name="AndroidManifest_remove_photo">तस्वीर हटाओ</string>
+  <!--Message Requests Megaphone-->
   <!--arrays.xml-->
   <string name="arrays__import_export">आयात</string>
   <string name="arrays__use_default">डिफ़ॉल्ट का इस्तेमाल करें </string>
@@ -1564,17 +1587,5 @@ Locale: %4$s</string>
   <string name="RegistrationLockDialog_reminder">रिमाइन्डर:</string>
   <string name="recipient_preferences__about">हमारे बारे में</string>
   <string name="Recipient_unknown">अनजान</string>
-  <string name="MessageRequestBottomView_accept">स्वीकृत </string>
-  <string name="MessageRequestBottomView_delete">हटाए </string>
-  <string name="MessageRequestBottomView_block">ब्लॉक</string>
-  <string name="MessageRequestBottomView_do_you_want_to_let">क्या आप %1$s से मेसेज प्राप्त करना चाहते हैं?</string>
-  <string name="MessageRequestProfileView_member_of_one_group">%1$s का सदस्य</string>
-  <string name="MessageRequestProfileView_member_of_two_groups">%1$s और %2$s का सदस्य</string>
-  <string name="MessageRequestProfileView_member_of_many_groups">%1$s, %2$s और %3$s का सदस्य</string>
-  <string name="MessageRequestProfileView_members">%1$d सदस्यों</string>
-  <plurals name="MessageRequestProfileView_member_of_others">
-    <item quantity="one">%d अन्य</item>
-    <item quantity="other">%d अन्य</item>
-  </plurals>
   <!--EOF-->
 </resources>
