--- a/app/src/main/res/values-hu/strings.xml
+++ b/app/src/main/res/values-hu/strings.xml
@@ -205,6 +205,22 @@
   <string name="ConversationActivity_no_results">Nincs találat</string>
   <string name="ConversationActivity_sticker_pack_installed">Matricacsomag telepítve</string>
   <string name="ConversationActivity_new_say_it_with_stickers">Új! Fejezd el matricákkal</string>
+  <string name="ConversationActivity_block_s">Letiltod %1$s-t?</string>
+  <string name="ConversationActivity_block_and_leave_s">%1$s letiltása és kilépés?</string>
+  <string name="ConversationActivity_unblock_s">Feloldod %1$s tiltását?</string>
+  <string name="ConversationActivity_you_will_be_able_to_message_and_call_each_other">Újra fogadhatsz üzeneteket és hívásokat ettől a kontakttól.</string>
+  <string name="ConversationActivity_group_members_will_be_able_to_add_you_to_this_group_again">A tagok ezután újra hozzáadhatnak majd a csoporthoz.</string>
+  <string name="ConversationActivity_blocked_people_will_not_be_able_to_call_you_or_send_you_messages">A letiltott felhasználók nem tudna sem felhívni, sem pedig üzenetet küldeni neked.</string>
+  <string name="ConversationActivity_you_will_leave_this_group_and_no_longer_receive_messages_or_updates">A csoport elhagyásával többé nem kapsz onnan sem üzeneteket sem frissítéseket.</string>
+  <string name="ConversationActivity_block">Letiltás</string>
+  <string name="ConversationActivity_block_and_delete">Letiltás és törlés</string>
+  <string name="ConversationActivity_cancel">Mégse</string>
+  <string name="ConversationActivity_delete_conversation">Beszélgetés törlése?</string>
+  <string name="ConversationActivity_delete_and_leave_group">Csoport törlése és elhagyása?</string>
+  <string name="ConversationActivity_this_conversation_will_be_deleted_from_all_of_your_devices">A beszélgetés az összes társított eszközödön törölve lesz.</string>
+  <string name="ConversationActivity_you_will_leave_this_group_and_it_will_be_deleted_from_all_of_your_devices">Ha kilépsz a csoportból, akkor a csoport a többi társított eszközödön is törölve lesz.</string>
+  <string name="ConversationActivity_delete">Törlés</string>
+  <string name="ConversationActivity_delete_and_leave">Törlés és kilépés</string>
   <!--ConversationAdapter-->
   <plurals name="ConversationAdapter_n_unread_messages">
     <item quantity="one">%d olvasatlan üzenet</item>
@@ -250,6 +266,7 @@
   <string name="ConversationFragment_you_can_swipe_to_the_left_reply">Az üzenetet balra húzva gyorsan válaszolhatsz rá</string>
   <string name="ConversationFragment_outgoing_view_once_media_files_are_automatically_removed">A kimenő egyszer megjelenő médiafájlokat automatikusan töröljük feladásukat követően</string>
   <string name="ConversationFragment_you_already_viewed_this_message">Ezt az üzenetet egyszer már megtekintetted</string>
+  <string name="ConversationFragment__you_can_add_notes_for_yourself_in_this_conversation">Ebben a beszélgetésben magadnak hagyhatsz jegyzeteket, Ha a fiókodat más, társított eszközökkel is használod, a jegyzetek azokra is átszinkronizálásra kerülnek.</string>
   <!--ConversationListActivity-->
   <string name="ConversationListActivity_there_is_no_browser_installed_on_your_device">Nincs böngésző telepítve a készülékedre.</string>
   <!--ConversationListFragment-->
@@ -273,6 +290,8 @@
     <item quantity="one">Beszélgetés áthelyezve a bejövőbe</item>
     <item quantity="other">%d db beszélgetés áthelyezve a bejövő üzenetek közé</item>
   </plurals>
+  <string name="ConversationListFragment__your_profile_name_has_been_created">Profilneved létrejött.</string>
+  <string name="ConversationListFragment__your_profile_name_has_been_saved">Profilneved mentésre került.</string>
   <!--ConversationListItem-->
   <string name="ConversationListItem_key_exchange_message">Kulcs-csere üzenet</string>
   <!--ConversationListItemAction-->
@@ -381,7 +400,7 @@
   <string name="GroupShareProfileView_do_you_want_to_make_your_profile_name_and_photo_visible_to_all_current_and_future_members_of_this_group">Szeretnéd láthatóvá tenni profilneved- és képed a csoport összes jelenlegi és jövőbeli tagja számára?</string>
   <string name="GroupShareProfileView_make_visible">Láthatóvá tétel</string>
   <!--GroupMembersDialog-->
-  <string name="GroupMembersDialog_me">Én</string>
+  <string name="GroupMembersDialog_you">Te</string>
   <!--CropImageActivity-->
   <string name="CropImageActivity_group_avatar">Csoport avatar</string>
   <string name="CropImageActivity_profile_avatar">Avatar</string>
@@ -525,6 +544,26 @@
   <string name="MessageRecord_you_marked_your_safety_number_with_s_verified_from_another_device">Biztonsági számodat egy másik eszközről megerősítetlennek jelölted %s nevű partnereddel</string>
   <string name="MessageRecord_you_marked_your_safety_number_with_s_unverified">Biztonsági számodat megerősítetlennek jelölted a %s nevű partnereddel</string>
   <string name="MessageRecord_you_marked_your_safety_number_with_s_unverified_from_another_device">Biztonsági számodat egy másik készülékről megerősítetlennek jelölted %s nevű partnereddel</string>
+  <!--MessageRequestBottomView-->
+  <string name="MessageRequestBottomView_accept">Elfogadás</string>
+  <string name="MessageRequestBottomView_delete">Törlés</string>
+  <string name="MessageRequestBottomView_block">Letiltás</string>
+  <string name="MessageRequestBottomView_unblock">Tiltás feloldása</string>
+  <string name="MessageRequestBottomView_do_you_want_to_let_s_message_you_they_wont_know_youve_seen_their_messages_until_you_accept">Engedélyezed, hogy %1$s üzenetet küldjön számodra? Amíg ebbe bele nem egyezel, addig nem értesül arról sem, hogy elolvastad-e az üzeneteit.</string>
+  <string name="MessageRequestBottomView_do_you_want_to_join_the_group_s_they_wont_know_youve_seen_their_messages_until_you_accept">Szeretnél csatlakozni a(z) %1$s csoporthoz? Amíg ebbe bele nem egyezel, addig nem értesülnek arról sem, hogy elolvastad-e üzeneteiket.</string>
+  <string name="MessageRequestBottomView_unblock_s_to_message_and_call_each_other">Oldd fel %1$s tiltását, hogy üzenhessetek egymásnak és hívhassátok egymást.</string>
+  <string name="MessageRequestBottomView_unblock_to_allow_group_members_to_add_you_to_this_group_again">Oldd fel a tiltást, hogy a csoport tagjai újra hozzáadhassanak a csoporthoz.</string>
+  <string name="MessageRequestProfileView_member_of_one_group">%1$s tagja</string>
+  <string name="MessageRequestProfileView_member_of_two_groups">%1$s és %2$s tagja</string>
+  <string name="MessageRequestProfileView_member_of_many_groups">%1$s, %2$s és %3$s tagja</string>
+  <plurals name="MessageRequestProfileView_members">
+    <item quantity="one">%1$d tag</item>
+    <item quantity="other">%1$d tag</item>
+  </plurals>
+  <plurals name="MessageRequestProfileView_member_of_others">
+    <item quantity="one">%d további</item>
+    <item quantity="other">%d további</item>
+  </plurals>
   <!--PassphraseChangeActivity-->
   <string name="PassphraseChangeActivity_passphrases_dont_match_exclamation">A jelmondatok nem egyeznek!</string>
   <string name="PassphraseChangeActivity_incorrect_old_passphrase_exclamation">Hibás régi jelmondat!</string>
@@ -579,6 +618,8 @@ Kérlek telepítsd újra a Google Play Szolgáltatásokat, majd próbáld újra!
   <string name="ReactionsBottomSheetDialogFragment_all">Összes %1$d</string>
   <!--ReactionsConversationView-->
   <string name="ReactionsConversationView_plus">+%1$d</string>
+  <!--ReactionsRecipientAdapter-->
+  <string name="ReactionsRecipientAdapter_you">Te</string>
   <!--RecipientPreferencesActivity-->
   <string name="RecipientPreferenceActivity_block_this_contact_question">Blokkolod ezt a kontaktot?</string>
   <string name="RecipientPreferenceActivity_you_will_no_longer_receive_messages_and_calls_from_this_contact">Többé nem kapsz üzeneteket és hívásokat ettől a kontakttól.</string>
@@ -712,6 +753,17 @@ Kulcs-csere üzenet érkezett érvénytelen protokoll verzióhoz.
   <string name="StickerPackPreviewActivity_remove">Eltávolítás</string>
   <string name="StickerPackPreviewActivity_stickers">Matricák</string>
   <string name="StickerPackPreviewActivity_failed_to_load_sticker_pack">Nem sikerült betölteni a matricacsomagot</string>
+  <!--SubmitDebugLogActivity-->
+  <string name="SubmitDebugLogActivity_edit">Szerkesztés</string>
+  <string name="SubmitDebugLogActivity_done">Kész</string>
+  <string name="SubmitDebugLogActivity_tap_a_line_to_delete_it">Koppints egy sorra annak törléséhez</string>
+  <string name="SubmitDebugLogActivity_submit">Küldés</string>
+  <string name="SubmitDebugLogActivity_failed_to_submit_logs">Nem sikerült elküldeni a naplót</string>
+  <string name="SubmitDebugLogActivity_success">Sikerült!</string>
+  <string name="SubmitDebugLogActivity_copy_this_url_and_add_it_to_your_issue">Másold ki ezt a URL-t és illeszd be a hibajegybe vagy a támogatásnak küldött e-mailbe:\n\n<b>%1$s</b></string>
+  <string name="SubmitDebugLogActivity_copied_to_clipboard">Vágólapra másolva</string>
+  <string name="SubmitDebugLogActivity_ok">Ok</string>
+  <string name="SubmitDebugLogActivity_share">Megosztás</string>
   <!--ThreadRecord-->
   <string name="ThreadRecord_group_updated">Csoport frissítve</string>
   <string name="ThreadRecord_left_the_group">Elhagyta a csoportot</string>
@@ -733,6 +785,8 @@ Kulcs-csere üzenet érkezett érvénytelen protokoll verzióhoz.
   <string name="ThreadRecord_you_marked_verified">Megerősítettnek jelölted</string>
   <string name="ThreadRecord_you_marked_unverified">Megerősítetlennek jelölted</string>
   <string name="ThreadRecord_message_could_not_be_processed">Az üzenet nem dolgozható fel</string>
+  <string name="ThreadRecord_message_request">Kezdeményezett beszélgetés</string>
+  <string name="ThreadRecord_s_added_you_to_the_group">%1$s hozzáadott a csoporthoz</string>
   <!--UpdateApkReadyListener-->
   <string name="UpdateApkReadyListener_Signal_update">Signal frissítés</string>
   <string name="UpdateApkReadyListener_a_new_version_of_signal_is_available_tap_to_update">A Signal egy új verziója érhető el, koppints a frissítéshez</string>
@@ -1049,9 +1103,6 @@ Kulcs-csere üzenet érkezett érvénytelen protokoll verzióhoz.
   <string name="log_submit_activity__this_log_will_be_posted_online">Ez a napló nyilvános közlésre kerül az interneten annak érdekében, hogy a fejlesztők megtekinthessék. Küldés előtt szabadon megvizsgálhatod és szerkesztheted.</string>
   <string name="log_submit_activity__loading_logs">Naplók betöltése…</string>
   <string name="log_submit_activity__uploading_logs">Naplók feltöltése…</string>
-  <string name="log_submit_activity__success">Sikerült!</string>
-  <string name="log_submit_activity__copy_this_url_and_add_it_to_your_issue">Tedd vágólapra ezt a URL-t, majd illeszd be hibabejelentésedbe vagy támogatáskérő e-mailedbe:\n\n<b>%1$s</b>\n</string>
-  <string name="log_submit_activity__copied_to_clipboard">Vágólapra másolva</string>
   <string name="log_submit_activity__choose_email_app">E-mail app kiválasztása</string>
   <string name="log_submit_activity__please_review_this_log_from_my_app">Kérlek ellenőrizd az alábbi naplót az alkalmazásból: %1$s</string>
   <string name="log_submit_activity__network_failure">Hálózati hiba. Kérlek próbáld újra!</string>
@@ -1155,6 +1206,13 @@ Kulcs-csere üzenet érkezett érvénytelen protokoll verzióhoz.
   <string name="AndroidManifest__invite_friends">Barátok meghívása</string>
   <string name="AndroidManifest_archived_conversations">Archivált beszélgetések</string>
   <string name="AndroidManifest_remove_photo">Fotó eltávolítása</string>
+  <!--Message Requests Megaphone-->
+  <string name="MessageRequestsMegaphone__message_requests">Felkérés csevegésre</string>
+  <string name="MessageRequestsMegaphone__users_can_now_choose_to_accept">A felhasználók mostantól dönthetnek úgy, hogy a csevegés előtti felkéréseket fogadnak el. A profilnevek alapján kiderül, hogy ki az üzenet küldője.</string>
+  <string name="MessageRequestsMegaphone__add_profile_name">Profilnév létrehozása</string>
+  <string name="MessageRequestsMegaphone__new_message_requests">Új: Felkérés csevegésre</string>
+  <string name="MessageRequestsMegaphone__add_name">Név létrehozása</string>
+  <string name="MessageRequestsMegaphone__you_can_now_choose_whether_to_accept">Mostantól minden új beszélgetés előtt eldöntheted, hogy jóváhagyod-e azt. Ehhez a következő új opciók fognak megjelenni: \"Elfogadás\", \"Törlés\" és \"Tiltás\"</string>
   <!--arrays.xml-->
   <string name="arrays__import_export">Importálás</string>
   <string name="arrays__use_default">Alapértelmezett használata</string>
@@ -1254,9 +1312,9 @@ Kulcs-csere üzenet érkezett érvénytelen protokoll verzióhoz.
   <string name="preferences__linked_devices">Társított eszközök</string>
   <string name="preferences__light_theme">Világos</string>
   <string name="preferences__dark_theme">Sötét</string>
-  <string name="preferences__system_theme">Alapbeállítás</string>
   <string name="preferences__appearance">Megjelenés</string>
   <string name="preferences__theme">Téma</string>
+  <string name="preferences__system_default">Alapbeállítás</string>
   <string name="preferences__default">Alapértelmezett</string>
   <string name="preferences__language">Nyelv</string>
   <string name="preferences__signal_messages_and_calls">Signal üzenetek és hívások</string>
@@ -1435,6 +1493,7 @@ Kulcs-csere üzenet érkezett érvénytelen protokoll verzióhoz.
   <string name="InsightsModalFragment__view_insights">Statisztikák megtekintése</string>
   <string name="FirstInviteReminder__title">Meghívás a Signal-ba</string>
   <string name="FirstInviteReminder__description">A titkosítva küldött üzeneteid számát %1$d%%-al növelhetnéd</string>
+  <string name="SecondInviteReminder__title">Pörgesse fel a Signal-ját</string>
   <string name="SecondInviteReminder__description">%1$s meghívása</string>
   <string name="InsightsReminder__view_insights">Statisztikák megtekintése</string>
   <string name="InsightsReminder__invite">Meghívás</string>
@@ -1471,6 +1530,7 @@ Kulcs-csere üzenet érkezett érvénytelen protokoll verzióhoz.
   <string name="KbsSplashFragment__introducing_pins">A PIN kódok bemutatása</string>
   <string name="KbsSplashFragment__pins_add_another_level_of_security_to_your_account">A PIN kódok extra védelmi réteget adnak fiókod védelméhez. Hozz létre egyet most!</string>
   <string name="KbsSplashFragment__learn_more">Tudj meg többet</string>
+  <string name="KbsSplashFragment__learn_more_link">https://support.signal.org/hc/en-us/articles/360007059792-Registration-Lock</string>
   <string name="KbsSplashFragment__registration_lock_equals_pin">Regisztrációs kód = PIN</string>
   <string name="KbsSplashFragment__your_registration_lock_is_now_called_a_pin">A regisztrációs zárat mostantól PIN kódnak hívják, és többet tud. Frissítsd most!</string>
   <string name="KbsSplashFragment__read_more_about_pins">Bővebben a PIN kódokról.</string>
@@ -1488,6 +1548,7 @@ Kulcs-csere üzenet érkezett érvénytelen protokoll verzióhoz.
   <string name="AccountLockedFragment__your_account_has_been_locked_to_protect_your_privacy">Biztonságod és személyes adataid védelme érdekében fiókodat zároltuk. %1$d nap inaktivitást követően újraregisztrálhatod ezt a telefonszámot a PIN kód használata nélkül. Az összes adat törlésre kerül.</string>
   <string name="AccountLockedFragment__next">Tovább</string>
   <string name="AccountLockedFragment__learn_more">Tudj meg többet</string>
+  <string name="AccountLockedFragment__learn_more_url">https://support.signal.org/hc/en-us/articles/360007059792-Registration-Lock</string>
   <!--KbsLockFragment-->
   <string name="RegistrationLockFragment__enter_your_pin">Add meg PIN kódodat</string>
   <string name="RegistrationLockFragment__enter_the_pin_you_created">Gépeld be a fiókodhoz létrehozott PIN kódodat. Ez nem azonos az SMS-ben regisztrációkor kapott ellenőrző kóddal.</string>
@@ -1644,17 +1705,5 @@ Kulcs-csere üzenet érkezett érvénytelen protokoll verzióhoz.
   <string name="RegistrationLockDialog_reminder">Emlékeztető:</string>
   <string name="recipient_preferences__about">Névjegy</string>
   <string name="Recipient_unknown">Ismeretlen</string>
-  <string name="MessageRequestBottomView_accept">Elfogadás</string>
-  <string name="MessageRequestBottomView_delete">Törlés</string>
-  <string name="MessageRequestBottomView_block">Letiltás</string>
-  <string name="MessageRequestBottomView_do_you_want_to_let">Szeretnél üzeneteket kapni %1$s felhasználótól?</string>
-  <string name="MessageRequestProfileView_member_of_one_group">%1$s tagja</string>
-  <string name="MessageRequestProfileView_member_of_two_groups">%1$s és %2$s tagja</string>
-  <string name="MessageRequestProfileView_member_of_many_groups">%1$s, %2$s és %3$s tagja</string>
-  <string name="MessageRequestProfileView_members">%1$d tag</string>
-  <plurals name="MessageRequestProfileView_member_of_others">
-    <item quantity="one">%d további</item>
-    <item quantity="other">%d további</item>
-  </plurals>
   <!--EOF-->
 </resources>
