--- a/app/src/main/res/values-mr/strings.xml
+++ b/app/src/main/res/values-mr/strings.xml
@@ -201,6 +201,9 @@
   <string name="ConversationActivity_no_results">कुठलेही परिणाम नाहीत</string>
   <string name="ConversationActivity_sticker_pack_installed">स्टिकर पॅक स्थापन केले</string>
   <string name="ConversationActivity_new_say_it_with_stickers">नवीन! स्टिकर सोबत बोला</string>
+  <string name="ConversationActivity_block">अवरोधित करा</string>
+  <string name="ConversationActivity_cancel">रद्द करा</string>
+  <string name="ConversationActivity_delete">हटवा</string>
   <!--ConversationAdapter-->
   <plurals name="ConversationAdapter_n_unread_messages">
     <item quantity="one">%d न वाचलेला संदेश</item>
@@ -376,7 +379,7 @@
   <string name="GroupShareProfileView_do_you_want_to_make_your_profile_name_and_photo_visible_to_all_current_and_future_members_of_this_group">या गटाच्या सर्व वर्तमान आणि भविष्यातील सदस्यांसाठी आपले प्रोफाईल नाव आणि फोटो आपल्याला दृश्यमान करायचे?</string>
   <string name="GroupShareProfileView_make_visible">दृश्यमान करा</string>
   <!--GroupMembersDialog-->
-  <string name="GroupMembersDialog_me">मी</string>
+  <string name="GroupMembersDialog_you">आपण</string>
   <!--CropImageActivity-->
   <string name="CropImageActivity_group_avatar">गट अवतार</string>
   <string name="CropImageActivity_profile_avatar">अवतार</string>
@@ -515,6 +518,18 @@
   <string name="MessageRecord_you_marked_your_safety_number_with_s_verified_from_another_device">%s सोबत आपण आपला सुरक्षितता नंबर दुसऱ्या डिव्हाईस वरून सत्यापित म्हणून चिन्हांकित केला आहे</string>
   <string name="MessageRecord_you_marked_your_safety_number_with_s_unverified">%s सोबत आपण आपला सुरक्षितता नंबर असत्यापित म्हणून चिन्हांकित केला आहे</string>
   <string name="MessageRecord_you_marked_your_safety_number_with_s_unverified_from_another_device">%s सोबत आपण आपला सुरक्षितता नंबर दुसऱ्या डिव्हाईस वरून असत्यापित म्हणून चिन्हांकित केला आहे</string>
+  <!--MessageRequestBottomView-->
+  <string name="MessageRequestBottomView_accept">स्वीकारा</string>
+  <string name="MessageRequestBottomView_delete">हटवा</string>
+  <string name="MessageRequestBottomView_block">अवरोधित करा</string>
+  <string name="MessageRequestBottomView_unblock">अनब्लॉक करा</string>
+  <string name="MessageRequestProfileView_member_of_one_group">%1$s चा सदस्य</string>
+  <string name="MessageRequestProfileView_member_of_two_groups">%1$s आणि %2$s चा सदस्य</string>
+  <string name="MessageRequestProfileView_member_of_many_groups">%1$s, %2$s, आणि %3$s चा सदस्य </string>
+  <plurals name="MessageRequestProfileView_member_of_others">
+    <item quantity="one">%d इतर</item>
+    <item quantity="other">%d इतर</item>
+  </plurals>
   <!--PassphraseChangeActivity-->
   <string name="PassphraseChangeActivity_passphrases_dont_match_exclamation">पासफ्रेझ जुळत नाहीत!</string>
   <string name="PassphraseChangeActivity_incorrect_old_passphrase_exclamation">चुकीचे जुने पासफ्रेझ!</string>
@@ -566,6 +581,8 @@
   <string name="RatingManager_whoops_the_play_store_app_does_not_appear_to_be_installed">अरेरे, प्ले स्टोअर अॅप आपल्या डिव्हाईस वर स्थापित केलेले दिसत नाही.</string>
   <!--ReactionsBottomSheetDialogFragment-->
   <!--ReactionsConversationView-->
+  <!--ReactionsRecipientAdapter-->
+  <string name="ReactionsRecipientAdapter_you">आपण</string>
   <!--RecipientPreferencesActivity-->
   <string name="RecipientPreferenceActivity_block_this_contact_question">हा संपर्क अवरोधित करायचा?</string>
   <string name="RecipientPreferenceActivity_you_will_no_longer_receive_messages_and_calls_from_this_contact">आपल्याला यापुढे या संपर्काकडून संदेश आणि कॉल प्राप्त होणार नाहीत.</string>
@@ -691,6 +708,13 @@
   <string name="StickerPackPreviewActivity_remove">काढा</string>
   <string name="StickerPackPreviewActivity_stickers">स्टिकर</string>
   <string name="StickerPackPreviewActivity_failed_to_load_sticker_pack">स्टिकर पॅक लोड करण्यात अयशस्वी</string>
+  <!--SubmitDebugLogActivity-->
+  <string name="SubmitDebugLogActivity_edit">संपादन</string>
+  <string name="SubmitDebugLogActivity_done">ठीक</string>
+  <string name="SubmitDebugLogActivity_submit">सादर करा</string>
+  <string name="SubmitDebugLogActivity_success">यश!</string>
+  <string name="SubmitDebugLogActivity_copied_to_clipboard">क्लिपबोर्ड वर कॉपी केले</string>
+  <string name="SubmitDebugLogActivity_share">सामायिक करा</string>
   <!--ThreadRecord-->
   <string name="ThreadRecord_group_updated">गट अद्यतनित</string>
   <string name="ThreadRecord_left_the_group">गट सोडले</string>
@@ -712,6 +736,7 @@
   <string name="ThreadRecord_you_marked_verified">आपण सत्यापित म्हणून चिन्हांकित केले</string>
   <string name="ThreadRecord_you_marked_unverified">आपण असत्यापित म्हणून चिन्हांकित केले</string>
   <string name="ThreadRecord_message_could_not_be_processed">संदेशावर प्रक्रिया होऊ शकली नाही</string>
+  <string name="ThreadRecord_message_request">संदेश विनंती</string>
   <!--UpdateApkReadyListener-->
   <string name="UpdateApkReadyListener_Signal_update">Signal अद्यतन</string>
   <string name="UpdateApkReadyListener_a_new_version_of_signal_is_available_tap_to_update">Signal ची एक नवीन आवृत्ती उपलब्ध आहे, अद्ययावत करण्यासाठी टॅप करा</string>
@@ -1027,9 +1052,6 @@
   <string name="log_submit_activity__this_log_will_be_posted_online">अंशदात्यांनी बघण्यासाठी हा लॉग सार्वजनिकरीत्या ऑनलाईन पोस्ट केला जाईल, आपण प्रविष्ट करण्यापूर्वी त्यास तपासू आणि संपादित करू शकता.</string>
   <string name="log_submit_activity__loading_logs">लॉग लोड करत आहे…</string>
   <string name="log_submit_activity__uploading_logs">लॉग अपलोड करत आहे…</string>
-  <string name="log_submit_activity__success">यश!</string>
-  <string name="log_submit_activity__copy_this_url_and_add_it_to_your_issue">ही URL कॉपी करा आणि आपल्या समस्याअहवालात किंवा समर्थन ईमेल मध्ये जोडा:\n\n<b>%1$s</b>\n</string>
-  <string name="log_submit_activity__copied_to_clipboard">क्लिपबोर्ड वर कॉपी केले</string>
   <string name="log_submit_activity__choose_email_app">ईमेल अॅप निवडा</string>
   <string name="log_submit_activity__please_review_this_log_from_my_app">माझ्या अॅपमध्ये कृपया ह्या लॉगचे पुनरावलोकन करा:%1$s</string>
   <string name="log_submit_activity__network_failure">नेटवर्क अपयश. कृपया पुन्हा प्रयत्न करा.</string>
@@ -1133,6 +1155,7 @@
   <string name="AndroidManifest__invite_friends">मित्रांना आमंत्रित करा</string>
   <string name="AndroidManifest_archived_conversations">आर्काईव्ह केलेले संभाषण</string>
   <string name="AndroidManifest_remove_photo">फोटो काढा</string>
+  <!--Message Requests Megaphone-->
   <!--arrays.xml-->
   <string name="arrays__import_export">आयात</string>
   <string name="arrays__use_default">पूर्वनिर्धारित वापरा</string>
@@ -1565,17 +1588,5 @@
   <string name="RegistrationLockDialog_reminder">स्मरणपत्र:</string>
   <string name="recipient_preferences__about">याबद्दल</string>
   <string name="Recipient_unknown">अज्ञात</string>
-  <string name="MessageRequestBottomView_accept">स्वीकारा</string>
-  <string name="MessageRequestBottomView_delete">हटवा</string>
-  <string name="MessageRequestBottomView_block">अवरोधित करा</string>
-  <string name="MessageRequestBottomView_do_you_want_to_let">%1$s कडून आपण संदेश प्राप्त करू इच्छिता?</string>
-  <string name="MessageRequestProfileView_member_of_one_group">%1$s चा सदस्य</string>
-  <string name="MessageRequestProfileView_member_of_two_groups">%1$s आणि %2$s चा सदस्य</string>
-  <string name="MessageRequestProfileView_member_of_many_groups">%1$s, %2$s, आणि %3$s चा सदस्य </string>
-  <string name="MessageRequestProfileView_members">%1$d सदस्य</string>
-  <plurals name="MessageRequestProfileView_member_of_others">
-    <item quantity="one">%d इतर</item>
-    <item quantity="other">%d इतर</item>
-  </plurals>
   <!--EOF-->
 </resources>
