--- a/app/src/main/res/values-ms/strings.xml
+++ b/app/src/main/res/values-ms/strings.xml
@@ -195,6 +195,9 @@
   <string name="ConversationActivity_no_results">Tiada keputusan</string>
   <string name="ConversationActivity_sticker_pack_installed">Pek pelekat dipasang</string>
   <string name="ConversationActivity_new_say_it_with_stickers">Baru! Katakan dengan pelekat</string>
+  <string name="ConversationActivity_block">Sekat</string>
+  <string name="ConversationActivity_cancel">Batal</string>
+  <string name="ConversationActivity_delete">Padam</string>
   <!--ConversationAdapter-->
   <plurals name="ConversationAdapter_n_unread_messages">
     <item quantity="other">%d mesej yang belum dibaca</item>
@@ -356,7 +359,7 @@
   <string name="GroupShareProfileView_do_you_want_to_make_your_profile_name_and_photo_visible_to_all_current_and_future_members_of_this_group">Adakah anda mahu nama dan foto profil anda dilihat oleh semua ahli semasa dan masa depan dalam kumpulan ini?</string>
   <string name="GroupShareProfileView_make_visible">Buat boleh dilihat</string>
   <!--GroupMembersDialog-->
-  <string name="GroupMembersDialog_me">Saya</string>
+  <string name="GroupMembersDialog_you">Anda</string>
   <!--CropImageActivity-->
   <string name="CropImageActivity_group_avatar">Avatar kumpulan</string>
   <string name="CropImageActivity_profile_avatar">Avatar</string>
@@ -458,6 +461,11 @@
   <string name="MessageRecord_you_marked_your_safety_number_with_s_verified_from_another_device">Anda telah menandakan sah kepada nombor keselamatan anda dengan %s daripada peranti lain</string>
   <string name="MessageRecord_you_marked_your_safety_number_with_s_unverified">Anda telah menandakan tak sah kepada nombor keselamatan anda dengan %s </string>
   <string name="MessageRecord_you_marked_your_safety_number_with_s_unverified_from_another_device">Anda telah menandakan tak sah kepada nombor keselamatan anda dengan %s daripada peranti lain</string>
+  <!--MessageRequestBottomView-->
+  <string name="MessageRequestBottomView_accept">Terima</string>
+  <string name="MessageRequestBottomView_delete">Padam</string>
+  <string name="MessageRequestBottomView_block">Sekat</string>
+  <string name="MessageRequestBottomView_unblock">Nyahsekat</string>
   <!--PassphraseChangeActivity-->
   <string name="PassphraseChangeActivity_passphrases_dont_match_exclamation">Frasa laluan tidak sepadan!</string>
   <string name="PassphraseChangeActivity_incorrect_old_passphrase_exclamation">Frasa laluan lama tidak tepat!</string>
@@ -508,6 +516,8 @@
   <string name="RatingManager_whoops_the_play_store_app_does_not_appear_to_be_installed">Whoops, aplikasi Play Store tidak kelihatan dipasang pada peranti anda.</string>
   <!--ReactionsBottomSheetDialogFragment-->
   <!--ReactionsConversationView-->
+  <!--ReactionsRecipientAdapter-->
+  <string name="ReactionsRecipientAdapter_you">Anda</string>
   <!--RecipientPreferencesActivity-->
   <string name="RecipientPreferenceActivity_block_this_contact_question">Sekat kenalan ini?</string>
   <string name="RecipientPreferenceActivity_you_will_no_longer_receive_messages_and_calls_from_this_contact">Anda tidak akan menerima mesej dan panggilan daripada kenalan ini.</string>
@@ -622,6 +632,13 @@ Menerima mesej pertukaran kunci untuk versi protokol yang tidak sah.</string>
   <string name="StickerPackPreviewActivity_remove">Alih keluar</string>
   <string name="StickerPackPreviewActivity_stickers">Pelekat</string>
   <string name="StickerPackPreviewActivity_failed_to_load_sticker_pack">Gagal memuatkan pek pelekat</string>
+  <!--SubmitDebugLogActivity-->
+  <string name="SubmitDebugLogActivity_edit">Edit</string>
+  <string name="SubmitDebugLogActivity_done">Selesai</string>
+  <string name="SubmitDebugLogActivity_submit">Hantar</string>
+  <string name="SubmitDebugLogActivity_success">Berjaya!</string>
+  <string name="SubmitDebugLogActivity_copied_to_clipboard">Disalin ke papan klip</string>
+  <string name="SubmitDebugLogActivity_share">Kongsi</string>
   <!--ThreadRecord-->
   <string name="ThreadRecord_group_updated">Kumpulan dikemas kini</string>
   <string name="ThreadRecord_left_the_group">Meninggalkan kumpulan</string>
@@ -640,6 +657,7 @@ Menerima mesej pertukaran kunci untuk versi protokol yang tidak sah.</string>
   <string name="ThreadRecord_you_marked_verified">Anda menanda disahkan</string>
   <string name="ThreadRecord_you_marked_unverified">Anda menanda tidak disahkan</string>
   <string name="ThreadRecord_message_could_not_be_processed">Mesej tidak dapat diproses</string>
+  <string name="ThreadRecord_message_request">Permintaan Mesej</string>
   <!--UpdateApkReadyListener-->
   <string name="UpdateApkReadyListener_Signal_update">Kemas kini Signal</string>
   <string name="UpdateApkReadyListener_a_new_version_of_signal_is_available_tap_to_update">Versi baru Signal tersedia, ketik untuk kemas kini</string>
@@ -920,9 +938,6 @@ Menerima mesej pertukaran kunci untuk versi protokol yang tidak sah.</string>
   <string name="log_submit_activity__this_log_will_be_posted_online">Log ini akan dihantarskan secara terbuka dalam talian untuk penyumbang lihat, anda boleh memeriksa dan mengeditnya sebelum menghantar.</string>
   <string name="log_submit_activity__loading_logs">Memuatkan log…</string>
   <string name="log_submit_activity__uploading_logs">Memuat naik log-log…</string>
-  <string name="log_submit_activity__success">Berjaya!</string>
-  <string name="log_submit_activity__copy_this_url_and_add_it_to_your_issue">Salin URL ini dan tambahnya kepada laporan isu atau e-mel sokongan:\n\n <b>%1$s</b>\n</string>
-  <string name="log_submit_activity__copied_to_clipboard">Salin ke papan klip</string>
   <string name="log_submit_activity__choose_email_app">Memilih aplikasi e-mel</string>
   <string name="log_submit_activity__please_review_this_log_from_my_app">Sila menyemak semula log ini daripada aplikasi saya: %1$s</string>
   <string name="log_submit_activity__network_failure">Kegagalan rangkaian. Sila cuba lagi.</string>
@@ -1022,6 +1037,7 @@ Menerima mesej pertukaran kunci untuk versi protokol yang tidak sah.</string>
   <string name="AndroidManifest__invite_friends">Jemput rakan</string>
   <string name="AndroidManifest_archived_conversations">Perbualan diarkib</string>
   <string name="AndroidManifest_remove_photo">Keluarkan foto</string>
+  <!--Message Requests Megaphone-->
   <!--arrays.xml-->
   <string name="arrays__import_export">Import</string>
   <string name="arrays__use_default">Gunakan lalai</string>
@@ -1407,8 +1423,5 @@ Menerima mesej pertukaran kunci untuk versi protokol yang tidak sah.</string>
   <string name="RegistrationLockDialog_reminder">Peringatan:</string>
   <string name="recipient_preferences__about">Perihal</string>
   <string name="Recipient_unknown">Tidak diketahui</string>
-  <string name="MessageRequestBottomView_accept">Terima</string>
-  <string name="MessageRequestBottomView_delete">Padam</string>
-  <string name="MessageRequestBottomView_block">Sekat</string>
   <!--EOF-->
 </resources>
