--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -210,6 +210,22 @@
   <string name="ConversationActivity_no_results">Brak wyników</string>
   <string name="ConversationActivity_sticker_pack_installed">Zainstalowano pakiet naklejek</string>
   <string name="ConversationActivity_new_say_it_with_stickers">Nowość! Wyraź to za pomocą naklejek</string>
+  <string name="ConversationActivity_block_s">Zablokować %1$s?</string>
+  <string name="ConversationActivity_block_and_leave_s">Zablokować i opuścić %1$s?</string>
+  <string name="ConversationActivity_unblock_s">Odblokować %1$s?</string>
+  <string name="ConversationActivity_you_will_be_able_to_message_and_call_each_other">Będziecie w stanie wysyłać wiadomości i wykonywać połączenia do siebie nawzajem.</string>
+  <string name="ConversationActivity_group_members_will_be_able_to_add_you_to_this_group_again">Członkowie grupy będą mogli ponownie dodać Cię do grupy.</string>
+  <string name="ConversationActivity_blocked_people_will_not_be_able_to_call_you_or_send_you_messages">Zablokowane osoby nie będą mogły do Ciebie dzwonić ani wysyłać Ci wiadomości.</string>
+  <string name="ConversationActivity_you_will_leave_this_group_and_no_longer_receive_messages_or_updates">Opuścisz tę grupę i nie będziesz już otrzymywać z niej wiadomości ani aktualizacji.</string>
+  <string name="ConversationActivity_block">Zablokuj</string>
+  <string name="ConversationActivity_block_and_delete">Zablokuj i usuń</string>
+  <string name="ConversationActivity_cancel">Anuluj</string>
+  <string name="ConversationActivity_delete_conversation">Usunąć konwersację?</string>
+  <string name="ConversationActivity_delete_and_leave_group">Usunąć i opuścić grupę? </string>
+  <string name="ConversationActivity_this_conversation_will_be_deleted_from_all_of_your_devices">Ta konwersacja zostanie usunięta ze wszystkich Twoich urządzeń.</string>
+  <string name="ConversationActivity_you_will_leave_this_group_and_it_will_be_deleted_from_all_of_your_devices">Opuścisz tę grupę i zostanie ona usunięta ze wszystkich Twoich urządzeń.</string>
+  <string name="ConversationActivity_delete">Usuń</string>
+  <string name="ConversationActivity_delete_and_leave">Usuń i opuść</string>
   <!--ConversationAdapter-->
   <plurals name="ConversationAdapter_n_unread_messages">
     <item quantity="one">%d nieprzeczytana wiadomość</item>
@@ -269,6 +285,7 @@
   <string name="ConversationFragment_you_can_swipe_to_the_left_reply">Możesz przesunąć wiadomość w lewo, by szybko odpowiedzieć.</string>
   <string name="ConversationFragment_outgoing_view_once_media_files_are_automatically_removed">Wychodzące wiadomości jednorazowe są automatycznie usuwane po wysłaniu</string>
   <string name="ConversationFragment_you_already_viewed_this_message">Już widziałeś(aś) tę wiadomość</string>
+  <string name="ConversationFragment__you_can_add_notes_for_yourself_in_this_conversation">W tej konwersacji możesz dodawać swoje notatki. Jeśli z Twoim kontem są połączone jakieś urządzenia, nowe notatki zostaną zsynchronizowane.</string>
   <!--ConversationListActivity-->
   <string name="ConversationListActivity_there_is_no_browser_installed_on_your_device">Twoje urządzenie nie ma zainstalowanej przeglądarki.</string>
   <!--ConversationListFragment-->
@@ -300,6 +317,8 @@
     <item quantity="many">Przeniesiono %d konwersacji do skrzynki odbiorczej</item>
     <item quantity="other">Przeniesiono %d konwersacji do skrzynki odbiorczej</item>
   </plurals>
+  <string name="ConversationListFragment__your_profile_name_has_been_created">Nazwa Twojego profilu została utworzona.</string>
+  <string name="ConversationListFragment__your_profile_name_has_been_saved">Nazwa Twojego profilu została zapisana.</string>
   <!--ConversationListItem-->
   <string name="ConversationListItem_key_exchange_message">Wiadomość wymiany kluczy</string>
   <!--ConversationListItemAction-->
@@ -408,7 +427,7 @@
   <string name="GroupShareProfileView_do_you_want_to_make_your_profile_name_and_photo_visible_to_all_current_and_future_members_of_this_group">Czy chcesz, aby Twoja nazwa i zdjęcie profilowe były widoczne dla wszystkich obecnych i przyszłych członków tej grupy?</string>
   <string name="GroupShareProfileView_make_visible">Ustaw widocznym</string>
   <!--GroupMembersDialog-->
-  <string name="GroupMembersDialog_me">Ja</string>
+  <string name="GroupMembersDialog_you">Ty</string>
   <!--CropImageActivity-->
   <string name="CropImageActivity_group_avatar">Avatar grupy</string>
   <string name="CropImageActivity_profile_avatar">Awatar</string>
@@ -566,6 +585,30 @@
   <string name="MessageRecord_you_marked_your_safety_number_with_s_verified_from_another_device">Oznaczyłeś(aś) numer bezpieczeństwa z %s jako zweryfikowany na innym urządzeniu</string>
   <string name="MessageRecord_you_marked_your_safety_number_with_s_unverified">Oznaczyłeś(aś) numer bezpieczeństwa z %s jako niezweryfikowany</string>
   <string name="MessageRecord_you_marked_your_safety_number_with_s_unverified_from_another_device">Oznaczyłeś(aś) numer bezpieczeństwa z %s jako niezweryfikowany na innym urządzeniu</string>
+  <!--MessageRequestBottomView-->
+  <string name="MessageRequestBottomView_accept">Akceptuj</string>
+  <string name="MessageRequestBottomView_delete">Usuń</string>
+  <string name="MessageRequestBottomView_block">Zablokuj</string>
+  <string name="MessageRequestBottomView_unblock">Odblokuj</string>
+  <string name="MessageRequestBottomView_do_you_want_to_let_s_message_you_they_wont_know_youve_seen_their_messages_until_you_accept">Czy chcesz pozwolić by %1$s pisał(a) do Ciebie wiadomości? Twój kontakt nie będzie wiedzieć, że przeczytałeś(aś) jego wiadomość, dopóki nie zaakceptujesz.</string>
+  <string name="MessageRequestBottomView_do_you_want_to_join_the_group_s_they_wont_know_youve_seen_their_messages_until_you_accept">Czy chcesz dołączyć do grupy %1$s? Członkowie grupy nie będą wiedzieć, że przeczytałeś(aś) ich wiadomość, dopóki nie zaakceptujesz.</string>
+  <string name="MessageRequestBottomView_unblock_s_to_message_and_call_each_other">Odblokuj %1$s, abyście mogli wysyłać wiadomości i wykonywać połączenia do siebie nawzajem.</string>
+  <string name="MessageRequestBottomView_unblock_to_allow_group_members_to_add_you_to_this_group_again">Odblokuj, aby umożliwić członkom grupy, ponowne dodanie Cię do tej grupy.</string>
+  <string name="MessageRequestProfileView_member_of_one_group">Członek %1$s</string>
+  <string name="MessageRequestProfileView_member_of_two_groups">Członek %1$s i %2$s</string>
+  <string name="MessageRequestProfileView_member_of_many_groups">Członek %1$s, %2$s i %3$s</string>
+  <plurals name="MessageRequestProfileView_members">
+    <item quantity="one">%1$d użytkownik</item>
+    <item quantity="few">%1$d użytkowników</item>
+    <item quantity="many">%1$d użytkowników</item>
+    <item quantity="other">%1$d użytkowników</item>
+  </plurals>
+  <plurals name="MessageRequestProfileView_member_of_others">
+    <item quantity="one">%d inna</item>
+    <item quantity="few">%d inne</item>
+    <item quantity="many">%d innych</item>
+    <item quantity="other">%d inne</item>
+  </plurals>
   <!--PassphraseChangeActivity-->
   <string name="PassphraseChangeActivity_passphrases_dont_match_exclamation">Hasło niezgodne!</string>
   <string name="PassphraseChangeActivity_incorrect_old_passphrase_exclamation">Nieprawidłowe stare hasło!</string>
@@ -618,6 +661,8 @@
   <string name="ReactionsBottomSheetDialogFragment_all">Wszystkie %1$d</string>
   <!--ReactionsConversationView-->
   <string name="ReactionsConversationView_plus">+%1$d</string>
+  <!--ReactionsRecipientAdapter-->
+  <string name="ReactionsRecipientAdapter_you">Ty</string>
   <!--RecipientPreferencesActivity-->
   <string name="RecipientPreferenceActivity_block_this_contact_question">Zablokować ten kontakt?</string>
   <string name="RecipientPreferenceActivity_you_will_no_longer_receive_messages_and_calls_from_this_contact">Nie będziesz mógł(a) odbierać wiadomości i połączeń od tego kontaktu.</string>
@@ -746,6 +791,17 @@ Otrzymano wiadomość wymiany klucz dla niepoprawnej wersji protokołu.</string>
   <string name="StickerPackPreviewActivity_remove">Usuń</string>
   <string name="StickerPackPreviewActivity_stickers">Naklejki</string>
   <string name="StickerPackPreviewActivity_failed_to_load_sticker_pack">Nie udało się załadować pakietu naklejek</string>
+  <!--SubmitDebugLogActivity-->
+  <string name="SubmitDebugLogActivity_edit">Edytuj</string>
+  <string name="SubmitDebugLogActivity_done">Gotowe</string>
+  <string name="SubmitDebugLogActivity_tap_a_line_to_delete_it">Stuknij linię, aby ją usunąć</string>
+  <string name="SubmitDebugLogActivity_submit">Wyślij</string>
+  <string name="SubmitDebugLogActivity_failed_to_submit_logs">Nie udało się wysłać logów</string>
+  <string name="SubmitDebugLogActivity_success">Sukces!</string>
+  <string name="SubmitDebugLogActivity_copy_this_url_and_add_it_to_your_issue">Skopiuj ten URL i dodaj go do Twojego raportu o błędzie lub wiadomości e-mail:\n\n<b>%1$s</b></string>
+  <string name="SubmitDebugLogActivity_copied_to_clipboard">Skopiowano do schowka</string>
+  <string name="SubmitDebugLogActivity_ok">Ok</string>
+  <string name="SubmitDebugLogActivity_share">Udostępnij</string>
   <!--ThreadRecord-->
   <string name="ThreadRecord_group_updated">Grupa zaktualizowana</string>
   <string name="ThreadRecord_left_the_group">Opuścił(a) grupę</string>
@@ -767,6 +823,8 @@ Otrzymano wiadomość wymiany klucz dla niepoprawnej wersji protokołu.</string>
   <string name="ThreadRecord_you_marked_verified">Oznaczyłeś(aś) jako zweryfikowany</string>
   <string name="ThreadRecord_you_marked_unverified">Oznaczyłeś(aś) jako niezweryfikowany</string>
   <string name="ThreadRecord_message_could_not_be_processed">Wiadomość nie mogła zostać przetworzona</string>
+  <string name="ThreadRecord_message_request">Prośba o kontakt</string>
+  <string name="ThreadRecord_s_added_you_to_the_group">%1$s dodał(a) Cię do grupy</string>
   <!--UpdateApkReadyListener-->
   <string name="UpdateApkReadyListener_Signal_update">Aktualizacja Signal</string>
   <string name="UpdateApkReadyListener_a_new_version_of_signal_is_available_tap_to_update">Dostępna jest nowa wersja Signal. Dotknij, aby zaktualizować</string>
@@ -1096,9 +1154,6 @@ Otrzymano wiadomość wymiany klucz dla niepoprawnej wersji protokołu.</string>
   <string name="log_submit_activity__this_log_will_be_posted_online">Ten log zostanie opublikowany publicznie online, aby umożliwić współtwórcą jego sprawdzenie. Możesz go przejrzeć i edytować przed przesłaniem.</string>
   <string name="log_submit_activity__loading_logs">Wczytywanie logów…</string>
   <string name="log_submit_activity__uploading_logs">Przesyłanie logów…</string>
-  <string name="log_submit_activity__success">Sukces!</string>
-  <string name="log_submit_activity__copy_this_url_and_add_it_to_your_issue">Skopiuj ten adres URL i dodaj go do raportu lub do wiadomości e-mail:\n\n<b>%1$s</b>\n</string>
-  <string name="log_submit_activity__copied_to_clipboard">Skopiowane do schowka </string>
   <string name="log_submit_activity__choose_email_app">Wybierz aplikację email</string>
   <string name="log_submit_activity__please_review_this_log_from_my_app">Przejrzyj proszę ten log z mojej aplikacji: %1$s</string>
   <string name="log_submit_activity__network_failure">Błąd sieci. Spróbuj ponownie.</string>
@@ -1204,6 +1259,13 @@ Otrzymano wiadomość wymiany klucz dla niepoprawnej wersji protokołu.</string>
   <string name="AndroidManifest__invite_friends">Zaproś znajomych</string>
   <string name="AndroidManifest_archived_conversations">Archiwum</string>
   <string name="AndroidManifest_remove_photo">Usuń zdjęcie</string>
+  <!--Message Requests Megaphone-->
+  <string name="MessageRequestsMegaphone__message_requests">Prośby o kontakt</string>
+  <string name="MessageRequestsMegaphone__users_can_now_choose_to_accept">Użytkownicy mogą teraz zdecydować czy zaakceptować nową konwersację. Dzięki nazwom profilów ludzie będą wiedzieć, kto się z nimi kontaktuje.</string>
+  <string name="MessageRequestsMegaphone__add_profile_name">Dodaj nazwę profilu</string>
+  <string name="MessageRequestsMegaphone__new_message_requests">Nowość: Prośby o kontakt</string>
+  <string name="MessageRequestsMegaphone__add_name">Dodaj nazwę</string>
+  <string name="MessageRequestsMegaphone__you_can_now_choose_whether_to_accept">Teraz możesz zdecydować czy zaakceptować nową konwersację. Zobaczysz opcje ”Zaakceptuj,“ ”Usuń,“ lub ”Zablokuj.“</string>
   <!--arrays.xml-->
   <string name="arrays__import_export">Import</string>
   <string name="arrays__use_default">Użyj domyślnych</string>
@@ -1305,9 +1367,9 @@ Otrzymano wiadomość wymiany klucz dla niepoprawnej wersji protokołu.</string>
   <string name="preferences__linked_devices">Połączone urządzenia</string>
   <string name="preferences__light_theme">Jasny</string>
   <string name="preferences__dark_theme">Ciemny</string>
-  <string name="preferences__system_theme">Domyślne systemu</string>
   <string name="preferences__appearance">Wygląd</string>
   <string name="preferences__theme">Motyw</string>
+  <string name="preferences__system_default">Domyślny systemu</string>
   <string name="preferences__default">Domyślne</string>
   <string name="preferences__language">Język</string>
   <string name="preferences__signal_messages_and_calls">Wiadomości i połączenia Signal</string>
@@ -1717,19 +1779,5 @@ Otrzymano wiadomość wymiany klucz dla niepoprawnej wersji protokołu.</string>
   <string name="RegistrationLockDialog_reminder">Przypomnienie:</string>
   <string name="recipient_preferences__about">O mnie</string>
   <string name="Recipient_unknown">Nieznany</string>
-  <string name="MessageRequestBottomView_accept">Akceptuj</string>
-  <string name="MessageRequestBottomView_delete">Usuń</string>
-  <string name="MessageRequestBottomView_block">Zablokuj</string>
-  <string name="MessageRequestBottomView_do_you_want_to_let">Czy chcesz otrzymywać wiadomości od %1$s?</string>
-  <string name="MessageRequestProfileView_member_of_one_group">Członek %1$s</string>
-  <string name="MessageRequestProfileView_member_of_two_groups">Członek %1$s i %2$s</string>
-  <string name="MessageRequestProfileView_member_of_many_groups">Członek %1$s, %2$s i %3$s</string>
-  <string name="MessageRequestProfileView_members">%1$d użytkownik(ów)</string>
-  <plurals name="MessageRequestProfileView_member_of_others">
-    <item quantity="one">%d inna</item>
-    <item quantity="few">%d inne</item>
-    <item quantity="many">%d innych</item>
-    <item quantity="other">%d inne</item>
-  </plurals>
   <!--EOF-->
 </resources>
