--- a/app/src/main/res/values-ro/strings.xml
+++ b/app/src/main/res/values-ro/strings.xml
@@ -207,6 +207,22 @@
   <string name="ConversationActivity_no_results">Niciun rezultat</string>
   <string name="ConversationActivity_sticker_pack_installed">Pachetul cu autocolante este instalat</string>
   <string name="ConversationActivity_new_say_it_with_stickers">Nou! Spune-o cu autocolante</string>
+  <string name="ConversationActivity_block_s">Blochez %1$s?</string>
+  <string name="ConversationActivity_block_and_leave_s">Blocați și părăsiți %1$s?</string>
+  <string name="ConversationActivity_unblock_s">Deblocați %1$s?</string>
+  <string name="ConversationActivity_you_will_be_able_to_message_and_call_each_other">Vei putea să vă trimiteți mesaje și să vă sunați reciproc.</string>
+  <string name="ConversationActivity_group_members_will_be_able_to_add_you_to_this_group_again">Membrii grupului vă vor putea adăuga din nou la acest grup.</string>
+  <string name="ConversationActivity_blocked_people_will_not_be_able_to_call_you_or_send_you_messages">Persoanele blocate nu vor putea să vă sune sau să vă trimită mesaje.</string>
+  <string name="ConversationActivity_you_will_leave_this_group_and_no_longer_receive_messages_or_updates">Veți părăsi acest grup și nu veți mai primi mesaje sau actualizări.</string>
+  <string name="ConversationActivity_block">Blochează</string>
+  <string name="ConversationActivity_block_and_delete">Blocați și ștergeți</string>
+  <string name="ConversationActivity_cancel">Anulați</string>
+  <string name="ConversationActivity_delete_conversation">Șterg conversația?</string>
+  <string name="ConversationActivity_delete_and_leave_group">Ștergeți și părăsiți grupul?</string>
+  <string name="ConversationActivity_this_conversation_will_be_deleted_from_all_of_your_devices">Această conversație o să fie ștearsă de pe toate dispozitivele dvs.</string>
+  <string name="ConversationActivity_you_will_leave_this_group_and_it_will_be_deleted_from_all_of_your_devices">Veți părăsi acest grup și va fi șters de pe toate dispozitivele dvs.</string>
+  <string name="ConversationActivity_delete">Șterge</string>
+  <string name="ConversationActivity_delete_and_leave">Ștergeți și părăsiți</string>
   <!--ConversationAdapter-->
   <plurals name="ConversationAdapter_n_unread_messages">
     <item quantity="one">%d mesaj necitit</item>
@@ -259,6 +275,7 @@
   <string name="ConversationFragment_you_can_swipe_to_the_left_reply">Puteți glisa la stânga pe orice mesaj pentru a răspunde rapid</string>
   <string name="ConversationFragment_outgoing_view_once_media_files_are_automatically_removed">Fișierele trimise de tip media vizibile o singură dată sunt eliminate automat după ce sunt trimise</string>
   <string name="ConversationFragment_you_already_viewed_this_message">Ați văzut deja acest mesaj</string>
+  <string name="ConversationFragment__you_can_add_notes_for_yourself_in_this_conversation">Puteți adăuga note pentru dvs. în această conversație. Dacă contul dvs. are dispozitive asociate, notele noi vor fi sincronizate.</string>
   <!--ConversationListActivity-->
   <string name="ConversationListActivity_there_is_no_browser_installed_on_your_device">Nu aveți nici un browser instalat pe dispozitivul dvs.</string>
   <!--ConversationListFragment-->
@@ -286,6 +303,8 @@
     <item quantity="few">%d conversații au fost mutate în inbox</item>
     <item quantity="other">%d conversații au fost mutate în inbox</item>
   </plurals>
+  <string name="ConversationListFragment__your_profile_name_has_been_created">Numele profilului dvs. a fost creat.</string>
+  <string name="ConversationListFragment__your_profile_name_has_been_saved">Numele profilului dvs. a fost salvat.</string>
   <!--ConversationListItem-->
   <string name="ConversationListItem_key_exchange_message">Mesaj pentru schimbul de chei</string>
   <!--ConversationListItemAction-->
@@ -334,6 +353,7 @@
   <string name="DozeReminder_this_device_does_not_support_play_services_tap_to_disable_system_battery">Acest dispozitiv nu suportă serviciile Play. Apasă pentru a dezactiva optimizarea de sistem a bateriei care împiedică Signal să preia mesajele cât timp este inactivă.</string>
   <!--ShareActivity-->
   <string name="ShareActivity_share_with">Distribuie cu</string>
+  <string name="ShareActivity_multiple_attachments_are_only_supported">Atașamentele multiple sunt suportate doar pentru imagini și videouri</string>
   <!--ExperienceUpgradeActivity-->
   <string name="ExperienceUpgradeActivity_welcome_to_signal_dgaf">Bine ați venit pe Signal.</string>
   <string name="ExperienceUpgradeActivity_textsecure_is_now_called_signal">TextSecure și RedPhone sunt acum un singur mesager privat pentru orice situație: Signal.</string>
@@ -393,7 +413,7 @@
   <string name="GroupShareProfileView_do_you_want_to_make_your_profile_name_and_photo_visible_to_all_current_and_future_members_of_this_group">Vrei să faci numele și poza profilului tău vizibile pentru toți membrii actuali și viitori ai acestui grup?</string>
   <string name="GroupShareProfileView_make_visible">Faceți vizibil</string>
   <!--GroupMembersDialog-->
-  <string name="GroupMembersDialog_me">Eu</string>
+  <string name="GroupMembersDialog_you">Tu</string>
   <!--CropImageActivity-->
   <string name="CropImageActivity_group_avatar">Avatar de grup</string>
   <string name="CropImageActivity_profile_avatar">Avatar</string>
@@ -544,6 +564,28 @@
   <string name="MessageRecord_you_marked_your_safety_number_with_s_verified_from_another_device">Ați marcat numărul tău de siguranță cu %s ca și verificat de pe alt dispozitiv</string>
   <string name="MessageRecord_you_marked_your_safety_number_with_s_unverified">Ați marcat numărul tău de siguranță cu %s ca și neverificat</string>
   <string name="MessageRecord_you_marked_your_safety_number_with_s_unverified_from_another_device">Ați marcat numărul tău de siguranță cu %s ca și neverificat de pe alt dispozitiv</string>
+  <!--MessageRequestBottomView-->
+  <string name="MessageRequestBottomView_accept">Acceptați</string>
+  <string name="MessageRequestBottomView_delete">Șterge</string>
+  <string name="MessageRequestBottomView_block">Blochează</string>
+  <string name="MessageRequestBottomView_unblock">Deblochează</string>
+  <string name="MessageRequestBottomView_do_you_want_to_let_s_message_you_they_wont_know_youve_seen_their_messages_until_you_accept">Doriți ca %1$s să vă poată trimite mesaje? Nu vor știi că ați văzut mesajul până când ați acceptat.</string>
+  <string name="MessageRequestBottomView_do_you_want_to_join_the_group_s_they_wont_know_youve_seen_their_messages_until_you_accept">Doriți să vă alăturați grupului %1$s? Nu vor ști că le-ați văzut mesajele până nu veți accepta.</string>
+  <string name="MessageRequestBottomView_unblock_s_to_message_and_call_each_other">Deblocați pe %1$s pentru a vă putea trimite mesaje și să va sunați reciproc.</string>
+  <string name="MessageRequestBottomView_unblock_to_allow_group_members_to_add_you_to_this_group_again">Deblocați pentru a permite membrilor grupului să vă adauge din nou în acest grup.</string>
+  <string name="MessageRequestProfileView_member_of_one_group">Membru al %1$s</string>
+  <string name="MessageRequestProfileView_member_of_two_groups">Membru al %1$s și %2$s</string>
+  <string name="MessageRequestProfileView_member_of_many_groups">Membru al %1$s, %2$s, și %3$s</string>
+  <plurals name="MessageRequestProfileView_members">
+    <item quantity="one">%1$d membru</item>
+    <item quantity="few">%1$d membrii</item>
+    <item quantity="other">%1$d membrii</item>
+  </plurals>
+  <plurals name="MessageRequestProfileView_member_of_others">
+    <item quantity="one">%d altul</item>
+    <item quantity="few">%d alții</item>
+    <item quantity="other">%d alții</item>
+  </plurals>
   <!--PassphraseChangeActivity-->
   <string name="PassphraseChangeActivity_passphrases_dont_match_exclamation">Parolele nu se potrivesc!</string>
   <string name="PassphraseChangeActivity_incorrect_old_passphrase_exclamation">Parola veche este incorectă!</string>
@@ -597,6 +639,8 @@
   <string name="ReactionsBottomSheetDialogFragment_all">Toate %1$d</string>
   <!--ReactionsConversationView-->
   <string name="ReactionsConversationView_plus">+%1$d</string>
+  <!--ReactionsRecipientAdapter-->
+  <string name="ReactionsRecipientAdapter_you">Tu</string>
   <!--RecipientPreferencesActivity-->
   <string name="RecipientPreferenceActivity_block_this_contact_question">Blochez acest contact?</string>
   <string name="RecipientPreferenceActivity_you_will_no_longer_receive_messages_and_calls_from_this_contact">Nu o să mai primești mesaje și apeluri de la acest contact.</string>
@@ -727,6 +771,17 @@ Am primit mesajul conform căruia schimbul de chei a avut loc pentru o versiune 
   <string name="StickerPackPreviewActivity_remove">Eliminați</string>
   <string name="StickerPackPreviewActivity_stickers">Autocolante</string>
   <string name="StickerPackPreviewActivity_failed_to_load_sticker_pack">Nu s-a putut încărca pachetul cu autocolante</string>
+  <!--SubmitDebugLogActivity-->
+  <string name="SubmitDebugLogActivity_edit">Editează</string>
+  <string name="SubmitDebugLogActivity_done">Gata</string>
+  <string name="SubmitDebugLogActivity_tap_a_line_to_delete_it">Apăsați pe o linie pentru a o șterge</string>
+  <string name="SubmitDebugLogActivity_submit">Trimiteți</string>
+  <string name="SubmitDebugLogActivity_failed_to_submit_logs">Eroare la trimiterea jurnalului de depanare.</string>
+  <string name="SubmitDebugLogActivity_success">Succes!</string>
+  <string name="SubmitDebugLogActivity_copy_this_url_and_add_it_to_your_issue">Copiați acest URL și adăugați-l la raportul de probleme sau la mail-ul de suport:\n\n<b>%1$s</b></string>
+  <string name="SubmitDebugLogActivity_copied_to_clipboard">S-a copiat în clipboard</string>
+  <string name="SubmitDebugLogActivity_ok">Ok</string>
+  <string name="SubmitDebugLogActivity_share">Partajați</string>
   <!--ThreadRecord-->
   <string name="ThreadRecord_group_updated">Grupul a fost actualizat</string>
   <string name="ThreadRecord_left_the_group">A părăsit grupul</string>
@@ -748,6 +803,8 @@ Am primit mesajul conform căruia schimbul de chei a avut loc pentru o versiune 
   <string name="ThreadRecord_you_marked_verified">Ați marcat ca și verificat</string>
   <string name="ThreadRecord_you_marked_unverified">Ați marcat ca și neverificat</string>
   <string name="ThreadRecord_message_could_not_be_processed">Mesajul nu a putut fi procesat</string>
+  <string name="ThreadRecord_message_request">Cerere mesaj</string>
+  <string name="ThreadRecord_s_added_you_to_the_group">%1$s te-a adăugat la grup</string>
   <!--UpdateApkReadyListener-->
   <string name="UpdateApkReadyListener_Signal_update">Actualizare Signal</string>
   <string name="UpdateApkReadyListener_a_new_version_of_signal_is_available_tap_to_update">O nouă versiune de Signal este disponibilă, apasă pentru actualizare</string>
@@ -1070,9 +1127,6 @@ Am primit mesajul conform căruia schimbul de chei a avut loc pentru o versiune 
   <string name="log_submit_activity__this_log_will_be_posted_online">Acest jurnal va fi postat public online pentru a fi analizat de contribuitori, puteți examina şi edita jurnalul înainte de al trimite.</string>
   <string name="log_submit_activity__loading_logs">Se încarcă jurnalele…</string>
   <string name="log_submit_activity__uploading_logs">Se încarcă jurnalele…</string>
-  <string name="log_submit_activity__success">Succes!</string>
-  <string name="log_submit_activity__copy_this_url_and_add_it_to_your_issue">Copiați acest URL și adăugați-l la raportul de probleme sau la mail-ul de suport:\n\n<b>%1$s</b>\n</string>
-  <string name="log_submit_activity__copied_to_clipboard">S-a copiat în clipboard</string>
   <string name="log_submit_activity__choose_email_app">Alegeți aplicație de e-mail</string>
   <string name="log_submit_activity__please_review_this_log_from_my_app">Vă rog revizuiți acest jurnal din aplicația mea: %1$s</string>
   <string name="log_submit_activity__network_failure">Eroare de rețea. Vă rugăm încercați din nou.</string>
@@ -1177,6 +1231,13 @@ Am primit mesajul conform căruia schimbul de chei a avut loc pentru o versiune 
   <string name="AndroidManifest__invite_friends">Invită prieteni</string>
   <string name="AndroidManifest_archived_conversations">Conversații arhivate</string>
   <string name="AndroidManifest_remove_photo">Eliminați poza</string>
+  <!--Message Requests Megaphone-->
+  <string name="MessageRequestsMegaphone__message_requests">Cereri mesaje</string>
+  <string name="MessageRequestsMegaphone__users_can_now_choose_to_accept">Utilizatorii pot alege acum să accepte o nouă conversație. Prin intermediul numelui de profil puteți știi cine vă scrie. </string>
+  <string name="MessageRequestsMegaphone__add_profile_name">Adăugați nume de profil</string>
+  <string name="MessageRequestsMegaphone__new_message_requests">Nou: Cereri de mesaje</string>
+  <string name="MessageRequestsMegaphone__add_name">Adăugați nume</string>
+  <string name="MessageRequestsMegaphone__you_can_now_choose_whether_to_accept">Acum puteți alege dacă să acceptați o conversație nouă. Veți vedea opțiuni precum \"Acceptați\", \"Ștergeți\" sau \"Blocați\".</string>
   <!--arrays.xml-->
   <string name="arrays__import_export">Importă</string>
   <string name="arrays__use_default">Implicit</string>
@@ -1279,6 +1340,7 @@ Am primit mesajul conform căruia schimbul de chei a avut loc pentru o versiune 
   <string name="preferences__dark_theme">Închisă</string>
   <string name="preferences__appearance">Aspect</string>
   <string name="preferences__theme">Tema</string>
+  <string name="preferences__system_default">Implicit sistem</string>
   <string name="preferences__default">Implicit</string>
   <string name="preferences__language">Limba</string>
   <string name="preferences__signal_messages_and_calls">Mesaje și apeluri Signal</string>
@@ -1565,8 +1627,12 @@ Am primit mesajul conform căruia schimbul de chei a avut loc pentru o versiune 
   <string name="KbsMegaphone__well_remind_you_later_creating_a_pin">Vă amintim mai târziu. Creearea unui PIN o să devină obligatorie în %1$d zile.</string>
   <string name="KbsMegaphone__well_remind_you_later_confirming_your_pin">Vă amintim mai târziu. Confirmarea PIN-ului dvs. o să devină obligatorie în %1$d zile.</string>
   <!--Profile Names Megaphone-->
+  <string name="ProfileNamesMegaphone__add_a_profile_name">Adăugați un nume de profil</string>
   <string name="ProfileNamesMegaphone__this_will_be_displayed_when_you_start">Acesta va fi afișat când începeți o nouă conversație sau când îl distribuiți.</string>
+  <string name="ProfileNamesMegaphone__add_profile_name">Adăugați un nume de profil</string>
+  <string name="ProfileNamesMegaphone__confirm_your_profile_name">Confirmați numele profilului dvs.</string>
   <string name="ProfileNamesMegaphone__your_profile_can_now_include">Profilul dvs. poate include acum și un nume opțional.</string>
+  <string name="ProfileNamesMegaphone__confirm_name">Confirmați numele</string>
   <!--transport_selection_list_item-->
   <string name="transport_selection_list_item__transport_icon">Pictogramă transport</string>
   <string name="ConversationListFragment_loading">Se încarcă…</string>
@@ -1634,6 +1700,7 @@ Am primit mesajul conform căruia schimbul de chei a avut loc pentru o versiune 
   <string name="preferences_app_protection__pin">PIN</string>
   <string name="preferences_app_protection__change">Schimbați</string>
   <string name="preferences_app_protection__create">Creează</string>
+  <string name="preferences_app_protection__your_pin_adds_an_extra_layer_of_security_to_your_account">Codul dvs. PIN adaugă un strat suplimentar de securitate la contul dvs. Vi se va cere acest lucru atunci când vă înregistrați numărul de telefon cu Signal. Dacă uitați codul PIN, veți fi blocat din cont timp de 7 zile.</string>
   <string name="AppProtectionPreferenceFragment_none">Niciuna</string>
   <string name="registration_activity__the_registration_lock_pin_is_not_the_same_as_the_sms_verification_code_you_just_received_please_enter_the_pin_you_previously_configured_in_the_application">Codul PIN de Blocare a Înregistrării nu este același cu codul de verificare pe care tocmai l-ați primit prin SMS. Vă rugăm să introduceți PIN-ul configurat anterior în aplicație.</string>
   <string name="registration_activity__registration_lock_pin">PIN de blocare a înregistrării</string>
@@ -1675,18 +1742,5 @@ Am primit mesajul conform căruia schimbul de chei a avut loc pentru o versiune 
   <string name="RegistrationLockDialog_reminder">Memento:</string>
   <string name="recipient_preferences__about">Despre</string>
   <string name="Recipient_unknown">Necunoscut</string>
-  <string name="MessageRequestBottomView_accept">Acceptați</string>
-  <string name="MessageRequestBottomView_delete">Șterge</string>
-  <string name="MessageRequestBottomView_block">Blochează</string>
-  <string name="MessageRequestBottomView_do_you_want_to_let">Doriți să primiți mesaje de la %1$s?</string>
-  <string name="MessageRequestProfileView_member_of_one_group">Membru al %1$s</string>
-  <string name="MessageRequestProfileView_member_of_two_groups">Membru al %1$s și %2$s</string>
-  <string name="MessageRequestProfileView_member_of_many_groups">Membru al %1$s, %2$s, și %3$s</string>
-  <string name="MessageRequestProfileView_members">%1$d membrii</string>
-  <plurals name="MessageRequestProfileView_member_of_others">
-    <item quantity="one">%d altul</item>
-    <item quantity="few">%d alții</item>
-    <item quantity="other">%d alții</item>
-  </plurals>
   <!--EOF-->
 </resources>
