--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -210,6 +210,22 @@
   <string name="ConversationActivity_no_results">Нет результатов</string>
   <string name="ConversationActivity_sticker_pack_installed">Набор стикеров установлен</string>
   <string name="ConversationActivity_new_say_it_with_stickers">Новинка! Общайтесь стикерами</string>
+  <string name="ConversationActivity_block_s">Заблокировать %1$s?</string>
+  <string name="ConversationActivity_block_and_leave_s">Заблокировать и покинуть %1$s?</string>
+  <string name="ConversationActivity_unblock_s">Разблокировать %1$s?</string>
+  <string name="ConversationActivity_you_will_be_able_to_message_and_call_each_other">Вы сможете отправлять сообщения и звонить друг другу.</string>
+  <string name="ConversationActivity_group_members_will_be_able_to_add_you_to_this_group_again">Участники группы смогут снова добавить вас в эту группу.</string>
+  <string name="ConversationActivity_blocked_people_will_not_be_able_to_call_you_or_send_you_messages">Заблокированные пользователи не смогут вам звонить или отправлять сообщения.</string>
+  <string name="ConversationActivity_you_will_leave_this_group_and_no_longer_receive_messages_or_updates">Вы покинете эту группу и больше не будете получать сообщения или обновления.</string>
+  <string name="ConversationActivity_block">Заблокировать</string>
+  <string name="ConversationActivity_block_and_delete">Заблокировать и удалить</string>
+  <string name="ConversationActivity_cancel">Отменить</string>
+  <string name="ConversationActivity_delete_conversation">Удалить разговор?</string>
+  <string name="ConversationActivity_delete_and_leave_group">Удалить и покинуть группу?</string>
+  <string name="ConversationActivity_this_conversation_will_be_deleted_from_all_of_your_devices">Этот разговор будет удалён со всех ваших устройств.</string>
+  <string name="ConversationActivity_you_will_leave_this_group_and_it_will_be_deleted_from_all_of_your_devices">Вы покинете эту группу, и она будет удалена со всех ваших устройств.</string>
+  <string name="ConversationActivity_delete">Удалить</string>
+  <string name="ConversationActivity_delete_and_leave">Удалить и покинуть</string>
   <!--ConversationAdapter-->
   <plurals name="ConversationAdapter_n_unread_messages">
     <item quantity="one">%d непрочитанное сообщение</item>
@@ -269,6 +285,7 @@
   <string name="ConversationFragment_you_can_swipe_to_the_left_reply">Вы можете провести влево по любому сообщению, чтобы быстро ответить</string>
   <string name="ConversationFragment_outgoing_view_once_media_files_are_automatically_removed">Исходящие одноразовые медиа-файлы автоматически удаляются после того, как они были отправлены</string>
   <string name="ConversationFragment_you_already_viewed_this_message">Вы уже просмотрели это сообщение</string>
+  <string name="ConversationFragment__you_can_add_notes_for_yourself_in_this_conversation">Вы можете добавлять заметки для себя в этом разговоре. Если у вашей учётной записи есть привязанные устройства, то новые заметки будут синхронизированы.</string>
   <!--ConversationListActivity-->
   <string name="ConversationListActivity_there_is_no_browser_installed_on_your_device">На вашем устройстве не установлен браузер.</string>
   <!--ConversationListFragment-->
@@ -300,6 +317,8 @@
     <item quantity="many">%d разговоров перемещено во Входящие</item>
     <item quantity="other">%d разговоров перемещено во Входящие</item>
   </plurals>
+  <string name="ConversationListFragment__your_profile_name_has_been_created">Имя вашего профиля создано.</string>
+  <string name="ConversationListFragment__your_profile_name_has_been_saved">Имя вашего профиля было сохранено.</string>
   <!--ConversationListItem-->
   <string name="ConversationListItem_key_exchange_message">Сообщение обмена ключами</string>
   <!--ConversationListItemAction-->
@@ -408,7 +427,7 @@
   <string name="GroupShareProfileView_do_you_want_to_make_your_profile_name_and_photo_visible_to_all_current_and_future_members_of_this_group">Вы хотите сделать имя и фотографию из своего профиля видимыми для всех текущих и будущих участников этой группы?</string>
   <string name="GroupShareProfileView_make_visible">Сделать видимыми</string>
   <!--GroupMembersDialog-->
-  <string name="GroupMembersDialog_me">Я</string>
+  <string name="GroupMembersDialog_you">Вы</string>
   <!--CropImageActivity-->
   <string name="CropImageActivity_group_avatar">Аватар группы</string>
   <string name="CropImageActivity_profile_avatar">Аватар</string>
@@ -566,6 +585,30 @@
   <string name="MessageRecord_you_marked_your_safety_number_with_s_verified_from_another_device">Вы отметили код безопасности с %s как подтверждённый с другого устройства</string>
   <string name="MessageRecord_you_marked_your_safety_number_with_s_unverified">Вы отметили код безопасности с %s как неподтверждённый</string>
   <string name="MessageRecord_you_marked_your_safety_number_with_s_unverified_from_another_device">Вы отметили код безопасности с %s как неподтверждённый с другого устройства</string>
+  <!--MessageRequestBottomView-->
+  <string name="MessageRequestBottomView_accept">Принять</string>
+  <string name="MessageRequestBottomView_delete">Удалить</string>
+  <string name="MessageRequestBottomView_block">Заблокировать</string>
+  <string name="MessageRequestBottomView_unblock">Разблокировать</string>
+  <string name="MessageRequestBottomView_do_you_want_to_let_s_message_you_they_wont_know_youve_seen_their_messages_until_you_accept">Вы хотите разрешить %1$s отправлять вам сообщения? Этот человек не узнает, что вы видели его сообщения, пока вы не примете запрос.</string>
+  <string name="MessageRequestBottomView_do_you_want_to_join_the_group_s_they_wont_know_youve_seen_their_messages_until_you_accept">Вы хотите присоединиться к группе %1$s? Её участники не узнают, что вы видели их сообщения, пока вы не примете запрос.</string>
+  <string name="MessageRequestBottomView_unblock_s_to_message_and_call_each_other">Разблокируйте %1$s, чтобы отправлять сообщения и звонить друг другу.</string>
+  <string name="MessageRequestBottomView_unblock_to_allow_group_members_to_add_you_to_this_group_again">Разблокируйте, чтобы разрешить участникам группы снова добавить вас в эту группу.</string>
+  <string name="MessageRequestProfileView_member_of_one_group">Состоит в %1$s</string>
+  <string name="MessageRequestProfileView_member_of_two_groups">Состоит в %1$s и %2$s</string>
+  <string name="MessageRequestProfileView_member_of_many_groups">Состоит в %1$s, %2$s и %3$s</string>
+  <plurals name="MessageRequestProfileView_members">
+    <item quantity="one">%1$d участник</item>
+    <item quantity="few">%1$d участника</item>
+    <item quantity="many">%1$d участников</item>
+    <item quantity="other">%1$d участников</item>
+  </plurals>
+  <plurals name="MessageRequestProfileView_member_of_others">
+    <item quantity="one">%d другой</item>
+    <item quantity="few">%d других</item>
+    <item quantity="many">%d других</item>
+    <item quantity="other">%d других</item>
+  </plurals>
   <!--PassphraseChangeActivity-->
   <string name="PassphraseChangeActivity_passphrases_dont_match_exclamation">Парольные фразы не совпадают!</string>
   <string name="PassphraseChangeActivity_incorrect_old_passphrase_exclamation">Неверная старая парольная фраза!</string>
@@ -618,6 +661,8 @@
   <string name="ReactionsBottomSheetDialogFragment_all">Все %1$d</string>
   <!--ReactionsConversationView-->
   <string name="ReactionsConversationView_plus">+%1$d</string>
+  <!--ReactionsRecipientAdapter-->
+  <string name="ReactionsRecipientAdapter_you">Вы</string>
   <!--RecipientPreferencesActivity-->
   <string name="RecipientPreferenceActivity_block_this_contact_question">Заблокировать этот контакт?</string>
   <string name="RecipientPreferenceActivity_you_will_no_longer_receive_messages_and_calls_from_this_contact">Вы больше не будете получать сообщения или звонки от этого контакта.</string>
@@ -747,6 +792,17 @@
   <string name="StickerPackPreviewActivity_remove">Удалить</string>
   <string name="StickerPackPreviewActivity_stickers">Стикеры</string>
   <string name="StickerPackPreviewActivity_failed_to_load_sticker_pack">Не удалось загрузить набор стикеров</string>
+  <!--SubmitDebugLogActivity-->
+  <string name="SubmitDebugLogActivity_edit">Изменить</string>
+  <string name="SubmitDebugLogActivity_done">Готово</string>
+  <string name="SubmitDebugLogActivity_tap_a_line_to_delete_it">Нажмите на строку, чтобы удалить её</string>
+  <string name="SubmitDebugLogActivity_submit">Отправить</string>
+  <string name="SubmitDebugLogActivity_failed_to_submit_logs">Не удалось отправить журналы</string>
+  <string name="SubmitDebugLogActivity_success">Успех!</string>
+  <string name="SubmitDebugLogActivity_copy_this_url_and_add_it_to_your_issue">Скопируйте этот URL-адрес и добавьте его в отчет о проблеме или в письмо в службу поддержки:\n\n<b>%1$s</b></string>
+  <string name="SubmitDebugLogActivity_copied_to_clipboard">Скопировано в буфер обмена</string>
+  <string name="SubmitDebugLogActivity_ok">Ок</string>
+  <string name="SubmitDebugLogActivity_share">Поделиться</string>
   <!--ThreadRecord-->
   <string name="ThreadRecord_group_updated">Группа обновлена</string>
   <string name="ThreadRecord_left_the_group">Вы покинули группу</string>
@@ -768,6 +824,8 @@
   <string name="ThreadRecord_you_marked_verified">Вы отметили как подтверждённый</string>
   <string name="ThreadRecord_you_marked_unverified">Вы отметили как неподтверждённый</string>
   <string name="ThreadRecord_message_could_not_be_processed">Не удалось обработать сообщение</string>
+  <string name="ThreadRecord_message_request">Запрос на общение</string>
+  <string name="ThreadRecord_s_added_you_to_the_group">%1$s добавил(-а) вас в группу</string>
   <!--UpdateApkReadyListener-->
   <string name="UpdateApkReadyListener_Signal_update">Обновление Signal</string>
   <string name="UpdateApkReadyListener_a_new_version_of_signal_is_available_tap_to_update">Доступна новая версия Signal. Обновиться?</string>
@@ -1097,9 +1155,6 @@
   <string name="log_submit_activity__this_log_will_be_posted_online">Этот журнал будет опубликован в интернете, чтобы разработчики смогли его просмотреть. Вы можете изучить и отредактировать его перед отправкой.</string>
   <string name="log_submit_activity__loading_logs">Загружаем журналы…</string>
   <string name="log_submit_activity__uploading_logs">Выгрузка журналов…</string>
-  <string name="log_submit_activity__success">Успешно!</string>
-  <string name="log_submit_activity__copy_this_url_and_add_it_to_your_issue">Скопируйте этот URL-адрес и добавьте его в отчет о проблеме или в письмо в службу поддержки:\n\n<b>%1$s</b>\n</string>
-  <string name="log_submit_activity__copied_to_clipboard">Скопировано в буфер обмена</string>
   <string name="log_submit_activity__choose_email_app">Выберите приложение электронной почты</string>
   <string name="log_submit_activity__please_review_this_log_from_my_app">Пожалуйста, просмотрите журнал из моего приложения: %1$s</string>
   <string name="log_submit_activity__network_failure">Ошибка сети. Пожалуйста, попробуйте ещёе раз.</string>
@@ -1205,6 +1260,13 @@
   <string name="AndroidManifest__invite_friends">Пригласить друзей</string>
   <string name="AndroidManifest_archived_conversations">Архивированные разговоры</string>
   <string name="AndroidManifest_remove_photo">Удалить фото</string>
+  <!--Message Requests Megaphone-->
+  <string name="MessageRequestsMegaphone__message_requests">Запросы на общение</string>
+  <string name="MessageRequestsMegaphone__users_can_now_choose_to_accept">Теперь пользователи могут выбирать, принимать ли новый разговор. Имена профилей позволяют людям знать, кто отправляет им сообщения.</string>
+  <string name="MessageRequestsMegaphone__add_profile_name">Добавить имя профиля</string>
+  <string name="MessageRequestsMegaphone__new_message_requests">Новое: запросы на общение</string>
+  <string name="MessageRequestsMegaphone__add_name">Добавить имя</string>
+  <string name="MessageRequestsMegaphone__you_can_now_choose_whether_to_accept">Теперь вы можете выбирать, принимать ли новый разговор. Вы увидите варианты «Принять», «Удалить» и «Заблокировать».</string>
   <!--arrays.xml-->
   <string name="arrays__import_export">Импортировать</string>
   <string name="arrays__use_default">Использовать настройку по умолчанию</string>
@@ -1306,9 +1368,9 @@
   <string name="preferences__linked_devices">Привязанные устройства</string>
   <string name="preferences__light_theme">Светлая</string>
   <string name="preferences__dark_theme">Темная</string>
-  <string name="preferences__system_theme">Системная</string>
   <string name="preferences__appearance">Внешний вид</string>
   <string name="preferences__theme">Тема</string>
+  <string name="preferences__system_default">По умолчанию системы</string>
   <string name="preferences__default">По умолчанию</string>
   <string name="preferences__language">Язык (Language)</string>
   <string name="preferences__signal_messages_and_calls">Звонки и сообщения Signal</string>
@@ -1555,8 +1617,8 @@
   <!--KbsLockFragment-->
   <string name="RegistrationLockFragment__enter_your_pin">Введите свой PIN-код</string>
   <string name="RegistrationLockFragment__enter_the_pin_you_created">Введите PIN-код, который вы создали для своей учётной записи. Это не то же самое. что проверочный код из SMS.</string>
-  <string name="RegistrationLockFragment__enter_alphanumeric_pin">Введите буквенно-цифровой PIN-код</string>
-  <string name="RegistrationLockFragment__enter_numeric_pin">Введите цифровой PIN-код</string>
+  <string name="RegistrationLockFragment__enter_alphanumeric_pin">Ввести буквенно-цифровой PIN-код</string>
+  <string name="RegistrationLockFragment__enter_numeric_pin">Ввести цифровой PIN-код</string>
   <string name="RegistrationLockFragment__next">Далее</string>
   <string name="RegistrationLockFragment__incorrect_pin_try_again">Неверный PIN-код. Попробуйте ещё раз.</string>
   <string name="RegistrationLockFragment__forgot_pin">Забыли PIN-код?</string>
@@ -1718,19 +1780,5 @@
   <string name="RegistrationLockDialog_reminder">Напоминание:</string>
   <string name="recipient_preferences__about">О собеседнике</string>
   <string name="Recipient_unknown">Неизвестный</string>
-  <string name="MessageRequestBottomView_accept">Принять</string>
-  <string name="MessageRequestBottomView_delete">Удалить</string>
-  <string name="MessageRequestBottomView_block">Заблокировать</string>
-  <string name="MessageRequestBottomView_do_you_want_to_let">Вы хотите получать сообщения от %1$s?</string>
-  <string name="MessageRequestProfileView_member_of_one_group">Состоит в %1$s</string>
-  <string name="MessageRequestProfileView_member_of_two_groups">Состоит в %1$s и %2$s</string>
-  <string name="MessageRequestProfileView_member_of_many_groups">Состоит в %1$s, %2$s и %3$s</string>
-  <string name="MessageRequestProfileView_members">%1$d участников</string>
-  <plurals name="MessageRequestProfileView_member_of_others">
-    <item quantity="one">%d другой</item>
-    <item quantity="few">%d других</item>
-    <item quantity="many">%d других</item>
-    <item quantity="other">%d других</item>
-  </plurals>
   <!--EOF-->
 </resources>
