--- a/app/src/main/res/values-sk/strings.xml
+++ b/app/src/main/res/values-sk/strings.xml
@@ -210,6 +210,16 @@
   <string name="ConversationActivity_no_results">Žiadne výsledky.</string>
   <string name="ConversationActivity_sticker_pack_installed">Balík s nálepkami bol nainštalovaný</string>
   <string name="ConversationActivity_new_say_it_with_stickers">Novinka! Povedzte to nálepkou</string>
+  <string name="ConversationActivity_you_will_be_able_to_message_and_call_each_other">Budete si môcť volať a písať.</string>
+  <string name="ConversationActivity_group_members_will_be_able_to_add_you_to_this_group_again">Členovia skupiny vás budú môcť do tejto skupiny znovu pridať.</string>
+  <string name="ConversationActivity_you_will_leave_this_group_and_no_longer_receive_messages_or_updates">Opustíte túto skupinu a už nebudete dostávať správy ani aktualizácie.</string>
+  <string name="ConversationActivity_block">Blokovať</string>
+  <string name="ConversationActivity_cancel">Zrušiť</string>
+  <string name="ConversationActivity_delete_conversation">Vymazať konverzáciu?</string>
+  <string name="ConversationActivity_delete_and_leave_group">Vymazať a opustiť skupinu?</string>
+  <string name="ConversationActivity_this_conversation_will_be_deleted_from_all_of_your_devices">Táto konverzácia sa vymaže zo všetkých vašich zariadení.</string>
+  <string name="ConversationActivity_you_will_leave_this_group_and_it_will_be_deleted_from_all_of_your_devices">Opustíte túto skupinu a vymažete ju zo všetkých vašich zariadení.</string>
+  <string name="ConversationActivity_delete">Vymazať</string>
   <!--ConversationAdapter-->
   <plurals name="ConversationAdapter_n_unread_messages">
     <item quantity="one">%d neprečítaná správa</item>
@@ -269,6 +279,7 @@
   <string name="ConversationFragment_you_can_swipe_to_the_left_reply">Pre rýchlu odpoveď môžete na akejkoľvek správe prejsť prstom doľava</string>
   <string name="ConversationFragment_outgoing_view_once_media_files_are_automatically_removed">Odchádzajúce mediálne súbory na jedno zobrazenie sa po odoslaní automaticky odstránia</string>
   <string name="ConversationFragment_you_already_viewed_this_message">Túto správu ste si už zobrazili</string>
+  <string name="ConversationFragment__you_can_add_notes_for_yourself_in_this_conversation">V tejto konverzácii si môžete pridávať poznámky. Ak máte vo vašom účte nejaké pripojené zariadenia, nové poznámky sa budú synchronizovať.</string>
   <!--ConversationListActivity-->
   <string name="ConversationListActivity_there_is_no_browser_installed_on_your_device">Nemáte nainštalovaný žiadny prehliadač.</string>
   <!--ConversationListFragment-->
@@ -300,6 +311,7 @@
     <item quantity="many">%d konverzácií presunutých do doručených</item>
     <item quantity="other">%d konverzácií presunutých do doručených</item>
   </plurals>
+  <string name="ConversationListFragment__your_profile_name_has_been_saved">Názov vášho profilu bol uložený.</string>
   <!--ConversationListItem-->
   <string name="ConversationListItem_key_exchange_message">Správa výmeny kľúčov</string>
   <!--ConversationListItemAction-->
@@ -407,7 +419,7 @@
   <string name="GroupShareProfileView_do_you_want_to_make_your_profile_name_and_photo_visible_to_all_current_and_future_members_of_this_group">Chcete aby vaše meno a profilová fotka boli viditeľné všetkým súčasným a budúcim členom tejto skupiny?</string>
   <string name="GroupShareProfileView_make_visible">Zapnúť viditeľnosť</string>
   <!--GroupMembersDialog-->
-  <string name="GroupMembersDialog_me">Ja</string>
+  <string name="GroupMembersDialog_you">Vy</string>
   <!--CropImageActivity-->
   <string name="CropImageActivity_group_avatar">Obrázok skupiny</string>
   <string name="CropImageActivity_profile_avatar">Fotka</string>
@@ -565,6 +577,20 @@
   <string name="MessageRecord_you_marked_your_safety_number_with_s_verified_from_another_device">Bezpečnostné číslo s %s ste označili ako overené z iného zariadenia</string>
   <string name="MessageRecord_you_marked_your_safety_number_with_s_unverified">Bezpečnostné číslo s %s ste označili ako neoverené</string>
   <string name="MessageRecord_you_marked_your_safety_number_with_s_unverified_from_another_device">Bezpečnostné číslo s %s ste označili ako neoverené z iného zariadenia</string>
+  <!--MessageRequestBottomView-->
+  <string name="MessageRequestBottomView_accept">Potvrdiť</string>
+  <string name="MessageRequestBottomView_delete">Vymazať</string>
+  <string name="MessageRequestBottomView_block">Blokovať</string>
+  <string name="MessageRequestBottomView_unblock">Odblokovať</string>
+  <string name="MessageRequestProfileView_member_of_one_group">Člen skupiny %1$s</string>
+  <string name="MessageRequestProfileView_member_of_two_groups">Člen skupiny %1$s a %2$s</string>
+  <string name="MessageRequestProfileView_member_of_many_groups">Člen skupiny %1$s, %2$s a %3$s</string>
+  <plurals name="MessageRequestProfileView_member_of_others">
+    <item quantity="one">%d iný</item>
+    <item quantity="few">%d iní</item>
+    <item quantity="many">%d iných</item>
+    <item quantity="other">%d iných</item>
+  </plurals>
   <!--PassphraseChangeActivity-->
   <string name="PassphraseChangeActivity_passphrases_dont_match_exclamation">Heslá sa nezhodujú!</string>
   <string name="PassphraseChangeActivity_incorrect_old_passphrase_exclamation">Nesprávne staré heslo!</string>
@@ -617,6 +643,8 @@
   <string name="ReactionsBottomSheetDialogFragment_all">Všetky %1$d</string>
   <!--ReactionsConversationView-->
   <string name="ReactionsConversationView_plus">+%1$d</string>
+  <!--ReactionsRecipientAdapter-->
+  <string name="ReactionsRecipientAdapter_you">Vy</string>
   <!--RecipientPreferencesActivity-->
   <string name="RecipientPreferenceActivity_block_this_contact_question">Zablokovať tento kontakt?</string>
   <string name="RecipientPreferenceActivity_you_will_no_longer_receive_messages_and_calls_from_this_contact">Už nebudete od tohto kontaktu dostávať správy a hovory.</string>
@@ -752,6 +780,13 @@ Bola prijatá správa výmeny kľúčov s neplatnou verziou protokolu.
   <string name="StickerPackPreviewActivity_remove">Odstrániť</string>
   <string name="StickerPackPreviewActivity_stickers">Nálepky</string>
   <string name="StickerPackPreviewActivity_failed_to_load_sticker_pack">Nepodarilo sa načítať balík s nálepkami</string>
+  <!--SubmitDebugLogActivity-->
+  <string name="SubmitDebugLogActivity_edit">Upraviť</string>
+  <string name="SubmitDebugLogActivity_done">Hotovo</string>
+  <string name="SubmitDebugLogActivity_submit">Potvrdiť</string>
+  <string name="SubmitDebugLogActivity_success">Operácia úspešne dokončená!</string>
+  <string name="SubmitDebugLogActivity_copied_to_clipboard">Skopírované do schránky</string>
+  <string name="SubmitDebugLogActivity_share">Zdieľať</string>
   <!--ThreadRecord-->
   <string name="ThreadRecord_group_updated">Skupina bola aktualizovaná</string>
   <string name="ThreadRecord_left_the_group">Opustil/a skupinu</string>
@@ -773,6 +808,7 @@ Bola prijatá správa výmeny kľúčov s neplatnou verziou protokolu.
   <string name="ThreadRecord_you_marked_verified">Označili ste ako overené</string>
   <string name="ThreadRecord_you_marked_unverified">Označili ste ako neoverené</string>
   <string name="ThreadRecord_message_could_not_be_processed">Správu sa nepodarilo spracovať</string>
+  <string name="ThreadRecord_message_request">Žiadosť o správu</string>
   <!--UpdateApkReadyListener-->
   <string name="UpdateApkReadyListener_Signal_update">Aktualizácia Signalu</string>
   <string name="UpdateApkReadyListener_a_new_version_of_signal_is_available_tap_to_update">K dispozícii je nová verzia Signalu, ťuknutím aktualizujte</string>
@@ -1102,9 +1138,6 @@ Bola prijatá správa výmeny kľúčov s neplatnou verziou protokolu.
   <string name="log_submit_activity__this_log_will_be_posted_online">Tento záznam bude zverejnený online pre vývojárov. Pred odoslaním ho môžete skontrolovať a upraviť.</string>
   <string name="log_submit_activity__loading_logs">Načítanie záznamov…</string>
   <string name="log_submit_activity__uploading_logs">Nahrávanie záznamov…</string>
-  <string name="log_submit_activity__success">Operácia úspešne dokončená!</string>
-  <string name="log_submit_activity__copy_this_url_and_add_it_to_your_issue">Skopírujte toto URL a doplňte do hlásenia o problému alebo emalu pre podporu:\n\n<b>%1$s</b>\n</string>
-  <string name="log_submit_activity__copied_to_clipboard">Skopírované do schránky</string>
   <string name="log_submit_activity__choose_email_app">Zvoľte aplikáciu pre emaily</string>
   <string name="log_submit_activity__please_review_this_log_from_my_app">Prosím skontrolujte záznam z mojej aplikácie: %1$s</string>
   <string name="log_submit_activity__network_failure">Chyba siete. Skúste to znovu.</string>
@@ -1210,6 +1243,7 @@ Bola prijatá správa výmeny kľúčov s neplatnou verziou protokolu.
   <string name="AndroidManifest__invite_friends">Pozvať priateľov</string>
   <string name="AndroidManifest_archived_conversations">Archivované konverzácie</string>
   <string name="AndroidManifest_remove_photo">Odstrániť fotku</string>
+  <!--Message Requests Megaphone-->
   <!--arrays.xml-->
   <string name="arrays__import_export">Import</string>
   <string name="arrays__use_default">Použiť predvolené</string>
@@ -1719,19 +1753,5 @@ Bola prijatá správa výmeny kľúčov s neplatnou verziou protokolu.
   <string name="RegistrationLockDialog_reminder">Pripomienka:</string>
   <string name="recipient_preferences__about">Informácie</string>
   <string name="Recipient_unknown">Neznáme</string>
-  <string name="MessageRequestBottomView_accept">Potvrdiť</string>
-  <string name="MessageRequestBottomView_delete">Vymazať</string>
-  <string name="MessageRequestBottomView_block">Blokovať</string>
-  <string name="MessageRequestBottomView_do_you_want_to_let">Chcete prijímať správy od používateľa %1$s?</string>
-  <string name="MessageRequestProfileView_member_of_one_group">Člen skupiny %1$s</string>
-  <string name="MessageRequestProfileView_member_of_two_groups">Člen skupiny %1$s a %2$s</string>
-  <string name="MessageRequestProfileView_member_of_many_groups">Člen skupiny %1$s, %2$s a %3$s</string>
-  <string name="MessageRequestProfileView_members">%1$d členov</string>
-  <plurals name="MessageRequestProfileView_member_of_others">
-    <item quantity="one">%d iný</item>
-    <item quantity="few">%d iní</item>
-    <item quantity="many">%d iných</item>
-    <item quantity="other">%d iných</item>
-  </plurals>
   <!--EOF-->
 </resources>
