--- a/app/src/main/res/values-sl/strings.xml
+++ b/app/src/main/res/values-sl/strings.xml
@@ -210,6 +210,22 @@
   <string name="ConversationActivity_no_results">Brez rezultata.</string>
   <string name="ConversationActivity_sticker_pack_installed">Nameščen je bil paket nalepk</string>
   <string name="ConversationActivity_new_say_it_with_stickers">Novo! Povejte z nalepkami!</string>
+  <string name="ConversationActivity_block_s">Blokiram uporabnika %1$s?</string>
+  <string name="ConversationActivity_block_and_leave_s">Blokiram in zapustim skupino %1$s?</string>
+  <string name="ConversationActivity_unblock_s">Odblokiram uporabnika %1$s?</string>
+  <string name="ConversationActivity_you_will_be_able_to_message_and_call_each_other">Lahko si bosta pošiljala sporočila in se klicala.</string>
+  <string name="ConversationActivity_group_members_will_be_able_to_add_you_to_this_group_again">Drugi člani vas bodo lahko ponovno dodali v skupino.</string>
+  <string name="ConversationActivity_blocked_people_will_not_be_able_to_call_you_or_send_you_messages">Blokirani uporabniki vas ne bodo mogli klicati ali vam pošiljati sporočila.</string>
+  <string name="ConversationActivity_you_will_leave_this_group_and_no_longer_receive_messages_or_updates">Zapustili boste skupino in ne boste več prejemali sporočil oziroma posodobitev.</string>
+  <string name="ConversationActivity_block">Blokiraj</string>
+  <string name="ConversationActivity_block_and_delete">Blokiraj in izbriši</string>
+  <string name="ConversationActivity_cancel">Prekliči</string>
+  <string name="ConversationActivity_delete_conversation">Izbrišem pogovor?</string>
+  <string name="ConversationActivity_delete_and_leave_group">Blokiram in zapustim skupino?</string>
+  <string name="ConversationActivity_this_conversation_will_be_deleted_from_all_of_your_devices">Pogovor bo izbrisan na vseh vaših napravah.</string>
+  <string name="ConversationActivity_you_will_leave_this_group_and_it_will_be_deleted_from_all_of_your_devices">Zapustili boste skupino in ta bo izbrisana na vseh vaših napravah.</string>
+  <string name="ConversationActivity_delete">Izbriši</string>
+  <string name="ConversationActivity_delete_and_leave">Izbriši in zapusti</string>
   <!--ConversationAdapter-->
   <plurals name="ConversationAdapter_n_unread_messages">
     <item quantity="one">%d neprebrano sporočilo</item>
@@ -269,6 +285,7 @@
   <string name="ConversationFragment_you_can_swipe_to_the_left_reply">Za hiter odgovor na sporočilo podrsajte na levo</string>
   <string name="ConversationFragment_outgoing_view_once_media_files_are_automatically_removed">Poslane medijske datoteke za enkraten ogled so avtomatično odstranjene s seznama </string>
   <string name="ConversationFragment_you_already_viewed_this_message">To sporočilo ste že videli</string>
+  <string name="ConversationFragment__you_can_add_notes_for_yourself_in_this_conversation">V tem pogovoru lahko shranjujete lastne zabeležke. Če je vaš račun povezan s še kakšno napravo, se bodo zabeležke prenesle tudi tja.</string>
   <!--ConversationListActivity-->
   <string name="ConversationListActivity_there_is_no_browser_installed_on_your_device">Na svoji napravi nimate nameščenega spletnega brskalnika.</string>
   <!--ConversationListFragment-->
@@ -300,6 +317,8 @@
     <item quantity="few">%d pogovori premaknjeni v nabiralnik</item>
     <item quantity="other">%d pogovorov premaknjenih v nabiralnik</item>
   </plurals>
+  <string name="ConversationListFragment__your_profile_name_has_been_created">Vaše profilno ime je bilo ustvarjeno.</string>
+  <string name="ConversationListFragment__your_profile_name_has_been_saved">Vaše profilno ime je bilo shranjeno.</string>
   <!--ConversationListItem-->
   <string name="ConversationListItem_key_exchange_message">Sporočilo za izmenjavo ključev</string>
   <!--ConversationListItemAction-->
@@ -408,7 +427,7 @@
   <string name="GroupShareProfileView_do_you_want_to_make_your_profile_name_and_photo_visible_to_all_current_and_future_members_of_this_group">Želite, da sta ime vašega profila in predstavitvena fotografija vidna sedanjim in bodočim članom te skupine?</string>
   <string name="GroupShareProfileView_make_visible">Naredi vidno</string>
   <!--GroupMembersDialog-->
-  <string name="GroupMembersDialog_me">Jaz</string>
+  <string name="GroupMembersDialog_you">Vi</string>
   <!--CropImageActivity-->
   <string name="CropImageActivity_group_avatar">Avatar skupine</string>
   <string name="CropImageActivity_profile_avatar">Avatar</string>
@@ -566,6 +585,30 @@
   <string name="MessageRecord_you_marked_your_safety_number_with_s_verified_from_another_device">Varnostno število z uporabnikom %s ste na drugi napravi označili kot potrjeno</string>
   <string name="MessageRecord_you_marked_your_safety_number_with_s_unverified">Varnostno število z uporabnikom %s ste označili kot nepotrjeno</string>
   <string name="MessageRecord_you_marked_your_safety_number_with_s_unverified_from_another_device">Varnostno število z uporabnikom %s ste na drugi napravi označili kot nepotrjeno</string>
+  <!--MessageRequestBottomView-->
+  <string name="MessageRequestBottomView_accept">Sprejmi</string>
+  <string name="MessageRequestBottomView_delete">Izbriši</string>
+  <string name="MessageRequestBottomView_block">Blokiraj</string>
+  <string name="MessageRequestBottomView_unblock">Odblokiraj</string>
+  <string name="MessageRequestBottomView_do_you_want_to_let_s_message_you_they_wont_know_youve_seen_their_messages_until_you_accept">Želite omogočiti uporabniku %1$s da vam pošilja sporočila? Dokler ne date dovoljenja, oseba ne bo vedela, da ste videli njeno sporočilo.</string>
+  <string name="MessageRequestBottomView_do_you_want_to_join_the_group_s_they_wont_know_youve_seen_their_messages_until_you_accept">Se želite pridružiti skupini %1$s? Dokler se ne pridružite, skupina ne bo vedela, da ste videli njena sporočila.</string>
+  <string name="MessageRequestBottomView_unblock_s_to_message_and_call_each_other">Odblokiraj uporabnika %1$s in omogoči medsebojna sporočila in klice.</string>
+  <string name="MessageRequestBottomView_unblock_to_allow_group_members_to_add_you_to_this_group_again">Odblokiraj in omogoči članom skupine, da me zopet dodajo v skupino.</string>
+  <string name="MessageRequestProfileView_member_of_one_group">Član skupine %1$s</string>
+  <string name="MessageRequestProfileView_member_of_two_groups">Član skupin %1$s in %2$s</string>
+  <string name="MessageRequestProfileView_member_of_many_groups">Član skupin %1$s, %2$s in %3$s</string>
+  <plurals name="MessageRequestProfileView_members">
+    <item quantity="one">%1$d član</item>
+    <item quantity="two">%1$d člana</item>
+    <item quantity="few">%1$d člani</item>
+    <item quantity="other">%1$d članov</item>
+  </plurals>
+  <plurals name="MessageRequestProfileView_member_of_others">
+    <item quantity="one">%d ostali</item>
+    <item quantity="two">%d ostala</item>
+    <item quantity="few">%d ostali</item>
+    <item quantity="other">%d ostalih</item>
+  </plurals>
   <!--PassphraseChangeActivity-->
   <string name="PassphraseChangeActivity_passphrases_dont_match_exclamation">Gesli se ne ujemata</string>
   <string name="PassphraseChangeActivity_incorrect_old_passphrase_exclamation">Napačno staro geslo!</string>
@@ -618,6 +661,8 @@
   <string name="ReactionsBottomSheetDialogFragment_all">Vse %1$d</string>
   <!--ReactionsConversationView-->
   <string name="ReactionsConversationView_plus">+%1$d</string>
+  <!--ReactionsRecipientAdapter-->
+  <string name="ReactionsRecipientAdapter_you">Vi</string>
   <!--RecipientPreferencesActivity-->
   <string name="RecipientPreferenceActivity_block_this_contact_question">Blokiram tega uporabnika?</string>
   <string name="RecipientPreferenceActivity_you_will_no_longer_receive_messages_and_calls_from_this_contact">Sporočil in klicev tega uporabnika ne boste več prejemali.</string>
@@ -745,6 +790,17 @@ Prejeto sporočilo za izmenjavo ključev za napačno različico protokola.</stri
   <string name="StickerPackPreviewActivity_remove">Odstrani</string>
   <string name="StickerPackPreviewActivity_stickers">Nalepke</string>
   <string name="StickerPackPreviewActivity_failed_to_load_sticker_pack">Nalaganje paketa nalepk ni uspelo</string>
+  <!--SubmitDebugLogActivity-->
+  <string name="SubmitDebugLogActivity_edit">Uredi</string>
+  <string name="SubmitDebugLogActivity_done">Opravljeno</string>
+  <string name="SubmitDebugLogActivity_tap_a_line_to_delete_it">Za izbris tapnite črto</string>
+  <string name="SubmitDebugLogActivity_submit">Oddaj</string>
+  <string name="SubmitDebugLogActivity_failed_to_submit_logs">Oddaja sistemske zabeležke ni uspela</string>
+  <string name="SubmitDebugLogActivity_success">Uspešno opravljeno!</string>
+  <string name="SubmitDebugLogActivity_copy_this_url_and_add_it_to_your_issue">Prekopirajte naslov URL in ga dodajte k prijavi napake ali v elektronsko sporočilo za tehnično podporo:\n\n<b>%1$s</b></string>
+  <string name="SubmitDebugLogActivity_copied_to_clipboard">Kopirano v odložišče</string>
+  <string name="SubmitDebugLogActivity_ok">Ok</string>
+  <string name="SubmitDebugLogActivity_share">Deli</string>
   <!--ThreadRecord-->
   <string name="ThreadRecord_group_updated">Skupina je posodobljena</string>
   <string name="ThreadRecord_left_the_group">Zapustili ste skupino.</string>
@@ -766,6 +822,8 @@ Prejeto sporočilo za izmenjavo ključev za napačno različico protokola.</stri
   <string name="ThreadRecord_you_marked_verified">Označili ste kot potrjeno</string>
   <string name="ThreadRecord_you_marked_unverified">Označili ste kot nepotrjeno</string>
   <string name="ThreadRecord_message_could_not_be_processed">Sporočilo ni moglo biti obdelano</string>
+  <string name="ThreadRecord_message_request">Prošnja za pogovor</string>
+  <string name="ThreadRecord_s_added_you_to_the_group">Uporabnik %1$s vas je dodal v skupino</string>
   <!--UpdateApkReadyListener-->
   <string name="UpdateApkReadyListener_Signal_update">Nadgradnja aplikacije Signal</string>
   <string name="UpdateApkReadyListener_a_new_version_of_signal_is_available_tap_to_update">Na voljo je nova različica aplikacije Signal. Tapnite za nadgradnjo.</string>
@@ -1095,9 +1153,6 @@ Prejeto sporočilo za izmenjavo ključev za napačno različico protokola.</stri
   <string name="log_submit_activity__this_log_will_be_posted_online">Ta zabeležba bo javno objavljena na spletu in v ogled razvijalcem aplikacije. Pred oddajo jo lahko pregledate in popravite.</string>
   <string name="log_submit_activity__loading_logs">Nalagam sistemske zabaležbe …</string>
   <string name="log_submit_activity__uploading_logs">Prenašam sistemske zabeležbe …</string>
-  <string name="log_submit_activity__success">Uspešno opravljeno!</string>
-  <string name="log_submit_activity__copy_this_url_and_add_it_to_your_issue">Prekopirajte ta URL in ga dodajte k prijavi napake ali v elektronsko sporočilo podpori:\n\n<b>%1$s</b>\n</string>
-  <string name="log_submit_activity__copied_to_clipboard">Kopirano v odložišče</string>
   <string name="log_submit_activity__choose_email_app">Izberite odjemalca za e-pošto</string>
   <string name="log_submit_activity__please_review_this_log_from_my_app">Prosim preglejte to sistemsko zabeležbo mojega odjemalca: %1$s</string>
   <string name="log_submit_activity__network_failure">Napaka omrežja. Poskusite znova.</string>
@@ -1203,6 +1258,13 @@ Prejeto sporočilo za izmenjavo ključev za napačno različico protokola.</stri
   <string name="AndroidManifest__invite_friends">Povabi prijatelje</string>
   <string name="AndroidManifest_archived_conversations">Arhivirani pogovori</string>
   <string name="AndroidManifest_remove_photo">Odstrani fotografijo</string>
+  <!--Message Requests Megaphone-->
+  <string name="MessageRequestsMegaphone__message_requests">Prošnje za pogovor</string>
+  <string name="MessageRequestsMegaphone__users_can_now_choose_to_accept">Uporabniki lahko odslej izbirajo ali želijo sodelovarti v pogovoru ali ne. Profilna imena so tu zato, da ljudje vedo, kdo jim pošilja sporočilo.</string>
+  <string name="MessageRequestsMegaphone__add_profile_name">Dodaj ime profila</string>
+  <string name="MessageRequestsMegaphone__new_message_requests">Novo: Prošnje za pogovor</string>
+  <string name="MessageRequestsMegaphone__add_name">Dodaj ime</string>
+  <string name="MessageRequestsMegaphone__you_can_now_choose_whether_to_accept">Odslej lahko izbirate ali želite sodelovati v novem pogovoru. Imeli boste tri možnosti: \"Sprejmi\", \"Zavrni\", ali \"Blokiraj.\"</string>
   <!--arrays.xml-->
   <string name="arrays__import_export">Uvoz</string>
   <string name="arrays__use_default">Uporabi prednastavljeno</string>
@@ -1304,9 +1366,9 @@ Prejeto sporočilo za izmenjavo ključev za napačno različico protokola.</stri
   <string name="preferences__linked_devices">Povezane naprave</string>
   <string name="preferences__light_theme">Svetla</string>
   <string name="preferences__dark_theme">Temna</string>
-  <string name="preferences__system_theme">Privzeta sistemska</string>
   <string name="preferences__appearance">Izgled</string>
   <string name="preferences__theme">Tema</string>
+  <string name="preferences__system_default">Privzeta sistemska</string>
   <string name="preferences__default">Privzeto</string>
   <string name="preferences__language">Jezik</string>
   <string name="preferences__signal_messages_and_calls">Sporočila in klici Signal</string>
@@ -1716,19 +1778,5 @@ Prejeto sporočilo za izmenjavo ključev za napačno različico protokola.</stri
   <string name="RegistrationLockDialog_reminder">Opomnik:</string>
   <string name="recipient_preferences__about">Več</string>
   <string name="Recipient_unknown">Neznano</string>
-  <string name="MessageRequestBottomView_accept">Sprejmi</string>
-  <string name="MessageRequestBottomView_delete">Izbriši</string>
-  <string name="MessageRequestBottomView_block">Blokiraj</string>
-  <string name="MessageRequestBottomView_do_you_want_to_let">Ali želite prejemati sporočila uporabnika %1$s?</string>
-  <string name="MessageRequestProfileView_member_of_one_group">Član skupine %1$s</string>
-  <string name="MessageRequestProfileView_member_of_two_groups">Član skupin %1$s in %2$s</string>
-  <string name="MessageRequestProfileView_member_of_many_groups">Član skupin %1$s, %2$s in %3$s</string>
-  <string name="MessageRequestProfileView_members">%1$d članov</string>
-  <plurals name="MessageRequestProfileView_member_of_others">
-    <item quantity="one">%d ostali</item>
-    <item quantity="two">%d ostala</item>
-    <item quantity="few">%d ostali</item>
-    <item quantity="other">%d ostalih</item>
-  </plurals>
   <!--EOF-->
 </resources>
