--- a/app/src/main/res/values-sq/strings.xml
+++ b/app/src/main/res/values-sq/strings.xml
@@ -204,6 +204,22 @@
   <string name="ConversationActivity_no_results">S\’ka përfundime</string>
   <string name="ConversationActivity_sticker_pack_installed">Paketa e ngjitësve u instalua</string>
   <string name="ConversationActivity_new_say_it_with_stickers">E re! Shprehuni me ngjitës</string>
+  <string name="ConversationActivity_block_s">Të bllokohet %1$s?</string>
+  <string name="ConversationActivity_block_and_leave_s">Të bllokohet dhe braktiset %1$s?</string>
+  <string name="ConversationActivity_unblock_s">Të zhbllokohet %1$s?</string>
+  <string name="ConversationActivity_you_will_be_able_to_message_and_call_each_other">Do të jeni në gjendje t’i shkruani mesazhe dhe t’i bëni thirrje njëri-tjetrit.</string>
+  <string name="ConversationActivity_group_members_will_be_able_to_add_you_to_this_group_again">Anëtarë të grupit do të jenë në gjendje t’ju rishtojnë te ky grup.</string>
+  <string name="ConversationActivity_blocked_people_will_not_be_able_to_call_you_or_send_you_messages">Personat e bllokuar s’do të jenë në gjendje t’ju bëjnë thirrje apo të lexojnë mesazhet tuaj.</string>
+  <string name="ConversationActivity_you_will_leave_this_group_and_no_longer_receive_messages_or_updates">Do ta braktisni këtë grup dhe s’do të merrni më mesazhe apo përditësime.</string>
+  <string name="ConversationActivity_block">Bllokoje</string>
+  <string name="ConversationActivity_block_and_delete">Bllokoje dhe fshije</string>
+  <string name="ConversationActivity_cancel">Anuloje</string>
+  <string name="ConversationActivity_delete_conversation">Fshij bisedën?</string>
+  <string name="ConversationActivity_delete_and_leave_group">Të fshihet dhe braktiset grupi?</string>
+  <string name="ConversationActivity_this_conversation_will_be_deleted_from_all_of_your_devices">Kjo bisedë do të fshihet prej krejt pajisjeve tuaja.</string>
+  <string name="ConversationActivity_you_will_leave_this_group_and_it_will_be_deleted_from_all_of_your_devices">Do ta braktisni këtë grup dhe do të fshihet prej krejt pajisjeve tuaja.</string>
+  <string name="ConversationActivity_delete">Fshije</string>
+  <string name="ConversationActivity_delete_and_leave">Fshije dhe braktise</string>
   <!--ConversationAdapter-->
   <plurals name="ConversationAdapter_n_unread_messages">
     <item quantity="one">%d mesazh i palexuar</item>
@@ -249,6 +265,7 @@
   <string name="ConversationFragment_you_can_swipe_to_the_left_reply">Për t’u përgjigjur shpejt e shpejt, mund të fërkoni ekranin për majtas</string>
   <string name="ConversationFragment_outgoing_view_once_media_files_are_automatically_removed">Kartela media për parje vetëm një herë, që duhen dërguar, hiqen automatikisht pasi të jenë dërguar.</string>
   <string name="ConversationFragment_you_already_viewed_this_message">E patë tashmë këtë mesazh</string>
+  <string name="ConversationFragment__you_can_add_notes_for_yourself_in_this_conversation">Në këtë bisedë mund të shtoni shënime për veten. Nëse llogaria juaj ka ndonjë pajisje të lidhur, shënimet e reja do të njëkohësohen.</string>
   <!--ConversationListActivity-->
   <string name="ConversationListActivity_there_is_no_browser_installed_on_your_device">Në pajisjen tuaj s\’ka shfletues të instaluar.</string>
   <!--ConversationListFragment-->
@@ -272,6 +289,8 @@
     <item quantity="one">Biseda u shpu te të marrat</item>
     <item quantity="other">%d biseda u shpunë te të marrat</item>
   </plurals>
+  <string name="ConversationListFragment__your_profile_name_has_been_created">Emri i profilit tuaj u krijua.</string>
+  <string name="ConversationListFragment__your_profile_name_has_been_saved">Emri juaj i profilit u ruajt.</string>
   <!--ConversationListItem-->
   <string name="ConversationListItem_key_exchange_message">Mesazh shkëmbimi kyçesh</string>
   <!--ConversationListItemAction-->
@@ -320,6 +339,7 @@
   <string name="DozeReminder_this_device_does_not_support_play_services_tap_to_disable_system_battery">Kjo pajisje nuk mbulon Shërbime Play. Prekeni që të çaktivizohen optimizime baterie sistemi të cilat e pengojnë Signal-in të marrë mesazhe teksa është joaktiv.</string>
   <!--ShareActivity-->
   <string name="ShareActivity_share_with">Ndaje me</string>
+  <string name="ShareActivity_multiple_attachments_are_only_supported">Disa bashkëngjitje njëherësh mbulohen vetëm për figura dhe video</string>
   <!--ExperienceUpgradeActivity-->
   <string name="ExperienceUpgradeActivity_welcome_to_signal_dgaf">Mirë se vini në Signal.</string>
   <string name="ExperienceUpgradeActivity_textsecure_is_now_called_signal">Tanimë TextSecure dhe RedPhone janë një shkëmbyes mesazhesh private i vetëm, për çdo situatë: Signal.</string>
@@ -379,7 +399,7 @@
   <string name="GroupShareProfileView_do_you_want_to_make_your_profile_name_and_photo_visible_to_all_current_and_future_members_of_this_group">Doni t\’i bëni emrin dhe foton e profilit të dukshme për krejt anëtarët e tanishëm dhe të ardhshëm të këtij grupi?</string>
   <string name="GroupShareProfileView_make_visible">Bëji të dukshme</string>
   <!--GroupMembersDialog-->
-  <string name="GroupMembersDialog_me">Unë</string>
+  <string name="GroupMembersDialog_you">Ju</string>
   <!--CropImageActivity-->
   <string name="CropImageActivity_group_avatar">Avatar grupi</string>
   <string name="CropImageActivity_profile_avatar">Avatar</string>
@@ -523,6 +543,26 @@
   <string name="MessageRecord_you_marked_your_safety_number_with_s_verified_from_another_device">E shënuat numrin tuaj të sigurisë me %s si të verifikuar nga një tjetër pajisje</string>
   <string name="MessageRecord_you_marked_your_safety_number_with_s_unverified">E shënuat numrin tuaj të sigurisë me %s si të paverifikuar</string>
   <string name="MessageRecord_you_marked_your_safety_number_with_s_unverified_from_another_device">E shënuat numrin tuaj të sigurisë me %s si të paverifikuar nga një tjetër pajisje</string>
+  <!--MessageRequestBottomView-->
+  <string name="MessageRequestBottomView_accept">Pranoje</string>
+  <string name="MessageRequestBottomView_delete">Fshije</string>
+  <string name="MessageRequestBottomView_block">Bllokoje</string>
+  <string name="MessageRequestBottomView_unblock">Zhbllokoje</string>
+  <string name="MessageRequestBottomView_do_you_want_to_let_s_message_you_they_wont_know_youve_seen_their_messages_until_you_accept">Doni të lejohet %1$s t’ju dërgojë mesazh? S’do ta dijë se e keni parë mesazhin e tij, deri sa të pranoni.</string>
+  <string name="MessageRequestBottomView_do_you_want_to_join_the_group_s_they_wont_know_youve_seen_their_messages_until_you_accept">Doni të bëheni pjesë e grupit %1$s? S’do ta dinë se i keni parë mesazhet e tyre, deri sa të pranoni.</string>
+  <string name="MessageRequestBottomView_unblock_s_to_message_and_call_each_other">Zhbllokojeni %1$s që t’i shkruani mesazhe dhe t’i bëni thirrje njëri-tjetrit.</string>
+  <string name="MessageRequestBottomView_unblock_to_allow_group_members_to_add_you_to_this_group_again">Zhbllokojeni që t’u lejoni anëtarëve të grupit t’ju rishtojnë te ky grup.</string>
+  <string name="MessageRequestProfileView_member_of_one_group">Anëtar i %1$s</string>
+  <string name="MessageRequestProfileView_member_of_two_groups">Anëtar i %1$s dhe %2$s</string>
+  <string name="MessageRequestProfileView_member_of_many_groups">Anëtar i %1$s, %2$s, dhe %3$s</string>
+  <plurals name="MessageRequestProfileView_members">
+    <item quantity="one">%1$d anëtar</item>
+    <item quantity="other">%1$d anëtarë</item>
+  </plurals>
+  <plurals name="MessageRequestProfileView_member_of_others">
+    <item quantity="one">%d tjetër</item>
+    <item quantity="other">%d të tjerë</item>
+  </plurals>
   <!--PassphraseChangeActivity-->
   <string name="PassphraseChangeActivity_passphrases_dont_match_exclamation">Frazëkalimet nuk përputhen!</string>
   <string name="PassphraseChangeActivity_incorrect_old_passphrase_exclamation">Frazëkalim i vjetër i pasaktë!</string>
@@ -574,6 +614,8 @@
   <string name="ReactionsBottomSheetDialogFragment_all">Krejt %1$d</string>
   <!--ReactionsConversationView-->
   <string name="ReactionsConversationView_plus">+%1$d</string>
+  <!--ReactionsRecipientAdapter-->
+  <string name="ReactionsRecipientAdapter_you">Ju</string>
   <!--RecipientPreferencesActivity-->
   <string name="RecipientPreferenceActivity_block_this_contact_question">Të bllokohet ky kontakt?</string>
   <string name="RecipientPreferenceActivity_you_will_no_longer_receive_messages_and_calls_from_this_contact">S\’do të merrni më mesazhe dhe thirrje nga ky kontakt.</string>
@@ -704,6 +746,17 @@
   <string name="StickerPackPreviewActivity_remove">Hiqe</string>
   <string name="StickerPackPreviewActivity_stickers">Ngjitëse</string>
   <string name="StickerPackPreviewActivity_failed_to_load_sticker_pack">S’u arrit të ngarkohej paketë ngjitësish</string>
+  <!--SubmitDebugLogActivity-->
+  <string name="SubmitDebugLogActivity_edit">Përpunojeni</string>
+  <string name="SubmitDebugLogActivity_done">U bë</string>
+  <string name="SubmitDebugLogActivity_tap_a_line_to_delete_it">Prekeni një rresht që të fshihet</string>
+  <string name="SubmitDebugLogActivity_submit">Parashtroje</string>
+  <string name="SubmitDebugLogActivity_failed_to_submit_logs">S’u arrit të parashtrohen regjistra</string>
+  <string name="SubmitDebugLogActivity_success">Sukses!</string>
+  <string name="SubmitDebugLogActivity_copy_this_url_and_add_it_to_your_issue">Kopjojeni këtë URL dhe shtojeni te njoftimi i problemit tuaj ose email-i për asistencën:\n\n<b>%1$s</b></string>
+  <string name="SubmitDebugLogActivity_copied_to_clipboard">U kopjua në të papastër!</string>
+  <string name="SubmitDebugLogActivity_ok">Ok</string>
+  <string name="SubmitDebugLogActivity_share">Ndajeni Me të Tjerë</string>
   <!--ThreadRecord-->
   <string name="ThreadRecord_group_updated">Grupi u përditësua</string>
   <string name="ThreadRecord_left_the_group">Iku nga grupi</string>
@@ -725,6 +778,8 @@
   <string name="ThreadRecord_you_marked_verified">E shënuat si të verifikuar</string>
   <string name="ThreadRecord_you_marked_unverified">E shënuat si të paverifikuar</string>
   <string name="ThreadRecord_message_could_not_be_processed">Mesazhi s’u përpunua dot</string>
+  <string name="ThreadRecord_message_request">Kërkesë Mesazhi</string>
+  <string name="ThreadRecord_s_added_you_to_the_group">%1$s ju shtoi te grupi</string>
   <!--UpdateApkReadyListener-->
   <string name="UpdateApkReadyListener_Signal_update">Përditësim i Signal-it</string>
   <string name="UpdateApkReadyListener_a_new_version_of_signal_is_available_tap_to_update">Është gati një version i ri i Signal-it, prekeni që të përditësohet</string>
@@ -1040,9 +1095,6 @@
   <string name="log_submit_activity__this_log_will_be_posted_online">Ky regjistër do të postohet publikisht në internet që kontribuesit ta shohin, mund ta ekzaminoni dhe përpunoni përpara se ta parashtroni.</string>
   <string name="log_submit_activity__loading_logs">Po ngarkohen në kujtesë regjistrat…</string>
   <string name="log_submit_activity__uploading_logs">Po ngarkohen regjistrat…</string>
-  <string name="log_submit_activity__success">Sukses!</string>
-  <string name="log_submit_activity__copy_this_url_and_add_it_to_your_issue">Kopjojeni këtë URL dhe shtojeni te njoftimi i problemit tuaj ose email-i për asistencën:\n\n<b>%1$s</b>\n</string>
-  <string name="log_submit_activity__copied_to_clipboard">U kopjua në të papastër!</string>
   <string name="log_submit_activity__choose_email_app">Zgjidhni aplikacion email!</string>
   <string name="log_submit_activity__please_review_this_log_from_my_app">Ju lutemi, shqyrtojeni këtë regjistër të aplikacionit tim: %1$s</string>
   <string name="log_submit_activity__network_failure">Dështim rrjeti. Ju lutemi, riprovoni.</string>
@@ -1146,6 +1198,13 @@
   <string name="AndroidManifest__invite_friends">Ftoni shokë</string>
   <string name="AndroidManifest_archived_conversations">Biseda të arkivuara</string>
   <string name="AndroidManifest_remove_photo">Hiqe foton</string>
+  <!--Message Requests Megaphone-->
+  <string name="MessageRequestsMegaphone__message_requests">Kërkesa mesazhesh</string>
+  <string name="MessageRequestsMegaphone__users_can_now_choose_to_accept">Përdoruesit tanimë mund të zgjedhin të pranojnë një bisedë të re. Emrat e profileve u lejojnë njerëzve të dinë se cilët po u dërgojnë mesazhe.</string>
+  <string name="MessageRequestsMegaphone__add_profile_name">Shtoni emër profili</string>
+  <string name="MessageRequestsMegaphone__new_message_requests">E re: Kërkesa mesazhesh</string>
+  <string name="MessageRequestsMegaphone__add_name">Shtoni emër</string>
+  <string name="MessageRequestsMegaphone__you_can_now_choose_whether_to_accept">Tani mund të zgjidhni nëse të pranohet apo jo një bisedë e re. Do të shihni mundësitë “Pranoje”, “Fshije” oseBllokoje”.</string>
   <!--arrays.xml-->
   <string name="arrays__import_export">Importo</string>
   <string name="arrays__use_default">Përdor parazgjedhje</string>
@@ -1247,6 +1306,7 @@
   <string name="preferences__dark_theme">E errët</string>
   <string name="preferences__appearance">Dukje</string>
   <string name="preferences__theme">Temë</string>
+  <string name="preferences__system_default">Parazgjedhje sistemi</string>
   <string name="preferences__default">Parazgjedhje</string>
   <string name="preferences__language">Gjuhë</string>
   <string name="preferences__signal_messages_and_calls">Mesazhe dhe thirrje Signal</string>
@@ -1524,9 +1584,12 @@ spastrohet dhe krejt lënda do të fshihet.</item>
   <string name="KbsMegaphone__well_remind_you_later_creating_a_pin">Do t’jua kujtojmë më vonë. Krijimi i një PIN-i do të jetë i detyrueshëm pas %1$d ditësh.</string>
   <string name="KbsMegaphone__well_remind_you_later_confirming_your_pin">Do t’jua kujtojmë më vonë. Ripohimi i PIN-it tuaj do të jetë i detyrueshëm pas %1$d ditësh.</string>
   <!--Profile Names Megaphone-->
+  <string name="ProfileNamesMegaphone__add_a_profile_name">Shtoni emër profili</string>
   <string name="ProfileNamesMegaphone__this_will_be_displayed_when_you_start">Ky do të shfaqe kur nisni një bisedë të re ose e ndani me të tjerë.</string>
   <string name="ProfileNamesMegaphone__add_profile_name">Shtoni Emër Profili</string>
+  <string name="ProfileNamesMegaphone__confirm_your_profile_name">Ripohoni Emrin tuaj të Profilit</string>
   <string name="ProfileNamesMegaphone__your_profile_can_now_include">Profili juaj tani mund të përfshijë një mbiemër, në daçi.</string>
+  <string name="ProfileNamesMegaphone__confirm_name">Ripohoni Emrin</string>
   <!--transport_selection_list_item-->
   <string name="transport_selection_list_item__transport_icon">Ikonë bartjesh</string>
   <string name="ConversationListFragment_loading">Po ngarkohet…</string>
@@ -1594,6 +1657,7 @@ spastrohet dhe krejt lënda do të fshihet.</item>
   <string name="preferences_app_protection__pin">PIN</string>
   <string name="preferences_app_protection__change">Ndryshojeni</string>
   <string name="preferences_app_protection__create">Krijoni</string>
+  <string name="preferences_app_protection__your_pin_adds_an_extra_layer_of_security_to_your_account">PIN-i juaj shton një shtresë ekstra sigurie te llogaria juaj. Do t’ju kërkohet, kur regjistroni numrin tuaj të telefonit me Signal-in. Nëse harroni PIN-in tuaj, do t’ju kyçet llogaria për 7 ditë.</string>
   <string name="AppProtectionPreferenceFragment_none">Asnjë</string>
   <string name="registration_activity__the_registration_lock_pin_is_not_the_same_as_the_sms_verification_code_you_just_received_please_enter_the_pin_you_previously_configured_in_the_application">PIN-i i Kyçjes së Regjistrimit s\’është i njëjtë me kodin e verifikimit SMS që sapo morët. Ju lutemi, jepni PIN-in që formësuat më herët te aplikacioni.</string>
   <string name="registration_activity__registration_lock_pin">PIN Kyçjeje Regjistrimi</string>
@@ -1635,17 +1699,5 @@ spastrohet dhe krejt lënda do të fshihet.</item>
   <string name="RegistrationLockDialog_reminder">Kujtues:</string>
   <string name="recipient_preferences__about">Mbi</string>
   <string name="Recipient_unknown">I panjohur</string>
-  <string name="MessageRequestBottomView_accept">Pranoje</string>
-  <string name="MessageRequestBottomView_delete">Fshije</string>
-  <string name="MessageRequestBottomView_block">Bllokoje</string>
-  <string name="MessageRequestBottomView_do_you_want_to_let">Doni të merren mesazhe nga %1$s?</string>
-  <string name="MessageRequestProfileView_member_of_one_group">Anëtar i %1$s</string>
-  <string name="MessageRequestProfileView_member_of_two_groups">Anëtar i %1$s dhe %2$s</string>
-  <string name="MessageRequestProfileView_member_of_many_groups">Anëtar i %1$s, %2$s, dhe %3$s</string>
-  <string name="MessageRequestProfileView_members">%1$d anëtarë</string>
-  <plurals name="MessageRequestProfileView_member_of_others">
-    <item quantity="one">%d tjetër</item>
-    <item quantity="other">%d të tjerë</item>
-  </plurals>
   <!--EOF-->
 </resources>
