--- a/app/src/main/res/values-sr/strings.xml
+++ b/app/src/main/res/values-sr/strings.xml
@@ -370,7 +370,7 @@
   <string name="GroupShareProfileView_do_you_want_to_make_your_profile_name_and_photo_visible_to_all_current_and_future_members_of_this_group">Желите ли да учините ваше име и слику са профила видљивим за све текуће и будуће чланове ове групе?</string>
   <string name="GroupShareProfileView_make_visible">Учини видљивим</string>
   <!--GroupMembersDialog-->
-  <string name="GroupMembersDialog_me">Ја</string>
+  <!-- Removed by excludeNonTranslatables <string name="GroupMembersDialog_me">Ја</string> -->
   <!--CropImageActivity-->
   <string name="CropImageActivity_group_avatar">Аватар групе</string>
   <string name="CropImageActivity_profile_avatar">Аватар</string>
@@ -930,8 +930,8 @@
   <string name="log_submit_activity__button_compose_email">Пошаљи е-пошту</string>
   <string name="log_submit_activity__loading_logs">Учитавам записе…</string>
   <string name="log_submit_activity__uploading_logs">Отпремам записе…</string>
-  <string name="log_submit_activity__success">Успех!</string>
-  <string name="log_submit_activity__copied_to_clipboard">Копирано на клипборд</string>
+  <!-- Removed by excludeNonTranslatables <string name="log_submit_activity__success">Успех!</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="log_submit_activity__copied_to_clipboard">Копирано на клипборд</string> -->
   <string name="log_submit_activity__choose_email_app">Изаберите имејл апликацију</string>
   <string name="log_submit_activity__network_failure">Грешка у повезивању. Молимо покушајте поново.</string>
   <!--database_migration_activity-->
