--- a/app/src/main/res/values-sv/strings.xml
+++ b/app/src/main/res/values-sv/strings.xml
@@ -204,6 +204,22 @@
   <string name="ConversationActivity_no_results">Inga resultat</string>
   <string name="ConversationActivity_sticker_pack_installed">Klistermärkespaket installerat</string>
   <string name="ConversationActivity_new_say_it_with_stickers">Nytt! Säg det med klistermärken</string>
+  <string name="ConversationActivity_block_s">Blockera %1$s?</string>
+  <string name="ConversationActivity_block_and_leave_s">Blockera och lämna %1$s?</string>
+  <string name="ConversationActivity_unblock_s">Avblockera %1$s?</string>
+  <string name="ConversationActivity_you_will_be_able_to_message_and_call_each_other">Ni kommer att kunna meddela och ringa varandra.</string>
+  <string name="ConversationActivity_group_members_will_be_able_to_add_you_to_this_group_again">Gruppmedlemmar kommer att kunna lägga till dig i denna grupp igen.</string>
+  <string name="ConversationActivity_blocked_people_will_not_be_able_to_call_you_or_send_you_messages">Blockerade personer kommer inte att kunna ringa dig eller skicka meddelanden.</string>
+  <string name="ConversationActivity_you_will_leave_this_group_and_no_longer_receive_messages_or_updates">Du kommer att lämna den här gruppen och inte längre ta emot meddelanden eller uppdateringar.</string>
+  <string name="ConversationActivity_block">Blockera</string>
+  <string name="ConversationActivity_block_and_delete">Blockera och ta bort</string>
+  <string name="ConversationActivity_cancel">Avbryt</string>
+  <string name="ConversationActivity_delete_conversation">Radera konversation?</string>
+  <string name="ConversationActivity_delete_and_leave_group">Ta bort och lämna gruppen?</string>
+  <string name="ConversationActivity_this_conversation_will_be_deleted_from_all_of_your_devices">Denna konversation kommer att tas bort från alla dina enheter.</string>
+  <string name="ConversationActivity_you_will_leave_this_group_and_it_will_be_deleted_from_all_of_your_devices">Du kommer att lämna den här gruppen och den kommer att tas bort från alla dina enheter.</string>
+  <string name="ConversationActivity_delete">Ta bort</string>
+  <string name="ConversationActivity_delete_and_leave">Ta bort och lämna</string>
   <!--ConversationAdapter-->
   <plurals name="ConversationAdapter_n_unread_messages">
     <item quantity="one">%d oläst meddelande</item>
@@ -249,6 +265,7 @@
   <string name="ConversationFragment_you_can_swipe_to_the_left_reply">Du kan dra åt vänster på ett meddelande för att snabbt svara</string>
   <string name="ConversationFragment_outgoing_view_once_media_files_are_automatically_removed">Filer för utgående visa-en-gång media tas bort automatiskt efter att de har skickats</string>
   <string name="ConversationFragment_you_already_viewed_this_message">Du har redan sett det här meddelandet</string>
+  <string name="ConversationFragment__you_can_add_notes_for_yourself_in_this_conversation">Du kan lägga till anteckningar för dig själv i den här konversationen. Om ditt konto har några länkade enheter synkroniseras nya anteckningar.</string>
   <!--ConversationListActivity-->
   <string name="ConversationListActivity_there_is_no_browser_installed_on_your_device">Det finns ingen webbläsare installerad på din enhet.</string>
   <!--ConversationListFragment-->
@@ -272,6 +289,8 @@
     <item quantity="one">Flyttade konversation till inkorgen</item>
     <item quantity="other">Flyttade %d konversationer till inkorgen</item>
   </plurals>
+  <string name="ConversationListFragment__your_profile_name_has_been_created">Ditt profilnamn har skapats.</string>
+  <string name="ConversationListFragment__your_profile_name_has_been_saved">Ditt profilnamn har sparats.</string>
   <!--ConversationListItem-->
   <string name="ConversationListItem_key_exchange_message">Nyckelutbytesmeddelande</string>
   <!--ConversationListItemAction-->
@@ -320,6 +339,7 @@
   <string name="DozeReminder_this_device_does_not_support_play_services_tap_to_disable_system_battery">Denna enhet stödjer inte Play-tjänster. Tryck för att slå av systemets batterioptimeringar som förhindrar Signal från att ta emot meddelanden medan den är inaktiv.</string>
   <!--ShareActivity-->
   <string name="ShareActivity_share_with">Dela med</string>
+  <string name="ShareActivity_multiple_attachments_are_only_supported">Flera bilagor stöds endast för bilder och videoklipp</string>
   <!--ExperienceUpgradeActivity-->
   <string name="ExperienceUpgradeActivity_welcome_to_signal_dgaf">Välkommen till Signal.</string>
   <string name="ExperienceUpgradeActivity_textsecure_is_now_called_signal">TextSecure och RedPhone är nu en privat meddelandeklient för varje situation: Signal.</string>
@@ -379,7 +399,7 @@
   <string name="GroupShareProfileView_do_you_want_to_make_your_profile_name_and_photo_visible_to_all_current_and_future_members_of_this_group">Vill du göra ditt profilbild och profilnamn synligt för alla nuvarande och framtida medlemmar i denna grupp?</string>
   <string name="GroupShareProfileView_make_visible">Gör synlig</string>
   <!--GroupMembersDialog-->
-  <string name="GroupMembersDialog_me">Jag</string>
+  <string name="GroupMembersDialog_you">Du</string>
   <!--CropImageActivity-->
   <string name="CropImageActivity_group_avatar">Gruppavatar</string>
   <string name="CropImageActivity_profile_avatar">Avatar</string>
@@ -523,6 +543,26 @@
   <string name="MessageRecord_you_marked_your_safety_number_with_s_verified_from_another_device">Du markerade ditt säkerhetsnummer med %s som bekräftat från en annan enhet</string>
   <string name="MessageRecord_you_marked_your_safety_number_with_s_unverified">Du markerade ditt säkerhetsnummer med %s som obekräftat</string>
   <string name="MessageRecord_you_marked_your_safety_number_with_s_unverified_from_another_device">Du markerade ditt säkerhetsnummer med %s som obekräftat från en annan enhet</string>
+  <!--MessageRequestBottomView-->
+  <string name="MessageRequestBottomView_accept">Acceptera</string>
+  <string name="MessageRequestBottomView_delete">Ta bort</string>
+  <string name="MessageRequestBottomView_block">Blockera</string>
+  <string name="MessageRequestBottomView_unblock">Avblockera</string>
+  <string name="MessageRequestBottomView_do_you_want_to_let_s_message_you_they_wont_know_youve_seen_their_messages_until_you_accept">Vill du låta %1$s skicka meddelanden till dig? De vet inte att du har sett deras meddelanden förrän du accepterar.</string>
+  <string name="MessageRequestBottomView_do_you_want_to_join_the_group_s_they_wont_know_youve_seen_their_messages_until_you_accept">Vill du gå med i gruppen %1$s? De vet inte att du har sett deras meddelanden förrän du accepterar.</string>
+  <string name="MessageRequestBottomView_unblock_s_to_message_and_call_each_other">Avblockera %1$s för att skicka meddelande och ringa varandra.</string>
+  <string name="MessageRequestBottomView_unblock_to_allow_group_members_to_add_you_to_this_group_again">Avblockera för att tillåta gruppmedlemmar att lägga till dig i den här gruppen igen.</string>
+  <string name="MessageRequestProfileView_member_of_one_group">Medlem av %1$s</string>
+  <string name="MessageRequestProfileView_member_of_two_groups">Medlem av %1$s och %2$s</string>
+  <string name="MessageRequestProfileView_member_of_many_groups">Medlem av %1$s, %2$s, och %3$s</string>
+  <plurals name="MessageRequestProfileView_members">
+    <item quantity="one">%1$d medlem</item>
+    <item quantity="other">%1$d medlemmar</item>
+  </plurals>
+  <plurals name="MessageRequestProfileView_member_of_others">
+    <item quantity="one">%d annan</item>
+    <item quantity="other">%d andra</item>
+  </plurals>
   <!--PassphraseChangeActivity-->
   <string name="PassphraseChangeActivity_passphrases_dont_match_exclamation">Lösenorden matchar inte!</string>
   <string name="PassphraseChangeActivity_incorrect_old_passphrase_exclamation">Inkorrekt gammalt lösenord!</string>
@@ -575,6 +615,8 @@
   <string name="ReactionsBottomSheetDialogFragment_all">Alla %1$d</string>
   <!--ReactionsConversationView-->
   <string name="ReactionsConversationView_plus">+%1$d</string>
+  <!--ReactionsRecipientAdapter-->
+  <string name="ReactionsRecipientAdapter_you">Du</string>
   <!--RecipientPreferencesActivity-->
   <string name="RecipientPreferenceActivity_block_this_contact_question">Blockera denna kontakt?</string>
   <string name="RecipientPreferenceActivity_you_will_no_longer_receive_messages_and_calls_from_this_contact">Du kommer inte längre få meddelanden eller samtal från denna kontakt.</string>
@@ -703,6 +745,17 @@ Tog emot meddelande för nyckelutbyte för ogiltig protokollversion.</string>
   <string name="StickerPackPreviewActivity_remove">Ta bort</string>
   <string name="StickerPackPreviewActivity_stickers">Stickers</string>
   <string name="StickerPackPreviewActivity_failed_to_load_sticker_pack">Det gick inte att läsa in klistermärkespaketet</string>
+  <!--SubmitDebugLogActivity-->
+  <string name="SubmitDebugLogActivity_edit">Ändra</string>
+  <string name="SubmitDebugLogActivity_done">Klar</string>
+  <string name="SubmitDebugLogActivity_tap_a_line_to_delete_it">Tryck på en rad för att ta bort den</string>
+  <string name="SubmitDebugLogActivity_submit">Skicka</string>
+  <string name="SubmitDebugLogActivity_failed_to_submit_logs">Det gick inte att skicka loggar</string>
+  <string name="SubmitDebugLogActivity_success">Klart!</string>
+  <string name="SubmitDebugLogActivity_copy_this_url_and_add_it_to_your_issue">Kopiera webbadressen och lägg till den i din problemrapport eller support-e-post:\n\n<b>%1$s</b></string>
+  <string name="SubmitDebugLogActivity_copied_to_clipboard">Kopierade till urklipp</string>
+  <string name="SubmitDebugLogActivity_ok">Ok</string>
+  <string name="SubmitDebugLogActivity_share">Dela</string>
   <!--ThreadRecord-->
   <string name="ThreadRecord_group_updated">Grupp uppdaterad</string>
   <string name="ThreadRecord_left_the_group">Lämnade gruppen</string>
@@ -724,6 +777,8 @@ Tog emot meddelande för nyckelutbyte för ogiltig protokollversion.</string>
   <string name="ThreadRecord_you_marked_verified">Du markerade som bekräftad</string>
   <string name="ThreadRecord_you_marked_unverified">Du markerade som obekräftad</string>
   <string name="ThreadRecord_message_could_not_be_processed">Meddelandet kunde inte behandlas</string>
+  <string name="ThreadRecord_message_request">Meddelandebegäran</string>
+  <string name="ThreadRecord_s_added_you_to_the_group">%1$s lade till dig i gruppen</string>
   <!--UpdateApkReadyListener-->
   <string name="UpdateApkReadyListener_Signal_update">Signal-uppdatering</string>
   <string name="UpdateApkReadyListener_a_new_version_of_signal_is_available_tap_to_update">En ny version av Signal finns tillgänglig, tryck för att uppdatera</string>
@@ -1039,9 +1094,6 @@ Tog emot meddelande för nyckelutbyte för ogiltig protokollversion.</string>
   <string name="log_submit_activity__this_log_will_be_posted_online">Denna logg kommer att publiceras på nätet och visas för bidragsgivare. Du kan granska och redigera den innan du skickar.</string>
   <string name="log_submit_activity__loading_logs">Läser in loggar…</string>
   <string name="log_submit_activity__uploading_logs">Skickar loggar…</string>
-  <string name="log_submit_activity__success">Klart!</string>
-  <string name="log_submit_activity__copy_this_url_and_add_it_to_your_issue">Kopiera webbadressen och lägg till den i din felrapport eller support e-post:\n\n<b>%1$s</b>\n</string>
-  <string name="log_submit_activity__copied_to_clipboard">Kopierade till urklipp</string>
   <string name="log_submit_activity__choose_email_app">Välj e-post app</string>
   <string name="log_submit_activity__please_review_this_log_from_my_app">Granska den här loggen från min app är du snäll: %1$s</string>
   <string name="log_submit_activity__network_failure">Nätverksfel, försök igen.</string>
@@ -1145,6 +1197,13 @@ Tog emot meddelande för nyckelutbyte för ogiltig protokollversion.</string>
   <string name="AndroidManifest__invite_friends">Bjud in vänner</string>
   <string name="AndroidManifest_archived_conversations">Arkiverade konversationer</string>
   <string name="AndroidManifest_remove_photo">Ta bort bild</string>
+  <!--Message Requests Megaphone-->
+  <string name="MessageRequestsMegaphone__message_requests">Meddelandeförfrågningar</string>
+  <string name="MessageRequestsMegaphone__users_can_now_choose_to_accept">Användare kan nu välja att acceptera en ny konversation. Profilnamn låter personer veta vem som meddelande dem.</string>
+  <string name="MessageRequestsMegaphone__add_profile_name">Lägg till profilnamn</string>
+  <string name="MessageRequestsMegaphone__new_message_requests">Nytt: Meddelandeförfrågningar</string>
+  <string name="MessageRequestsMegaphone__add_name">Lägg till namn</string>
+  <string name="MessageRequestsMegaphone__you_can_now_choose_whether_to_accept">Du kan nu välja om du vill acceptera en ny konversation. Du ser alternativ för att \"Acceptera\", \"Ta bort\" eller \"Blockera.\"</string>
   <!--arrays.xml-->
   <string name="arrays__import_export">Importera</string>
   <string name="arrays__use_default">Använd standardinställning</string>
@@ -1246,6 +1305,7 @@ Tog emot meddelande för nyckelutbyte för ogiltig protokollversion.</string>
   <string name="preferences__dark_theme">Mörkt</string>
   <string name="preferences__appearance">Utseende</string>
   <string name="preferences__theme">Tema</string>
+  <string name="preferences__system_default">Systemets standardinställning</string>
   <string name="preferences__default">Standard</string>
   <string name="preferences__language">Språk</string>
   <string name="preferences__signal_messages_and_calls">Signal-meddelanden och -samtal</string>
@@ -1522,8 +1582,12 @@ Tog emot meddelande för nyckelutbyte för ogiltig protokollversion.</string>
   <string name="KbsMegaphone__well_remind_you_later_creating_a_pin">Vi påminner dig senare. Att skapa en PIN-kod blir obligatorisk om %1$d dagar.</string>
   <string name="KbsMegaphone__well_remind_you_later_confirming_your_pin">Vi påminner dig senare. Bekräfta din PIN-kod blir obligatorisk om %1$d dagar.</string>
   <!--Profile Names Megaphone-->
+  <string name="ProfileNamesMegaphone__add_a_profile_name">Lägg till ett profilnamn</string>
   <string name="ProfileNamesMegaphone__this_will_be_displayed_when_you_start">Detta visas när du startar en ny konversation eller delar den.</string>
+  <string name="ProfileNamesMegaphone__add_profile_name">Lägg till profilnamn</string>
+  <string name="ProfileNamesMegaphone__confirm_your_profile_name">Bekräfta ditt profilnamn</string>
   <string name="ProfileNamesMegaphone__your_profile_can_now_include">Din profil kan nu innehålla ett valfritt efternamn.</string>
+  <string name="ProfileNamesMegaphone__confirm_name">Bekräfta namn</string>
   <!--transport_selection_list_item-->
   <string name="transport_selection_list_item__transport_icon">Transportikon</string>
   <string name="ConversationListFragment_loading">Hämtar in…</string>
@@ -1591,6 +1655,7 @@ Tog emot meddelande för nyckelutbyte för ogiltig protokollversion.</string>
   <string name="preferences_app_protection__pin">PIN-kod</string>
   <string name="preferences_app_protection__change">Ändra</string>
   <string name="preferences_app_protection__create">Skapa</string>
+  <string name="preferences_app_protection__your_pin_adds_an_extra_layer_of_security_to_your_account">Din PIN-kod lägger till ett extra lager av säkerhet till ditt konto. Du kommer att bli ombedd för det när du registrerar ditt telefonnummer med Signal. Om du glömmer din PIN-kod kommer du att vara låst från ditt konto i 7 dagar.</string>
   <string name="AppProtectionPreferenceFragment_none">Ingen</string>
   <string name="registration_activity__the_registration_lock_pin_is_not_the_same_as_the_sms_verification_code_you_just_received_please_enter_the_pin_you_previously_configured_in_the_application">PIN-koden för registreringslåset är inte samma som den SMS-bekräftelsekod du precis fick. Ange PIN-koden du tidigare ställde in i appen.</string>
   <string name="registration_activity__registration_lock_pin">PIN-kod för registreringslås</string>
@@ -1632,17 +1697,5 @@ Tog emot meddelande för nyckelutbyte för ogiltig protokollversion.</string>
   <string name="RegistrationLockDialog_reminder">Påminnelse:</string>
   <string name="recipient_preferences__about">Om</string>
   <string name="Recipient_unknown">Okänt</string>
-  <string name="MessageRequestBottomView_accept">Acceptera</string>
-  <string name="MessageRequestBottomView_delete">Ta bort</string>
-  <string name="MessageRequestBottomView_block">Blockera</string>
-  <string name="MessageRequestBottomView_do_you_want_to_let">Vill du ta emot meddelanden från %1$s?</string>
-  <string name="MessageRequestProfileView_member_of_one_group">Medlem av %1$s</string>
-  <string name="MessageRequestProfileView_member_of_two_groups">Medlem av %1$s och %2$s</string>
-  <string name="MessageRequestProfileView_member_of_many_groups">Medlem av %1$s, %2$s, och %3$s</string>
-  <string name="MessageRequestProfileView_members">%1$d medlemmar</string>
-  <plurals name="MessageRequestProfileView_member_of_others">
-    <item quantity="one">%d annan</item>
-    <item quantity="other">%d andra</item>
-  </plurals>
   <!--EOF-->
 </resources>
