--- a/app/src/main/res/values-ta/strings.xml
+++ b/app/src/main/res/values-ta/strings.xml
@@ -204,6 +204,10 @@
   <string name="ConversationActivity_no_results">முடிவுகள் இல்லை</string>
   <string name="ConversationActivity_sticker_pack_installed">ஸ்டிக்கர் பேக் நிறுவப்பட்டுள்ளது</string>
   <string name="ConversationActivity_new_say_it_with_stickers">புதிய! அதை ஸ்டிக்கர்களால் சொல்லுங்கள்</string>
+  <string name="ConversationActivity_block">தடு </string>
+  <string name="ConversationActivity_cancel">ரத்து</string>
+  <string name="ConversationActivity_delete_conversation">உரையாடலை நீக்கு ?</string>
+  <string name="ConversationActivity_delete">அழி</string>
   <!--ConversationAdapter-->
   <plurals name="ConversationAdapter_n_unread_messages">
     <item quantity="one">%d படிக்காத செய்தி</item>
@@ -379,7 +383,7 @@
   <string name="GroupShareProfileView_do_you_want_to_make_your_profile_name_and_photo_visible_to_all_current_and_future_members_of_this_group">இந்த குழுவின் தற்போதைய மற்றும் எதிர்கால உறுப்பினர்கள் அனைவருக்கும் உங்கள் சுயவிவரப் பெயரையும் புகைப்படத்தையும் காண விரும்புகிறீர்களா?</string>
   <string name="GroupShareProfileView_make_visible">தெரியும்படி செய்</string>
   <!--GroupMembersDialog-->
-  <string name="GroupMembersDialog_me">நான்</string>
+  <string name="GroupMembersDialog_you">நீங்கள்</string>
   <!--CropImageActivity-->
   <string name="CropImageActivity_group_avatar">குழு சின்னம்</string>
   <string name="CropImageActivity_profile_avatar">அவதாரம்</string>
@@ -523,6 +527,18 @@
   <string name="MessageRecord_you_marked_your_safety_number_with_s_verified_from_another_device">உங்கள் பாதுகாப்பு எண்ணை வேறொரு சாதனத்திலிருந்து சரிபார்க்கப்பட்ட %s உடன் குறித்தீர்கள்</string>
   <string name="MessageRecord_you_marked_your_safety_number_with_s_unverified">உங்கள் பாதுகாப்பு எண்ணை %s சரிபார்க்கப்படாமல் குறித்தீர்கள்</string>
   <string name="MessageRecord_you_marked_your_safety_number_with_s_unverified_from_another_device">உங்கள் பாதுகாப்பு எண்ணை மற்றொரு சாதனத்திலிருந்து சரிபார்க்கப்படாத %s உடன் குறித்தீர்கள்</string>
+  <!--MessageRequestBottomView-->
+  <string name="MessageRequestBottomView_accept">ஒப்புக்கொள்</string>
+  <string name="MessageRequestBottomView_delete">அழி</string>
+  <string name="MessageRequestBottomView_block">தடு </string>
+  <string name="MessageRequestBottomView_unblock">தடைநீக்கு </string>
+  <string name="MessageRequestProfileView_member_of_one_group">உறுப்பினர்%1$s</string>
+  <string name="MessageRequestProfileView_member_of_two_groups">உறுப்பினர் %1$s மற்றும் %2$s</string>
+  <string name="MessageRequestProfileView_member_of_many_groups">உறுப்பினர் %1$s, %2$s, மற்றும் %3$s</string>
+  <plurals name="MessageRequestProfileView_member_of_others">
+    <item quantity="one">%d மற்ற</item>
+    <item quantity="other">%d மற்றவைகள்</item>
+  </plurals>
   <!--PassphraseChangeActivity-->
   <string name="PassphraseChangeActivity_passphrases_dont_match_exclamation">கடவுச்சொற்கள் பொருந்தவில்லை!</string>
   <string name="PassphraseChangeActivity_incorrect_old_passphrase_exclamation">தவறான பழைய கடவுச்சொல்!</string>
@@ -576,6 +592,8 @@
   <string name="ReactionsBottomSheetDialogFragment_all">எல்லா%1$d</string>
   <!--ReactionsConversationView-->
   <string name="ReactionsConversationView_plus">+%1$d</string>
+  <!--ReactionsRecipientAdapter-->
+  <string name="ReactionsRecipientAdapter_you">நீங்கள்</string>
   <!--RecipientPreferencesActivity-->
   <string name="RecipientPreferenceActivity_block_this_contact_question">இந்த தொடர்பைத் தடுக்கவா?</string>
   <string name="RecipientPreferenceActivity_you_will_no_longer_receive_messages_and_calls_from_this_contact">இந்த தொடர்பிலிருந்து நீங்கள் இனி செய்திகளையும் அழைப்புகளையும் பெற மாட்டீர்கள்.</string>
@@ -706,6 +724,13 @@
   <string name="StickerPackPreviewActivity_remove">நீக்கு</string>
   <string name="StickerPackPreviewActivity_stickers">ஓட்டிகள்</string>
   <string name="StickerPackPreviewActivity_failed_to_load_sticker_pack">ஸ்டிக்கர் பேக்கை ஏற்றுவதில் தோல்வி</string>
+  <!--SubmitDebugLogActivity-->
+  <string name="SubmitDebugLogActivity_edit">தொகு</string>
+  <string name="SubmitDebugLogActivity_done">முடிந்தது</string>
+  <string name="SubmitDebugLogActivity_submit">சமர்ப்பி</string>
+  <string name="SubmitDebugLogActivity_success">வெற்றி!</string>
+  <string name="SubmitDebugLogActivity_copied_to_clipboard">கிளிப்போர்டுக்கு நகலெடுக்கப்பட்டது</string>
+  <string name="SubmitDebugLogActivity_share">பகிர்</string>
   <!--ThreadRecord-->
   <string name="ThreadRecord_group_updated">குழு புதுப்பிக்கப்பட்டது</string>
   <string name="ThreadRecord_left_the_group">குழுவிலிருந்து வெளியேறினார்</string>
@@ -727,6 +752,7 @@
   <string name="ThreadRecord_you_marked_verified">சரிபார்க்கப்பட்டதைக் குறித்தீர்கள்</string>
   <string name="ThreadRecord_you_marked_unverified">நீங்கள் சரிபார்க்கப்படவில்லை எனக் குறித்தீர்கள்</string>
   <string name="ThreadRecord_message_could_not_be_processed">செய்தியை செயலாக்க முடியவில்லை</string>
+  <string name="ThreadRecord_message_request">செய்தி கோரிக்கை</string>
   <!--UpdateApkReadyListener-->
   <string name="UpdateApkReadyListener_Signal_update">Signal புதுப்பிப்பு</string>
   <string name="UpdateApkReadyListener_a_new_version_of_signal_is_available_tap_to_update">Signal புதிய பதிப்பு கிடைக்கும், புதுப்பிக்க தட்டவும்</string>
@@ -1042,9 +1068,6 @@
   <string name="log_submit_activity__this_log_will_be_posted_online">பங்களிப்பாளர்களைக் காண இந்த பதிவு ஆன்லைனில் பொதுவில் வெளியிடப்படும், சமர்ப்பிக்கும் முன் அதை ஆராய்ந்து திருத்தலாம்.</string>
   <string name="log_submit_activity__loading_logs">பதிவுகளை ஏற்றுகிறது…</string>
   <string name="log_submit_activity__uploading_logs">பதிவுகள் பதிவேற்றுகிறது…</string>
-  <string name="log_submit_activity__success">வெற்றி!</string>
-  <string name="log_submit_activity__copy_this_url_and_add_it_to_your_issue">இந்த URL ஐ நகலெடுத்து உங்கள் வெளியீட்டு அறிக்கை அல்லது ஆதரவு மின்னஞ்சலில் சேர்க்கவும்:\n\n<b>%1$s</b>\n</string>
-  <string name="log_submit_activity__copied_to_clipboard">கிளிப்போர்டுக்கு நகலெடுக்கப்பட்டது</string>
   <string name="log_submit_activity__choose_email_app">மின்னஞ்சல் பயன்பாடு தேர்வுசெய்க</string>
   <string name="log_submit_activity__please_review_this_log_from_my_app">எனது பயன்பாடு இந்த பதிவை மதிப்பாய்வு செய்யவும்: 1%1$s</string>
   <string name="log_submit_activity__network_failure">பிணைய தோல்வி. தயவு செய்து மீண்டும் முயற்சிக்கவும்.</string>
@@ -1149,6 +1172,7 @@
   <string name="AndroidManifest__invite_friends">நண்பர்களை அழைக்க</string>
   <string name="AndroidManifest_archived_conversations">காப்பகப்படுத்தப்பட்ட உரையாடல்கள்</string>
   <string name="AndroidManifest_remove_photo">புகைப்படத்தை அகற்று</string>
+  <!--Message Requests Megaphone-->
   <!--arrays.xml-->
   <string name="arrays__import_export">இறக்குமதி செய்</string>
   <string name="arrays__use_default">இயல்புநிலை பயன்படுத்தவும்</string>
@@ -1598,17 +1622,5 @@
   <string name="RegistrationLockDialog_reminder">நினைவூட்டல்:</string>
   <string name="recipient_preferences__about">அறிமுகம்</string>
   <string name="Recipient_unknown">தெரியாத</string>
-  <string name="MessageRequestBottomView_accept">ஒப்புக்கொள்</string>
-  <string name="MessageRequestBottomView_delete">அழி</string>
-  <string name="MessageRequestBottomView_block">தடு </string>
-  <string name="MessageRequestBottomView_do_you_want_to_let"> %1$sயிடமிருந்து நீங்கள் செய்திகளைப் பெற விரும்புகிறீர்களா?</string>
-  <string name="MessageRequestProfileView_member_of_one_group">உறுப்பினர்%1$s</string>
-  <string name="MessageRequestProfileView_member_of_two_groups">உறுப்பினர் %1$s மற்றும் %2$s</string>
-  <string name="MessageRequestProfileView_member_of_many_groups">உறுப்பினர் %1$s, %2$s, மற்றும் %3$s</string>
-  <string name="MessageRequestProfileView_members">%1$d உறுப்பினர்கள்</string>
-  <plurals name="MessageRequestProfileView_member_of_others">
-    <item quantity="one">%d மற்ற</item>
-    <item quantity="other">%d மற்றவைகள்</item>
-  </plurals>
   <!--EOF-->
 </resources>
