--- a/app/src/main/res/values-te/strings.xml
+++ b/app/src/main/res/values-te/strings.xml
@@ -201,6 +201,10 @@
   <string name="ConversationActivity_no_results">ఫలితాలు లేవు</string>
   <string name="ConversationActivity_sticker_pack_installed">స్టిక్కర్ ప్యాక్ వ్యవస్థాపించబడింది</string>
   <string name="ConversationActivity_new_say_it_with_stickers">కొత్త! స్టిక్కర్లతో చెప్పండి</string>
+  <string name="ConversationActivity_block">నిరోధించు</string>
+  <string name="ConversationActivity_cancel">రద్దు</string>
+  <string name="ConversationActivity_delete_conversation">సందేశాలను తొలగించాలా?</string>
+  <string name="ConversationActivity_delete">తొలగించండి</string>
   <!--ConversationAdapter-->
   <plurals name="ConversationAdapter_n_unread_messages">
     <item quantity="one">%d చదవని సందేశం </item>
@@ -250,6 +254,7 @@
   <string name="ConversationFragment_you_can_swipe_to_the_left_reply">త్వరగా సమాధానం ఇవ్వడానికి మీరు ఏదైనా సందేశంలో ఎడమ వైపుకు స్వైప్ చేయవచ్చు</string>
   <string name="ConversationFragment_outgoing_view_once_media_files_are_automatically_removed">అవుట్గోయింగ్  ఒకసారి-దృశ్యం  మీడియా ఫైల్స్ పంపిన తర్వాత స్వయంచాలకంగా తొలగించబడతాయి</string>
   <string name="ConversationFragment_you_already_viewed_this_message">మీరు ఇప్పటికే ఈ సందేశాన్ని చూశారు</string>
+  <string name="ConversationFragment__you_can_add_notes_for_yourself_in_this_conversation">ఈ సంభాషణలో మీరు మీ కోసం గమనికలను జోడించవచ్చు. మీ ఖాతాకు ఏదైనా లింక్ చేసిన పరికరాలు ఉంటే, క్రొత్త గమనికలు సమకాలీకరించబడతాయి.</string>
   <!--ConversationListActivity-->
   <string name="ConversationListActivity_there_is_no_browser_installed_on_your_device">మీ పరికరంలో ఎటువంటి బ్రౌజర్ ఇన్స్టాల్ అయి లేదు</string>
   <!--ConversationListFragment-->
@@ -381,7 +386,7 @@
   <string name="GroupShareProfileView_do_you_want_to_make_your_profile_name_and_photo_visible_to_all_current_and_future_members_of_this_group">మీరు మీ రూపం పేరు మరియు చిత్రం  ఈ సమూహం యొక్క అన్ని ప్రస్తుత మరియు భవిష్యత్తు సభ్యులకు కనిపించాలనుకుంటున్నారా?</string>
   <string name="GroupShareProfileView_make_visible">కనిపించేలా చేయండి</string>
   <!--GroupMembersDialog-->
-  <string name="GroupMembersDialog_me">నేను</string>
+  <string name="GroupMembersDialog_you">మీరు</string>
   <!--CropImageActivity-->
   <string name="CropImageActivity_group_avatar">గ్రూప్ అవతార్</string>
   <string name="CropImageActivity_profile_avatar">అవతారము</string>
@@ -520,6 +525,18 @@
   <string name="MessageRecord_you_marked_your_safety_number_with_s_verified_from_another_device">మీరు మరొక పరికరం నుండి %s తో ధృవీకరించినట్లుగా మీ భద్రతా నంబరును గుర్తు పెట్టారు</string>
   <string name="MessageRecord_you_marked_your_safety_number_with_s_unverified">మీరు %s తో మీ భద్రతా నంబర్ను ధృవీకరించనిదిగా గుర్తించారు</string>
   <string name="MessageRecord_you_marked_your_safety_number_with_s_unverified_from_another_device">మీరు %s తో మీ భద్రత సంఖ్యను మరొక పరికరం నుండి ధృవీకరించనిదిగా గుర్తు పెట్టారు</string>
+  <!--MessageRequestBottomView-->
+  <string name="MessageRequestBottomView_accept">అంగీకరించండి</string>
+  <string name="MessageRequestBottomView_delete">తొలగించండి</string>
+  <string name="MessageRequestBottomView_block">నిరోధించు</string>
+  <string name="MessageRequestBottomView_unblock">అనుమతించు</string>
+  <string name="MessageRequestProfileView_member_of_one_group">సభ్యుడు %1$s</string>
+  <string name="MessageRequestProfileView_member_of_two_groups">%1$sమరియు %2$sసభ్యుడు</string>
+  <string name="MessageRequestProfileView_member_of_many_groups">%1$s,%2$s, మరియు%3$s సభ్యుడు</string>
+  <plurals name="MessageRequestProfileView_member_of_others">
+    <item quantity="one">%dఇతర</item>
+    <item quantity="other">%dఇతరులు </item>
+  </plurals>
   <!--PassphraseChangeActivity-->
   <string name="PassphraseChangeActivity_passphrases_dont_match_exclamation">సంకేతపదములను సరిపోలడం లేదు!</string>
   <string name="PassphraseChangeActivity_incorrect_old_passphrase_exclamation">సరికాని పాత సంకేతపదము!</string>
@@ -570,6 +587,8 @@
   <string name="RatingManager_whoops_the_play_store_app_does_not_appear_to_be_installed">అయ్యో, </string>
   <!--ReactionsBottomSheetDialogFragment-->
   <!--ReactionsConversationView-->
+  <!--ReactionsRecipientAdapter-->
+  <string name="ReactionsRecipientAdapter_you">మీరు</string>
   <!--RecipientPreferencesActivity-->
   <string name="RecipientPreferenceActivity_block_this_contact_question">ఈ పరిచయం నిరోధించాలా?</string>
   <string name="RecipientPreferenceActivity_you_will_no_longer_receive_messages_and_calls_from_this_contact">మీరు ఇకపై ఈ వ్యక్తి నుండి ఏటువంతి సందేశాలను మరియు కాల్స్ అందుకోరు.</string>
@@ -693,6 +712,13 @@
   <string name="StickerPackPreviewActivity_remove">తొలగించు</string>
   <string name="StickerPackPreviewActivity_stickers">స్టిక్కర్లు</string>
   <string name="StickerPackPreviewActivity_failed_to_load_sticker_pack">స్టిక్కర్ ప్యాక్ లోడ్ చేయడంలో విఫలమైంది</string>
+  <!--SubmitDebugLogActivity-->
+  <string name="SubmitDebugLogActivity_edit">సరిచేయు</string>
+  <string name="SubmitDebugLogActivity_done">పూర్తి</string>
+  <string name="SubmitDebugLogActivity_submit">సమర్పించండి</string>
+  <string name="SubmitDebugLogActivity_success">విజయం!</string>
+  <string name="SubmitDebugLogActivity_copied_to_clipboard">క్లిప్బోర్డ్కు కాపీ చేయబడింది</string>
+  <string name="SubmitDebugLogActivity_share">పంచుకోండి</string>
   <!--ThreadRecord-->
   <string name="ThreadRecord_group_updated">సమూహం నవీకరించబడింది</string>
   <string name="ThreadRecord_left_the_group">సమూహన్ని వదిలివేయుట</string>
@@ -714,6 +740,7 @@
   <string name="ThreadRecord_you_marked_verified">మీరు ధృవీకరించినట్లుగా గుర్తు పెట్టారు</string>
   <string name="ThreadRecord_you_marked_unverified">మీరు ధృవీకరించబడనిదిగా గుర్తు పెట్టారు</string>
   <string name="ThreadRecord_message_could_not_be_processed">సందేశాన్ని ప్రాసెస్ చేయడం సాధ్యం కాలేదు</string>
+  <string name="ThreadRecord_message_request">సందేశ అభ్యర్థన</string>
   <!--UpdateApkReadyListener-->
   <string name="UpdateApkReadyListener_Signal_update">Signal నవీకరణ</string>
   <string name="UpdateApkReadyListener_a_new_version_of_signal_is_available_tap_to_update">Signal యొక్క కొత్త వివరణం అందుబాటులో ఉంది, నవీకరణ కొరకు తట్టండి</string>
@@ -1029,9 +1056,6 @@
   <string name="log_submit_activity__this_log_will_be_posted_online">ఈ లాగ్ కంట్రిబ్యూటర్లకు ఆన్లైన్లో బహిరంగంగా పోస్ట్ చేయబడుతుంది, మీరు సమర్పించే ముందు దానిని పరిశీలించి సవరించవచ్చు.</string>
   <string name="log_submit_activity__loading_logs">సంఘటన లేకరిను లోడ్ చేస్తోంది …</string>
   <string name="log_submit_activity__uploading_logs">సంఘటన లేకరిను అప్లోడ్ చేస్తోంది …</string>
-  <string name="log_submit_activity__success">విజయం!</string>
-  <string name="log_submit_activity__copy_this_url_and_add_it_to_your_issue">ఈ URL ను కాపీ చేసి, మీ సమస్య నివేదికలో లేదా మద్దతు ఇమెయిల్కు జోడించండి:\n\n<b>%1$s</b>\n</string>
-  <string name="log_submit_activity__copied_to_clipboard">క్లిప్బోర్డ్కు కాపీ చేయబడింది</string>
   <string name="log_submit_activity__choose_email_app">ఇమెయిల్ అనువర్తనాన్ని ఎంచుకోండి</string>
   <string name="log_submit_activity__please_review_this_log_from_my_app">దయచేసి నా అనువర్తనం నుండి ఈ లాగ్ను సమీక్షించండి: %1$s</string>
   <string name="log_submit_activity__network_failure">నెట్వర్క్ వైఫల్యం. దయచేసి మళ్లీ ప్రయత్నించండి.</string>
@@ -1135,6 +1159,7 @@
   <string name="AndroidManifest__invite_friends">స్నేహితులను ఆహ్వానించండి</string>
   <string name="AndroidManifest_archived_conversations">భద్రపరిచిన సంభాషణలు</string>
   <string name="AndroidManifest_remove_photo">చిత్రం  తీసివేయండి</string>
+  <!--Message Requests Megaphone-->
   <!--arrays.xml-->
   <string name="arrays__import_export">దిగుమతి</string>
   <string name="arrays__use_default"> అప్రమేయం ఉపయోగించు</string>
@@ -1568,17 +1593,5 @@
   <string name="RegistrationLockDialog_reminder">రిమైండర్:</string>
   <string name="recipient_preferences__about">గురించి</string>
   <string name="Recipient_unknown">తెలియని</string>
-  <string name="MessageRequestBottomView_accept">అంగీకరించండి</string>
-  <string name="MessageRequestBottomView_delete">తొలగించండి</string>
-  <string name="MessageRequestBottomView_block">నిరోధించు</string>
-  <string name="MessageRequestBottomView_do_you_want_to_let">మీరు నుండి సందేశాలను స్వీకరించాలనుకుంటున్నారా%1$s?</string>
-  <string name="MessageRequestProfileView_member_of_one_group">సభ్యుడు %1$s</string>
-  <string name="MessageRequestProfileView_member_of_two_groups">%1$sమరియు %2$sసభ్యుడు</string>
-  <string name="MessageRequestProfileView_member_of_many_groups">%1$s,%2$s, మరియు%3$s సభ్యుడు</string>
-  <string name="MessageRequestProfileView_members">%1$dసభ్యులు</string>
-  <plurals name="MessageRequestProfileView_member_of_others">
-    <item quantity="one">%dఇతర</item>
-    <item quantity="other">%dఇతరులు </item>
-  </plurals>
   <!--EOF-->
 </resources>
