--- a/app/src/main/res/values-th/strings.xml
+++ b/app/src/main/res/values-th/strings.xml
@@ -40,6 +40,7 @@
   <string name="ApplicationPreferencesActivity_Off">ปิด</string>
   <string name="ApplicationPreferencesActivity_sms_mms_summary">SMS %1$s MMS %2$s</string>
   <string name="ApplicationPreferencesActivity_privacy_summary">ล็อกหน้าจอ%1$s ล็อกการลงทะเบียน%2$s</string>
+  <string name="ApplicationPreferencesActivity_privacy_summary_screen_lock">ล็อคหน้าจอ %1$s</string>
   <string name="ApplicationPreferencesActivity_appearance_summary">ธีม %1$s ภาษา %2$s</string>
   <!--AppProtectionPreferenceFragment-->
   <plurals name="AppProtectionPreferenceFragment_minutes">
@@ -57,6 +58,7 @@
   <string name="AttachmentKeyboard_file">ไฟล์</string>
   <string name="AttachmentKeyboard_contact">ผู้ติดต่อ</string>
   <string name="AttachmentKeyboard_location">ตำแหน่งที่ตั้ง</string>
+  <string name="AttachmentKeyboard_give_access">อนุญาตให้เข้าถึง</string>
   <!--AttachmentManager-->
   <string name="AttachmentManager_cant_open_media_selection">ไม่พบแอปสำหรับเลือกสื่อ</string>
   <string name="AttachmentManager_signal_requires_the_external_storage_permission_in_order_to_attach_photos_videos_or_audio">เพื่อที่จะแนบรูปภาพ วิดีโอ หรือเสียง Signal ต้องได้รับอนุญาตให้เข้าถึงที่เก็บข้อมูล แต่คำขอนั้นถูกปฏิเสธอย่างถาวร กรุณาไปที่เมนูตั้งค่าแอป เลือก \"การอนุญาต\" และเปิดใช้งาน \"ที่เก็บข้อมูล\"</string>
@@ -198,6 +200,16 @@
   <string name="ConversationActivity_no_results">ไม่พบข้อมูล</string>
   <string name="ConversationActivity_sticker_pack_installed">ติดตั้งสติกเกอร์แล้ว</string>
   <string name="ConversationActivity_new_say_it_with_stickers">ใหม่! พูดด้วยสติกเกอร์</string>
+  <string name="ConversationActivity_block_s">บล็อค %1$s ไหม?</string>
+  <string name="ConversationActivity_block_and_leave_s">บล็อคและออกจาก %1$s ไหม?</string>
+  <string name="ConversationActivity_unblock_s">ปลดบล็อค %1$s?</string>
+  <string name="ConversationActivity_you_will_leave_this_group_and_no_longer_receive_messages_or_updates">คุณจะออกจากลุ่มนี้และจะไม่ได้รับข้อความหรือความเคลื่อนไหวอีก</string>
+  <string name="ConversationActivity_block">บล็อค</string>
+  <string name="ConversationActivity_cancel">ยกเลิก</string>
+  <string name="ConversationActivity_delete_conversation">ลบการสนทนา?</string>
+  <string name="ConversationActivity_delete_and_leave_group">ลบและออกจากกลุ่ม?</string>
+  <string name="ConversationActivity_delete">ลบ</string>
+  <string name="ConversationActivity_delete_and_leave">ลบและออก</string>
   <!--ConversationAdapter-->
   <plurals name="ConversationAdapter_n_unread_messages">
     <item quantity="other">%d ข้อความที่ยังไม่ได้อ่าน</item>
@@ -255,6 +267,8 @@
   <plurals name="ConversationListFragment_moved_conversations_to_inbox">
     <item quantity="other">ย้าย %d การสนทนาไปยังกล่องขาเข้า</item>
   </plurals>
+  <string name="ConversationListFragment__your_profile_name_has_been_created">ชื่อโปรไฟล์ของคุณถูกสร้างแล้ว</string>
+  <string name="ConversationListFragment__your_profile_name_has_been_saved">ชื่อโปรไฟล์ของคุณถูกบันทึกแล้ว</string>
   <!--ConversationListItem-->
   <string name="ConversationListItem_key_exchange_message">ข้อความแลกเปลี่ยนคีย์</string>
   <!--ConversationListItemAction-->
@@ -362,7 +376,7 @@
   <string name="GroupShareProfileView_do_you_want_to_make_your_profile_name_and_photo_visible_to_all_current_and_future_members_of_this_group">คุณต้องการให้สมาชิกทั้งหมดของกลุ่มนี้ทั้งในตอนนี้และในอนาคต เห็นชื่อและรูปโปรไฟล์ของคุณหรือไม่?</string>
   <string name="GroupShareProfileView_make_visible">ทำให้มองเห็น</string>
   <!--GroupMembersDialog-->
-  <string name="GroupMembersDialog_me">ฉัน</string>
+  <string name="GroupMembersDialog_you">คุณ</string>
   <!--CropImageActivity-->
   <string name="CropImageActivity_group_avatar">อวตารกลุ่ม</string>
   <string name="CropImageActivity_profile_avatar">อวตาร</string>
@@ -439,7 +453,9 @@
   <string name="MediaOverviewActivity_sent_by_s_to_s">ส่งโดย %1$s ถึง %2$s</string>
   <string name="MediaOverviewActivity_sent_by_you_to_s">ส่งโดยคุณถึง %1$s</string>
   <!--Megaphones-->
-  <string name="Megaphones_remind_me_later">เตือนฉันอีกที</string>
+  <string name="Megaphones_remind_me_later">เตือนฉันทีหลัง</string>
+  <string name="Megaphones_verify_your_signal_pin">ตรวจยืนยันรหัส PIN ของ Signal ของคุณ</string>
+  <string name="Megaphones_verify_pin">ตรวจยืนยันรหัส PIN</string>
   <!--NotificationBarManager-->
   <string name="NotificationBarManager_signal_call_in_progress">กำลังใช้สาย Signal อยู่</string>
   <string name="NotificationBarManager__establishing_signal_call">กำลังเริ่มสาย Signal</string>
@@ -494,6 +510,17 @@
   <string name="MessageRecord_you_marked_your_safety_number_with_s_verified_from_another_device">คุณทำเครื่องหมายจากอีกอุปกรณ์ว่า รหัสความปลอดภัยระหว่างคุณกับ %s ถูกยืนยันแล้ว</string>
   <string name="MessageRecord_you_marked_your_safety_number_with_s_unverified">คุณทำเครื่องหมายว่า รหัสความปลอดภัยระหว่างคุณกับ %s ยังไม่ถูกยืนยัน</string>
   <string name="MessageRecord_you_marked_your_safety_number_with_s_unverified_from_another_device">คุณทำเครื่องหมายจากอีกอุปกรณ์ว่า รหัสความปลอดภัยระหว่างคุณกับ %s ยังไม่ถูกยืนยัน</string>
+  <!--MessageRequestBottomView-->
+  <string name="MessageRequestBottomView_accept">ยอมรับ</string>
+  <string name="MessageRequestBottomView_delete">ลบ</string>
+  <string name="MessageRequestBottomView_block">บล็อก</string>
+  <string name="MessageRequestBottomView_unblock">เลิกบล็อค</string>
+  <string name="MessageRequestProfileView_member_of_one_group">สมาชิกของ %1$s</string>
+  <string name="MessageRequestProfileView_member_of_two_groups">สมาชิกของ %1$s และ %2$s</string>
+  <string name="MessageRequestProfileView_member_of_many_groups">สมาชิกของ %1$s%2$s และ %3$s</string>
+  <plurals name="MessageRequestProfileView_member_of_others">
+    <item quantity="other">%d อื่นๆ</item>
+  </plurals>
   <!--PassphraseChangeActivity-->
   <string name="PassphraseChangeActivity_passphrases_dont_match_exclamation">วลีรหัสผ่านไม่ถูกต้อง!</string>
   <string name="PassphraseChangeActivity_incorrect_old_passphrase_exclamation">วลีรหัสผ่านเดิมไม่ถูกต้อง!</string>
@@ -544,7 +571,11 @@
   <string name="RatingManager_later">ไว้คราวหน้า</string>
   <string name="RatingManager_whoops_the_play_store_app_does_not_appear_to_be_installed">โอ๊ะ ไม่พบว่าแอป Play Store ถูกติดตั้งบนอุปกรณ์ของคุณ</string>
   <!--ReactionsBottomSheetDialogFragment-->
+  <string name="ReactionsBottomSheetDialogFragment_all">%1$d ทั้งหมด</string>
   <!--ReactionsConversationView-->
+  <string name="ReactionsConversationView_plus">+%1$d</string>
+  <!--ReactionsRecipientAdapter-->
+  <string name="ReactionsRecipientAdapter_you">คุณ</string>
   <!--RecipientPreferencesActivity-->
   <string name="RecipientPreferenceActivity_block_this_contact_question">ปิดกั้นผู้ติดต่อนี้หรือไม่?</string>
   <string name="RecipientPreferenceActivity_you_will_no_longer_receive_messages_and_calls_from_this_contact">คุณจะไม่ได้รับข้อความและสายโทรเข้าจากผู้ติดต่อนี้อีกต่อไป</string>
@@ -672,6 +703,14 @@
   <string name="StickerPackPreviewActivity_remove">เอาออก</string>
   <string name="StickerPackPreviewActivity_stickers">สติกเกอร์</string>
   <string name="StickerPackPreviewActivity_failed_to_load_sticker_pack">การโหลดสติกเกอร์ล้มเหลว</string>
+  <!--SubmitDebugLogActivity-->
+  <string name="SubmitDebugLogActivity_edit">แก้ไข</string>
+  <string name="SubmitDebugLogActivity_done">เสร็จสิ้น</string>
+  <string name="SubmitDebugLogActivity_submit">ส่ง</string>
+  <string name="SubmitDebugLogActivity_success">สำเร็จ!</string>
+  <string name="SubmitDebugLogActivity_copied_to_clipboard">คัดลอกไปยังคลิปบอร์ด</string>
+  <string name="SubmitDebugLogActivity_ok">ตกลง</string>
+  <string name="SubmitDebugLogActivity_share">แบ่งปัน</string>
   <!--ThreadRecord-->
   <string name="ThreadRecord_group_updated">อัปเดตกลุ่มแล้ว</string>
   <string name="ThreadRecord_left_the_group">ออกจากกลุ่ม</string>
@@ -1001,10 +1040,6 @@
   <string name="log_submit_activity__this_log_will_be_posted_online">ล็อกนี้จะถูกโพสต์ออนไลน์อย่างเป็นสาธารณะเพื่อให้ผู้ร่วมพัฒนาโปรแกรมได้เห็น คุณอาจตรวจสอบและแก้ไขก่อนจะส่งล็อกนี้</string>
   <string name="log_submit_activity__loading_logs">กำลังโหลด log…</string>
   <string name="log_submit_activity__uploading_logs">กำลังอัปโหลด logs…</string>
-  <string name="log_submit_activity__success">สำเร็จ!</string>
-  <string name="log_submit_activity__copy_this_url_and_add_it_to_your_issue">คัดลอก URL นี้และใส่ลงในรายงานปัญหาของคุณหรืออีเมลฝ่ายบริการ:\n\n<b>%1$s</b>\n 
-</string>
-  <string name="log_submit_activity__copied_to_clipboard">คัดลอกไปยังคลิปบอร์ด</string>
   <string name="log_submit_activity__choose_email_app">เลือกแอปอีเมล</string>
   <string name="log_submit_activity__please_review_this_log_from_my_app">กรุณารีวิวล็อกนี้จากแอปของฉัน %1$s</string>
   <string name="log_submit_activity__network_failure">เครือข่ายล้มเหลว  โปรดลองอีกครั้ง</string>
@@ -1107,6 +1142,7 @@
   <string name="AndroidManifest__invite_friends">เชิญเพื่อน</string>
   <string name="AndroidManifest_archived_conversations">การสนทนาที่ถูกเก็บในที่เก็บถาวร</string>
   <string name="AndroidManifest_remove_photo">ลบรูป</string>
+  <!--Message Requests Megaphone-->
   <!--arrays.xml-->
   <string name="arrays__import_export">นำเข้า</string>
   <string name="arrays__use_default">ใช้ค่าเริ่มต้น</string>
@@ -1403,10 +1439,13 @@
   <string name="ConfirmKbsPinFragment__pin_creation_failed">การสร้างรหัส PIN ล้มเหลว</string>
   <string name="ConfirmKbsPinFragment__your_pin_was_not_saved">รหัส PIN ของคุณไม่ถูกบันทึก เราจะเตือนให้คุณสร้างรหัส PIN ทีหลัง</string>
   <string name="ConfirmKbsPinFragment__pin_created">สร้างรหัส PIN แล้ว</string>
+  <string name="ConfirmKbsPinFragment__re_enter_pin">ใส่รหัส PIN อีกครั้ง</string>
+  <string name="ConfirmKbsPinFragment__creating_pin">สร้างรหัส PIN…</string>
   <!--KbsSplashFragment-->
   <string name="KbsSplashFragment__introducing_pins">แนะนำรหัส PINs</string>
   <string name="KbsSplashFragment__learn_more">เรียนรู้เพิ่มเติม</string>
   <string name="KbsSplashFragment__registration_lock_equals_pin">ล็อกการลงทะเบียน = รหัส PIN</string>
+  <string name="KbsSplashFragment__your_registration_lock_is_now_called_a_pin">นับจากนี้กุญแจลงทะเบียนของคุณจะถูกเรียกว่ารหัส PIN และมันสามารถใช้ประโยชน์ได้มากขึ้น ปรับปรุงมันเดี๋ยวนี้</string>
   <string name="KbsSplashFragment__read_more_about_pins">อ่านเพิ่มเติมเกี่ยวกับรหัส PINs</string>
   <string name="KbsSplashFragment__update_pin">อัปเดตรหัส PIN</string>
   <string name="KbsSplashFragment__create_your_pin">สร้างรหัส PIN ของคุณ</string>
@@ -1426,15 +1465,18 @@
   <string name="RegistrationLockFragment__enter_the_pin_you_created">ใส่รหัส PIN ที่คุณสร้างขึ้นมาสำหรับบัญชีของคุณ รหัสนี้แตกต่างจากรหัสยืนยันทาง SMS</string>
   <string name="RegistrationLockFragment__enter_alphanumeric_pin">ใส่รหัส PIN ด้วยตัวอักษรและตัวเลข</string>
   <string name="RegistrationLockFragment__enter_numeric_pin">ใส่รหัส PIN ด้วยตัวเลข</string>
-  <string name="RegistrationLockFragment__next">ต่อไป</string>
+  <string name="RegistrationLockFragment__next">ถัดไป</string>
   <string name="RegistrationLockFragment__incorrect_pin_try_again">รหัส PIN ไม่ถูกต้อง ลองดูอีกครั้ง</string>
   <string name="RegistrationLockFragment__forgot_pin">ลืมรหัส PIN หรือ?</string>
   <string name="RegistrationLockFragment__incorrect_pin">รหัส PIN ไม่ถูกต้อง </string>
   <string name="RegistrationLockFragment__forgot_your_pin">ลืมรหัส PIN หรือ?</string>
   <!--KBS Megaphone-->
-  <string name="KbsMegaphone__introducing_pins">แนะนำรหัส PINs</string>
-  <string name="KbsMegaphone__update_pin">อัปเดตรหัส PIN</string>
+  <string name="KbsMegaphone__create_a_pin">สร้างรหัส PIN</string>
+  <string name="KbsMegaphone__create_pin">สร้างรหัส PIN</string>
+  <string name="KbsMegaphone__introducing_pins">แนะนำรหัส PIN</string>
+  <string name="KbsMegaphone__update_pin">ปรับปรุงรหัส PIN</string>
   <!--Profile Names Megaphone-->
+  <string name="ProfileNamesMegaphone__add_a_profile_name">เพิ่มชื่อโปรไฟล์</string>
   <!--transport_selection_list_item-->
   <string name="transport_selection_list_item__transport_icon">ไอคอนขนส่ง</string>
   <string name="ConversationListFragment_loading">กำลังโหลด…</string>
@@ -1536,16 +1578,5 @@
   <string name="RegistrationLockDialog_reminder">เตือนความจำ:</string>
   <string name="recipient_preferences__about">เกี่ยวกับ</string>
   <string name="Recipient_unknown">ไม่ทราบ</string>
-  <string name="MessageRequestBottomView_accept">ยอมรับ</string>
-  <string name="MessageRequestBottomView_delete">ลบ</string>
-  <string name="MessageRequestBottomView_block">บล็อก</string>
-  <string name="MessageRequestBottomView_do_you_want_to_let"> คุณต้องการรับข้อความจาก %1$s หรือไม่?</string>
-  <string name="MessageRequestProfileView_member_of_one_group">สมาชิกของ %1$s</string>
-  <string name="MessageRequestProfileView_member_of_two_groups">สมาชิกของ %1$s และ %2$s</string>
-  <string name="MessageRequestProfileView_member_of_many_groups">สมาชิกของ %1$s%2$s และ %3$s</string>
-  <string name="MessageRequestProfileView_members">%1$d สมาชิก</string>
-  <plurals name="MessageRequestProfileView_member_of_others">
-    <item quantity="other">%d อื่นๆ</item>
-  </plurals>
   <!--EOF-->
 </resources>
