--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -204,6 +204,9 @@
   <string name="ConversationActivity_no_results">Sonuç yok</string>
   <string name="ConversationActivity_sticker_pack_installed">Çıkartma paketi yüklendi</string>
   <string name="ConversationActivity_new_say_it_with_stickers">Yeni! Çıkartmalarınızı konuşturun</string>
+  <string name="ConversationActivity_block">Engelle</string>
+  <string name="ConversationActivity_cancel">İptal</string>
+  <string name="ConversationActivity_delete">Sil</string>
   <!--ConversationAdapter-->
   <plurals name="ConversationAdapter_n_unread_messages">
     <item quantity="one">%d okunmamış ileti</item>
@@ -249,6 +252,7 @@
   <string name="ConversationFragment_you_can_swipe_to_the_left_reply">Herhangi bir iletiyi hızlıca yanıtlamak için sola kaydırabilirsiniz</string>
   <string name="ConversationFragment_outgoing_view_once_media_files_are_automatically_removed">Gönderilen tek görümlük içerik dosyaları gönderim tamamlandıktan sonra kendiliğinden silinir</string>
   <string name="ConversationFragment_you_already_viewed_this_message">Bu iletiyi zaten görüntülediniz</string>
+  <string name="ConversationFragment__you_can_add_notes_for_yourself_in_this_conversation">Bu konuşmada kendinize notlar ekleyebilirsiniz. Eğer hesabınıza bağlı cihaz varsa, yeni notlar eşzamanlanacaktır.</string>
   <!--ConversationListActivity-->
   <string name="ConversationListActivity_there_is_no_browser_installed_on_your_device">Cihazınıza yüklü tarayıcı bulunmamaktadır.</string>
   <!--ConversationListFragment-->
@@ -272,6 +276,7 @@
     <item quantity="one">Sohbet gelen kutusuna taşındı</item>
     <item quantity="other">%d sohbet gelen kutusuna taşındı</item>
   </plurals>
+  <string name="ConversationListFragment__your_profile_name_has_been_saved">Profil adınız kaydedildi.</string>
   <!--ConversationListItem-->
   <string name="ConversationListItem_key_exchange_message">Anahtar takas iletisi</string>
   <!--ConversationListItemAction-->
@@ -320,6 +325,7 @@
   <string name="DozeReminder_this_device_does_not_support_play_services_tap_to_disable_system_battery">Bu cihaz Play Hizmetlerini desteklemiyor. Signal etkin değilken ileti almasını engelleyebilecek pil iyileştirmelerini devre dışı bırakmak için dokunun.</string>
   <!--ShareActivity-->
   <string name="ShareActivity_share_with">Paylaşılacak kişi</string>
+  <string name="ShareActivity_multiple_attachments_are_only_supported">Çoklu ekler sadece resim ve dosyalarda destekleniyor</string>
   <!--ExperienceUpgradeActivity-->
   <string name="ExperienceUpgradeActivity_welcome_to_signal_dgaf">Signal\'e hoşgeldiniz.</string>
   <string name="ExperienceUpgradeActivity_textsecure_is_now_called_signal">TextSecure ve RedPhone artık tek bir özel haberleşme uygulaması: Signal.</string>
@@ -379,7 +385,7 @@
   <string name="GroupShareProfileView_do_you_want_to_make_your_profile_name_and_photo_visible_to_all_current_and_future_members_of_this_group">Profil adınızı ve fotoğrafınızı bu grupta bulunan ve sonradan eklenecek üyelere görünür yapmak istiyor musunuz?</string>
   <string name="GroupShareProfileView_make_visible">Görünür yap</string>
   <!--GroupMembersDialog-->
-  <string name="GroupMembersDialog_me">Ben</string>
+  <string name="GroupMembersDialog_you">Siz</string>
   <!--CropImageActivity-->
   <string name="CropImageActivity_group_avatar">Grup resmi</string>
   <string name="CropImageActivity_profile_avatar">Resim</string>
@@ -523,6 +529,18 @@
   <string name="MessageRecord_you_marked_your_safety_number_with_s_verified_from_another_device">%s ile olan güvenlik numaranızı başka bir cihazdan doğrulanmış olarak işaretlediniz.</string>
   <string name="MessageRecord_you_marked_your_safety_number_with_s_unverified">%s ile olan güvenlik numaranızı doğrulanmamış olarak işaretlediniz.</string>
   <string name="MessageRecord_you_marked_your_safety_number_with_s_unverified_from_another_device">%s ile olan güvenlik numaranızı başka bir cihazdan doğrulanmamış olarak işaretlediniz. </string>
+  <!--MessageRequestBottomView-->
+  <string name="MessageRequestBottomView_accept">Kabul et</string>
+  <string name="MessageRequestBottomView_delete">Sil</string>
+  <string name="MessageRequestBottomView_block">Engelle</string>
+  <string name="MessageRequestBottomView_unblock">Engeli kaldır</string>
+  <string name="MessageRequestProfileView_member_of_one_group">%1$s grubuna üye</string>
+  <string name="MessageRequestProfileView_member_of_two_groups">%1$s ve %2$s gruplarına üye</string>
+  <string name="MessageRequestProfileView_member_of_many_groups">%1$s, %2$s ve %3$s gruplarına üye</string>
+  <plurals name="MessageRequestProfileView_member_of_others">
+    <item quantity="one">%d diğer</item>
+    <item quantity="other">%d diğer</item>
+  </plurals>
   <!--PassphraseChangeActivity-->
   <string name="PassphraseChangeActivity_passphrases_dont_match_exclamation">Parolalar uyuşmuyor!</string>
   <string name="PassphraseChangeActivity_incorrect_old_passphrase_exclamation">Yanlış eski parola!</string>
@@ -576,6 +594,8 @@
   <string name="ReactionsBottomSheetDialogFragment_all">Tümü %1$d</string>
   <!--ReactionsConversationView-->
   <string name="ReactionsConversationView_plus">+%1$d</string>
+  <!--ReactionsRecipientAdapter-->
+  <string name="ReactionsRecipientAdapter_you">Siz</string>
   <!--RecipientPreferencesActivity-->
   <string name="RecipientPreferenceActivity_block_this_contact_question">Bu kişiyi engelle?</string>
   <string name="RecipientPreferenceActivity_you_will_no_longer_receive_messages_and_calls_from_this_contact">Artık bu kişiden gelen iletileri ve aramaları almayacaksınız.</string>
@@ -708,6 +728,13 @@ Geçersiz protokol sürümünde anahtar değişim iletisi alındı.</string>
   <string name="StickerPackPreviewActivity_remove">Kaldır</string>
   <string name="StickerPackPreviewActivity_stickers">Çıkartmalar</string>
   <string name="StickerPackPreviewActivity_failed_to_load_sticker_pack">Çıkartma paketi yüklenemedi</string>
+  <!--SubmitDebugLogActivity-->
+  <string name="SubmitDebugLogActivity_edit">Düzenle</string>
+  <string name="SubmitDebugLogActivity_done">Tamam</string>
+  <string name="SubmitDebugLogActivity_submit">Gönder</string>
+  <string name="SubmitDebugLogActivity_success">Başarılı!</string>
+  <string name="SubmitDebugLogActivity_copied_to_clipboard">Panoya kopyalandı</string>
+  <string name="SubmitDebugLogActivity_share">Paylaş</string>
   <!--ThreadRecord-->
   <string name="ThreadRecord_group_updated">Grup güncellendi</string>
   <string name="ThreadRecord_left_the_group">Gruptan ayrıldı</string>
@@ -729,6 +756,7 @@ Geçersiz protokol sürümünde anahtar değişim iletisi alındı.</string>
   <string name="ThreadRecord_you_marked_verified">Doğrulanmış olarak işaretlediniz.</string>
   <string name="ThreadRecord_you_marked_unverified">Doğrulanmamış olarak işaretlediniz.</string>
   <string name="ThreadRecord_message_could_not_be_processed">İleti işlenemedi</string>
+  <string name="ThreadRecord_message_request">İleti İsteği</string>
   <!--UpdateApkReadyListener-->
   <string name="UpdateApkReadyListener_Signal_update">Signal güncellemesi</string>
   <string name="UpdateApkReadyListener_a_new_version_of_signal_is_available_tap_to_update">Signal\'in yeni sürümü mevcut, güncellemek için dokunun</string>
@@ -1044,9 +1072,6 @@ Geçersiz protokol sürümünde anahtar değişim iletisi alındı.</string>
   <string name="log_submit_activity__this_log_will_be_posted_online">Bu günlük katkıda bulunanların görebilmeleri için herkese açık bir şekilde gönderilecektir. Göndermeden önce inceleyip düzenleyebilirsiniz.</string>
   <string name="log_submit_activity__loading_logs">Günlükler yükleniyor…</string>
   <string name="log_submit_activity__uploading_logs">Günlükler gönderiliyor…</string>
-  <string name="log_submit_activity__success">Başarılı!</string>
-  <string name="log_submit_activity__copy_this_url_and_add_it_to_your_issue">Bu URL\'yi kopyalayın ve sorun bildirinize veya destek epostasına ekleyin:\n\n<b>%1$s</b>\n</string>
-  <string name="log_submit_activity__copied_to_clipboard">Panoya kopyalandı</string>
   <string name="log_submit_activity__choose_email_app">Eposta uygulaması seçin</string>
   <string name="log_submit_activity__please_review_this_log_from_my_app">Lütfen uygulamamdan çıkan bu günlüğü inceleyin: %1$s</string>
   <string name="log_submit_activity__network_failure">Ağ hatası. Lütfen tekrar deneyin.</string>
@@ -1150,6 +1175,7 @@ Geçersiz protokol sürümünde anahtar değişim iletisi alındı.</string>
   <string name="AndroidManifest__invite_friends">Arkadaşlarını davet et</string>
   <string name="AndroidManifest_archived_conversations">Arşivlenmiş sohbetler</string>
   <string name="AndroidManifest_remove_photo">Fotoğrafı kaldır</string>
+  <!--Message Requests Megaphone-->
   <!--arrays.xml-->
   <string name="arrays__import_export">İçe Aktar</string>
   <string name="arrays__use_default">Varsayılanı kullan</string>
@@ -1251,6 +1277,7 @@ Geçersiz protokol sürümünde anahtar değişim iletisi alındı.</string>
   <string name="preferences__dark_theme">Karanlık</string>
   <string name="preferences__appearance">Görünüm</string>
   <string name="preferences__theme">Tema</string>
+  <string name="preferences__system_default">System varsayılanı</string>
   <string name="preferences__default">Varsayılan</string>
   <string name="preferences__language">Dil</string>
   <string name="preferences__signal_messages_and_calls">Signal iletileri ve aramaları</string>
@@ -1527,8 +1554,12 @@ Geçersiz protokol sürümünde anahtar değişim iletisi alındı.</string>
   <string name="KbsMegaphone__well_remind_you_later_creating_a_pin">Size daha sonra hatırlatacağız. %1$d gün sonra PIN oluşturmanız zorunlu olacaktır.</string>
   <string name="KbsMegaphone__well_remind_you_later_confirming_your_pin">Size daha sonra hatırlatacağız. %1$d gün sonra PIN\'inizi onaylamanız zorunlu olacaktır.</string>
   <!--Profile Names Megaphone-->
+  <string name="ProfileNamesMegaphone__add_a_profile_name">Bir profil adı ekle</string>
   <string name="ProfileNamesMegaphone__this_will_be_displayed_when_you_start">Yeni bir konuşma başlattığınızda veya paylaştığınızda gözükecektir.</string>
+  <string name="ProfileNamesMegaphone__add_profile_name">Profil Adı Ekle</string>
+  <string name="ProfileNamesMegaphone__confirm_your_profile_name">Profil Adınızı Onaylayın</string>
   <string name="ProfileNamesMegaphone__your_profile_can_now_include">Profiliniz artık isteğe bağlı soy ad içerebilir.</string>
+  <string name="ProfileNamesMegaphone__confirm_name">Adı Onaylayın</string>
   <!--transport_selection_list_item-->
   <string name="transport_selection_list_item__transport_icon">Ulaştırma simgesi</string>
   <string name="ConversationListFragment_loading">Yükleniyor…</string>
@@ -1596,6 +1627,7 @@ Geçersiz protokol sürümünde anahtar değişim iletisi alındı.</string>
   <string name="preferences_app_protection__pin">PIN</string>
   <string name="preferences_app_protection__change">Değiştir</string>
   <string name="preferences_app_protection__create">Oluştur</string>
+  <string name="preferences_app_protection__your_pin_adds_an_extra_layer_of_security_to_your_account">PIN\'iniz, hesabınıza ek bir katmak güvenlik ekler. Signal ile telefonunuzu kaydettiğinizde bu size sorulacak. PIN\'i unutursanız, hesabınıza 7 gün erişemeyeceksiniz.</string>
   <string name="AppProtectionPreferenceFragment_none">Hiçbiri</string>
   <string name="registration_activity__the_registration_lock_pin_is_not_the_same_as_the_sms_verification_code_you_just_received_please_enter_the_pin_you_previously_configured_in_the_application">Kaydolma Kilidi PIN\'iniz size gönderilen doğrulama koduyla aynı değildir. Lütfen önceden ayarlamış olduğunuz PIN\'inizi giriniz.  </string>
   <string name="registration_activity__registration_lock_pin">Kaydolma Kilidi PIN\'i</string>
@@ -1637,17 +1669,5 @@ Geçersiz protokol sürümünde anahtar değişim iletisi alındı.</string>
   <string name="RegistrationLockDialog_reminder">Hatırlatma:</string>
   <string name="recipient_preferences__about">Hakkında</string>
   <string name="Recipient_unknown">Bilinmeyen</string>
-  <string name="MessageRequestBottomView_accept">Kabul et</string>
-  <string name="MessageRequestBottomView_delete">Sil</string>
-  <string name="MessageRequestBottomView_block">Engelle</string>
-  <string name="MessageRequestBottomView_do_you_want_to_let">%1$s tarafından iletiler almak istiyor musunuz?</string>
-  <string name="MessageRequestProfileView_member_of_one_group">%1$s grubuna üye</string>
-  <string name="MessageRequestProfileView_member_of_two_groups">%1$s ve %2$s gruplarına üye</string>
-  <string name="MessageRequestProfileView_member_of_many_groups">%1$s, %2$s ve %3$s gruplarına üye</string>
-  <string name="MessageRequestProfileView_members">%1$d üye</string>
-  <plurals name="MessageRequestProfileView_member_of_others">
-    <item quantity="one">%d diğer</item>
-    <item quantity="other">%d diğer</item>
-  </plurals>
   <!--EOF-->
 </resources>
