--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -201,6 +201,16 @@
   <string name="ConversationActivity_no_results">沒有結果</string>
   <string name="ConversationActivity_sticker_pack_installed">貼圖包已安裝</string>
   <string name="ConversationActivity_new_say_it_with_stickers">新！ 用貼圖說出來</string>
+  <string name="ConversationActivity_you_will_be_able_to_message_and_call_each_other">你將能夠發訊息並互相打電話。</string>
+  <string name="ConversationActivity_group_members_will_be_able_to_add_you_to_this_group_again">群組組員將能夠再次將你新增到該群組。</string>
+  <string name="ConversationActivity_you_will_leave_this_group_and_no_longer_receive_messages_or_updates">你將離開此群組及無法再接收訊息或升級。</string>
+  <string name="ConversationActivity_block">封鎖</string>
+  <string name="ConversationActivity_cancel">取消</string>
+  <string name="ConversationActivity_delete_conversation">刪除對話？</string>
+  <string name="ConversationActivity_delete_and_leave_group">刪除及離開群組？</string>
+  <string name="ConversationActivity_this_conversation_will_be_deleted_from_all_of_your_devices">此對話將從你所有的裝置上被刪除。</string>
+  <string name="ConversationActivity_you_will_leave_this_group_and_it_will_be_deleted_from_all_of_your_devices">你將離開此群組，及它將從你所有的裝置上被刪除。</string>
+  <string name="ConversationActivity_delete">刪除</string>
   <!--ConversationAdapter-->
   <plurals name="ConversationAdapter_n_unread_messages">
     <item quantity="other">%d 則未讀訊息</item>
@@ -239,6 +249,7 @@
   <string name="ConversationFragment_you_can_swipe_to_the_left_reply">你可以在任何訊息上向左滑動以快速回覆</string>
   <string name="ConversationFragment_outgoing_view_once_media_files_are_automatically_removed">傳送出去的一次性多媒體檔案被傳送出去之後會自動消除</string>
   <string name="ConversationFragment_you_already_viewed_this_message">你已經看過這個訊息</string>
+  <string name="ConversationFragment__you_can_add_notes_for_yourself_in_this_conversation">你可以在此對話中為自己增加筆記。 如果你的帳號有任何連結的裝置，則新的筆記將被同步。</string>
   <!--ConversationListActivity-->
   <string name="ConversationListActivity_there_is_no_browser_installed_on_your_device">您的裝置上未安裝瀏覽器。</string>
   <!--ConversationListFragment-->
@@ -258,6 +269,7 @@
   <plurals name="ConversationListFragment_moved_conversations_to_inbox">
     <item quantity="other">已經移動 %d 個對話到收件箱</item>
   </plurals>
+  <string name="ConversationListFragment__your_profile_name_has_been_saved">你的個人資料名稱已被儲存。</string>
   <!--ConversationListItem-->
   <string name="ConversationListItem_key_exchange_message">金鑰交換訊息</string>
   <!--ConversationListItemAction-->
@@ -366,7 +378,7 @@
   <string name="GroupShareProfileView_do_you_want_to_make_your_profile_name_and_photo_visible_to_all_current_and_future_members_of_this_group">你想讓這個群組中，目前及未來的成員，都能夠看見你個人資訊中的名字及頭像照片？</string>
   <string name="GroupShareProfileView_make_visible">可看見的</string>
   <!--GroupMembersDialog-->
-  <string name="GroupMembersDialog_me">我</string>
+  <string name="GroupMembersDialog_you">您</string>
   <!--CropImageActivity-->
   <string name="CropImageActivity_group_avatar">群組的大頭照</string>
   <string name="CropImageActivity_profile_avatar">頭像</string>
@@ -503,6 +515,17 @@
   <string name="MessageRecord_you_marked_your_safety_number_with_s_verified_from_another_device">你從另一個裝置標記與 %s 的安全碼為已驗證</string>
   <string name="MessageRecord_you_marked_your_safety_number_with_s_unverified">你已標記與 %s 的安全碼為未驗證</string>
   <string name="MessageRecord_you_marked_your_safety_number_with_s_unverified_from_another_device">你已從另一個裝置標記與 %s 的安全碼為未驗證</string>
+  <!--MessageRequestBottomView-->
+  <string name="MessageRequestBottomView_accept">接受</string>
+  <string name="MessageRequestBottomView_delete">刪除</string>
+  <string name="MessageRequestBottomView_block">封鎖</string>
+  <string name="MessageRequestBottomView_unblock">解除封鎖</string>
+  <string name="MessageRequestProfileView_member_of_one_group">%1$s的成員</string>
+  <string name="MessageRequestProfileView_member_of_two_groups">%1$s及%2$s的成員</string>
+  <string name="MessageRequestProfileView_member_of_many_groups">%1$s、%2$s、及%3$s的成員</string>
+  <plurals name="MessageRequestProfileView_member_of_others">
+    <item quantity="other">%d其他</item>
+  </plurals>
   <!--PassphraseChangeActivity-->
   <string name="PassphraseChangeActivity_passphrases_dont_match_exclamation">輸入的自訂密碼不相符！</string>
   <string name="PassphraseChangeActivity_incorrect_old_passphrase_exclamation">輸入的是舊的自訂密碼！</string>
@@ -555,6 +578,8 @@
   <string name="ReactionsBottomSheetDialogFragment_all">所有%1$d</string>
   <!--ReactionsConversationView-->
   <string name="ReactionsConversationView_plus">+%1$d</string>
+  <!--ReactionsRecipientAdapter-->
+  <string name="ReactionsRecipientAdapter_you">您</string>
   <!--RecipientPreferencesActivity-->
   <string name="RecipientPreferenceActivity_block_this_contact_question">封鎖此聯絡人？</string>
   <string name="RecipientPreferenceActivity_you_will_no_longer_receive_messages_and_calls_from_this_contact">您將不會再次收到來自此聯絡人的訊息與通話。</string>
@@ -684,6 +709,13 @@
   <string name="StickerPackPreviewActivity_remove">移除</string>
   <string name="StickerPackPreviewActivity_stickers">貼圖</string>
   <string name="StickerPackPreviewActivity_failed_to_load_sticker_pack">讀取貼圖包失敗</string>
+  <!--SubmitDebugLogActivity-->
+  <string name="SubmitDebugLogActivity_edit">編輯</string>
+  <string name="SubmitDebugLogActivity_done">完成</string>
+  <string name="SubmitDebugLogActivity_submit">上傳</string>
+  <string name="SubmitDebugLogActivity_success">成功！</string>
+  <string name="SubmitDebugLogActivity_copied_to_clipboard">已複製到剪貼簿</string>
+  <string name="SubmitDebugLogActivity_share">分享</string>
   <!--ThreadRecord-->
   <string name="ThreadRecord_group_updated">群組已更新</string>
   <string name="ThreadRecord_left_the_group">已離開群組</string>
@@ -705,6 +737,7 @@
   <string name="ThreadRecord_you_marked_verified">您標記為已驗證</string>
   <string name="ThreadRecord_you_marked_unverified">您標記為未驗證</string>
   <string name="ThreadRecord_message_could_not_be_processed">訊息無法被處理</string>
+  <string name="ThreadRecord_message_request">訊息要求</string>
   <!--UpdateApkReadyListener-->
   <string name="UpdateApkReadyListener_Signal_update">Signal 更新</string>
   <string name="UpdateApkReadyListener_a_new_version_of_signal_is_available_tap_to_update">有新版本的 Signal，輕觸更新</string>
@@ -1014,9 +1047,6 @@
   <string name="log_submit_activity__this_log_will_be_posted_online">本日誌檔將會在網路上公開以供他人檢視，你可以在提交前檢視及編輯。</string>
   <string name="log_submit_activity__loading_logs">讀取日誌檔…</string>
   <string name="log_submit_activity__uploading_logs">上傳日誌檔…</string>
-  <string name="log_submit_activity__success">成功！</string>
-  <string name="log_submit_activity__copy_this_url_and_add_it_to_your_issue">複製此連結及加入你的錯誤報告或技術支援電子郵件:\n\n<b>%1$s</b>\n</string>
-  <string name="log_submit_activity__copied_to_clipboard">已複製到剪貼簿</string>
   <string name="log_submit_activity__choose_email_app">選擇電子郵件程式</string>
   <string name="log_submit_activity__please_review_this_log_from_my_app">請從我的應用程式檢視這個日誌檔：%1$s</string>
   <string name="log_submit_activity__network_failure">網路連結錯誤。請再嘗試一次。</string>
@@ -1119,6 +1149,7 @@
   <string name="AndroidManifest__invite_friends">邀請好友</string>
   <string name="AndroidManifest_archived_conversations">存檔對話</string>
   <string name="AndroidManifest_remove_photo">移除頭像照片</string>
+  <!--Message Requests Megaphone-->
   <!--arrays.xml-->
   <string name="arrays__import_export">匯入</string>
   <string name="arrays__use_default">使用預設</string>
@@ -1217,9 +1248,9 @@
   <string name="preferences__linked_devices">已連結裝置</string>
   <string name="preferences__light_theme">明亮</string>
   <string name="preferences__dark_theme">深色</string>
-  <string name="preferences__system_theme">系統預設</string>
   <string name="preferences__appearance">介面設定</string>
   <string name="preferences__theme">主題</string>
+  <string name="preferences__system_default">系統預設</string>
   <string name="preferences__default">預設</string>
   <string name="preferences__language">語言選項</string>
   <string name="preferences__signal_messages_and_calls">Signal 訊息與通話</string>
@@ -1602,16 +1633,5 @@
   <string name="RegistrationLockDialog_reminder">提醒：</string>
   <string name="recipient_preferences__about">關於</string>
   <string name="Recipient_unknown">未知</string>
-  <string name="MessageRequestBottomView_accept">接受</string>
-  <string name="MessageRequestBottomView_delete">刪除</string>
-  <string name="MessageRequestBottomView_block">封鎖</string>
-  <string name="MessageRequestBottomView_do_you_want_to_let">你要接收從%1$s傳來的訊息嗎？</string>
-  <string name="MessageRequestProfileView_member_of_one_group">%1$s的成員</string>
-  <string name="MessageRequestProfileView_member_of_two_groups">%1$s及%2$s的成員</string>
-  <string name="MessageRequestProfileView_member_of_many_groups">%1$s、%2$s、及%3$s的成員</string>
-  <string name="MessageRequestProfileView_members">%1$d成員</string>
-  <plurals name="MessageRequestProfileView_member_of_others">
-    <item quantity="other">%d其他</item>
-  </plurals>
   <!--EOF-->
 </resources>
